#9 Updated NSContact and NSConsent + capitalization

--- a/docs/api-reference/CRMScript.Global.Vector.yml
+++ b/docs/api-reference/CRMScript.Global.Vector.yml
@@ -191,7 +191,7 @@ items:
   fullName: CRMScript.Global.Vector.buildString(String)
   type: Method
   summary: "\nReturns a string of all the elements in the vector, separated by the specified delimiter.\n"
-  remarks: "This method will not escape any characters which might be equal to the delimiter."
+  remarks: "not escape any characters which might be equal to the delimiter."
   syntax:
     content: String buildString(String delimiter)
     parameters:
