--- a/docs/api-reference/CRMScript.Global.Void.yml
+++ b/docs/api-reference/CRMScript.Global.Void.yml
@@ -424,7 +424,7 @@ It will throw an AssertException if &quot;condition&quot; is false. The exceptio
   nameWithType: Void.copyCRMDocumentToAttachment(Integer)
   fullName: CRMScript.Global.Void.copyCRMDocumentToAttachment(Integer)
   type: Method
-  summary: "\nInteger copyCRMDocumentToAttachment(Integer crmDocId)This method will copy the content of a CRM Document, given the ID, to a new Service Attachment. There is no sync between these two, so only a copy at the point of time is made.\n"
+  summary: "\nInteger copyCRMDocumentToAttachment(Integer crmDocId)copy the content of a CRM Document, given the ID, to a new Service Attachment. There is no sync between these two, so only a copy at the point of time is made.\n"
   remarks: 
   syntax: 
     content: Integer copyCRMDocumentToAttachment(Integer crmDocId)
@@ -785,7 +785,7 @@ It will throw an AssertException if &quot;condition&quot; is false. The exceptio
   nameWithType: Void.faqSearch(Integer,Integer,String,Integer)
   fullName: CRMScript.Global.Void.faqSearch(Integer,Integer,String,Integer)
   type: Method
-  summary: "\nParser faqSearch(Integer root, Integer access, String message, Parser p, Integer max)This method will do a faq search, using the same search engine as the customer pages do. It will fill the parser with the result. The following parser variables are available (sorted, where the top most is the best hit):\n"
+  summary: "\nParser faqSearch(Integer root, Integer access, String message, Parser p, Integer max)do a faq search, using the same search engine as the customer pages do. It will fill the parser with the result. The following parser variables are available (sorted, where the top most is the best hit):\n"
   remarks: 
   syntax: 
     content: Parser faqSearch(Integer root, Integer access, String message, Parser p, Integer max)
@@ -935,7 +935,7 @@ It will throw an AssertException if &quot;condition&quot; is false. The exceptio
   nameWithType: Void.getAttachmentsSize(Integer[])
   fullName: CRMScript.Global.Void.getAttachmentsSize(Integer[])
   type: Method
-  summary: "\nInteger getAttachmentsSize(Integer[] attachmentIds)This method will get the total byte size of the specified attachments.\n"
+  summary: "\nInteger getAttachmentsSize(Integer[] attachmentIds)Gets the total byte size of the specified attachments.\n"
   remarks: 
   syntax: 
     content: Integer getAttachmentsSize(Integer[] attachmentIds)
@@ -1171,7 +1171,7 @@ It will throw an AssertException if &quot;condition&quot; is false. The exceptio
   nameWithType: Void.getCustomerMainEmail(Integer)
   fullName: CRMScript.Global.Void.getCustomerMainEmail(Integer)
   type: Method
-  summary: "\nString getCustomerMainEmail(Integer custId)This method will return the main email of the specified customer. An empty string is returned if the customer does not have an email address or the customer does not exist.\n"
+  summary: "\nString getCustomerMainEmail(Integer custId)return the main email of the specified customer. An empty string is returned if the customer does not have an email address or the customer does not exist.\n"
   remarks: 
   syntax: 
     content: String getCustomerMainEmail(Integer custId)
@@ -1672,7 +1672,7 @@ It will throw an AssertException if &quot;condition&quot; is false. The exceptio
   nameWithType: Void.getHtmlElementIndex(String)
   fullName: CRMScript.Global.Void.getHtmlElementIndex(String)
   type: Method
-  summary: "\nInteger getHtmlElementIndex(String p_name)This function can only be called from a screen definition, it will fail if called from a regular script.<p></p>\nThis method will get the index of the specified HTML element. This is useful if you want to insert elements after a particular HTML element, and you do not know the index of it.\n"
+  summary: "\nInteger getHtmlElementIndex(String p_name)This function can only be called from a screen definition, it will fail if called from a regular script.<p></p>\nGets the index of the specified HTML element. This is useful if you want to insert elements after a particular HTML element, and you do not know the index of it.\n"
   remarks: 
   syntax: 
     content: Integer getHtmlElementIndex(String p_name)
@@ -3366,7 +3366,7 @@ as long as a session lives. That is until a user logs out.\n"
   nameWithType: Void.setPageRefresh(Integer)
   fullName: CRMScript.Global.Void.setPageRefresh(Integer)
   type: Method
-  summary: "\nVoid setPageRefresh(Integer p_seconds)This method will set the page meta refresh to the specified seconds, thus making the screen refresh. If this method is used in a script that is not connected to a screen, nothing will happen.\n"
+  summary: "\nVoid setPageRefresh(Integer p_seconds)Sets the page meta refresh to the specified seconds, thus making the screen refresh. If this method is used in a script that is not connected to a screen, nothing will happen.\n"
   remarks: 
   syntax: 
     content: setPageRefresh(Integer p_seconds)
