--- a/docs/api-reference/CRMScript.Native.InvoiceEntry.yml
+++ b/docs/api-reference/CRMScript.Native.InvoiceEntry.yml
@@ -70,7 +70,7 @@ items:
   nameWithType: InvoiceEntry.getDiscountMoney()
   fullName: CRMScript.Native.InvoiceEntry.getDiscountMoney()
   type: Method
-  summary: "\nThis method will get the discount of the current InvoiceEntry object in money.\n"
+  summary: "\nGets the discount of the current InvoiceEntry object in money.\n"
   remarks: "\nThe save-function calculates the discount in percent and money. So if the discount is set in percent (setDiscount()), you have to save the entry before getting the corresponding value in money with this function.\n"
   syntax: 
     content: String getDiscountMoney()
