--- a/docs/api-reference/CRMScript.Native.Priority.yml
+++ b/docs/api-reference/CRMScript.Native.Priority.yml
@@ -39,7 +39,7 @@ items:
   nameWithType: Priority.checkEscalating(Integer,Integer)
   fullName: CRMScript.Native.Priority.checkEscalating(Integer,Integer)
   type: Method
-  summary: "\nThis method will check if the ticket should change its alert level based on the priority and action. If it is to change, the alert level and alert timeout for the ticket will be updated.\n"
+  summary: "\ncheck if the ticket should change its alert level based on the priority and action. If it is to change, the alert level and alert timeout for the ticket will be updated.\n"
   remarks: "\nUseful if you want to change the state of a ticket that is monitored by the its priority. It will take care of all the escalation routines so you do not have to do this manually.<p></p>\nPossible action values: Ticket changed owner = 0 Ticket change owner = 1 Ticket received new information = 2 Ticket closed = 3 Ticket changed priority = 4 New ticket = 5\n"
   syntax: 
     content: Void checkEscalating(Integer ticketId, Integer action)
