--- a/docs/api-reference/CRMScript.Native.SearchEngine.yml
+++ b/docs/api-reference/CRMScript.Native.SearchEngine.yml
@@ -783,7 +783,7 @@ items:
   fullName: CRMScript.Native.SearchEngine.executeTextTable()
   type: Method
   summary: "\nExecutes the query and return the result as a text formatted table (similar to MySQL).\n"
-  remarks: "\nThis method will have some overhead for large result sets.\n"
+  remarks: "\nhave some overhead for large result sets.\n"
   syntax: 
     content: String executeTextTable()
     parameters: []
@@ -983,14 +983,14 @@ items:
   nameWithType: SearchEngine.insert()
   fullName: CRMScript.Native.SearchEngine.insert()
   type: Method
-  summary: "\nAfter adding the values of the fields, call this function to actually do the insert in the database. Returns the resulting id of the insert.<p></p>\n<ul><li><strong>Returns:</strong>The id of the newly added item</li></ul>\n"
+  summary: "\nAfter adding the values of the fields, call this function to actually do the insert in the database. Returns the resulting id of the insert.<p></p>\n<ul><li><strong>Returns:</strong>The ID of the newly added item</li></ul>\n"
   remarks: 
   syntax: 
     content: Integer insert()
     parameters: []
     return:
       type: CRMScript.Global.Integer
-      description: The id of the newly added item
+      description: The ID of the newly added item
   example: 
 - uid: CRMScript.Native.SearchEngine.next()
   commentId: M:CRMScript.Native.SearchEngine.next()
