--- a/docs/api-reference/CRMScript.Native.Ticket.yml
+++ b/docs/api-reference/CRMScript.Native.Ticket.yml
@@ -147,7 +147,7 @@ items:
     parameters:
     - id: notUser
       type: CRMScript.Global.Integer
-      description: The id of a user you do not want to delegate to
+      description: The ID of a user you do not want to delegate to
     return:
       type: CRMScript.Global.Void
   example: 
@@ -335,7 +335,7 @@ items:
     parameters:
     - id: replyTemplateId
       type: CRMScript.Global.Integer
-      description: The id of the replyTemplate you want to send.
+      description: The ID of the replyTemplate you want to send.
     return:
       type: CRMScript.Global.Bool
   example: 
@@ -356,7 +356,7 @@ items:
     parameters:
     return:
       type: CRMScript.Global.Integer
-      description: the Id of the saved ticket
+      description: the ID of the saved ticket
   example: 
 - uid: CRMScript.Native.Ticket.save(String)
   commentId: M:CRMScript.Native.Ticket.save(String)
@@ -378,7 +378,7 @@ items:
       description: A String that will be saved in the log of the ticket
     return:
       type: CRMScript.Global.Integer
-      description: the Id of the saved ticket
+      description: the ID of the saved ticket
   example:
 - uid: CRMScript.Native.Ticket.save(Bool,Bool)
   commentId: M:CRMScript.Native.Ticket.save(Bool,Bool)
@@ -403,7 +403,7 @@ items:
       description: True if you do NOT want the changes done on the ticket to result in a possible escalation, otherwise false
     return:
       type: CRMScript.Global.Integer
-      description: the Id of the saved ticket
+      description: the ID of the saved ticket
   example:
 - uid: CRMScript.Native.Ticket.save(String,Bool,Bool)
   commentId: M:CRMScript.Native.Ticket.save(String,Bool,Bool)
@@ -431,7 +431,7 @@ items:
       description: True if you do NOT want the changes done on the ticket to result in a possible escalation, otherwise false
     return:
       type: CRMScript.Global.Integer
-      description: the Id of the saved ticket
+      description: the ID of the saved ticket
   example: 
 - uid: CRMScript.Native.Ticket.sendMessages(String,StringMatrix,Bool,String,Integer,String)
   commentId: M:CRMScript.Native.Ticket.sendMessages(String,StringMatrix,Bool,String,Integer,String)
@@ -462,7 +462,7 @@ items:
       description: Comma separated list of message id's to forward
     - id: msgId
       type: CRMScript.Global.Integer
-      description: Id of added "forward" message or "-1"
+      description: ID of added "forward" message or "-1"
     - id: comment
       type: CRMScript.Global.String
       description: A comment that will be above the forwarded messages.
