--- a/docs/api-reference/CRMScript.Native.WeekSchedule.yml
+++ b/docs/api-reference/CRMScript.Native.WeekSchedule.yml
@@ -407,7 +407,7 @@ items:
   nameWithType: WeekSchedule.loadFromPriority(Integer)
   fullName: CRMScript.Native.WeekSchedule.loadFromPriority(Integer)
   type: Method
-  summary: "\nThis method will load a WeekSchedule object using the given priority's week schedule. Be aware that this method will clear all settings you may have on the WeekSchedule object.\n"
+  summary: "\nload a WeekSchedule object using the given priority's week schedule. Be aware that this method will clear all settings you may have on the WeekSchedule object.\n"
   remarks: 
   syntax: 
     content: Void loadFromPriority(Integer p_id)
