--- a/docs/api-reference/CRMScript.NetServer.NSAppointmentAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAppointmentAgent.yml
@@ -433,7 +433,7 @@ items:
   fullName: CRMScript.NetServer.NSAppointmentAgent.CreateDefaultAppointmentEntity()
   type: Method
   summary: "\nSets default values into a new NSAppointmentEntity.\n"
-  remarks: "NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance."
+  remarks: "NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance."
   syntax: 
     content: NSAppointmentEntity CreateDefaultAppointmentEntity()
     parameters: []
@@ -731,7 +731,7 @@ items:
   syntax: 
     content: Void DeleteAppointmentEntity(Integer appointmentEntity)
     parameters:
-    - id: appointmentEntity;
+    - id: appointmentEntity
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -865,7 +865,7 @@ items:
   syntax: 
     content: NSAppointment GetAppointment(Integer appointmentId)
     parameters:
-    - id: appointmentId;
+    - id: appointmentId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -888,7 +888,7 @@ items:
   syntax: 
     content: NSAppointmentEntity GetAppointmentEntity(Integer appointmentEntityId)
     parameters:
-    - id: appointmentEntityId;
+    - id: appointmentEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -2198,7 +2198,7 @@ items:
   syntax: 
     content: NSSuggestedAppointment GetSuggestedAppointment(Integer suggestedAppointmentId)
     parameters:
-    - id: suggestedAppointmentId;
+    - id: suggestedAppointmentId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -2221,7 +2221,7 @@ items:
   syntax: 
     content: NSSuggestedAppointmentEntity GetSuggestedAppointmentEntity(Integer suggestedAppointmentEntityId)
     parameters:
-    - id: suggestedAppointmentEntityId;
+    - id: suggestedAppointmentEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -2244,7 +2244,7 @@ items:
   syntax: 
     content: NSTaskListItem GetTaskListItem(Integer taskListItemId)
     parameters:
-    - id: taskListItemId;
+    - id: taskListItemId
       type: CRMScript.Global.Integer
       description: 
     return:
