--- a/docs/api-reference/CRMScript.NetServer.NSAudienceAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAudienceAgent.yml
@@ -89,9 +89,9 @@ items:
   summary: "\nDeletes the NSAudienceLayoutEntity.\n"
   remarks: 
   syntax: 
-    content: Void DeleteAudienceLayoutEntity(Integer audienceLayoutEntity);
+    content: Void DeleteAudienceLayoutEntity(Integer audienceLayoutEntity)
     parameters:
-    - id: audienceLayoutEntity;
+    - id: audienceLayoutEntity
       type: CRMScript.Global.Integer
       description:
     return:
@@ -158,9 +158,9 @@ items:
   summary: "\nGets an NSAudienceLayoutEntity object.\n"
   remarks: 
   syntax: 
-    content: NSAudienceLayoutEntity GetAudienceLayoutEntity(Integer audienceLayoutEntityId);
+    content: NSAudienceLayoutEntity GetAudienceLayoutEntity(Integer audienceLayoutEntityId)
     parameters:
-    - id: audienceLayoutEntityId;
+    - id: audienceLayoutEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
