--- a/docs/api-reference/CRMScript.NetServer.NSBLOBAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBLOBAgent.yml
@@ -218,7 +218,7 @@ items:
   syntax: 
     content: Void DeleteBlobEntity(Integer blobEntity)
     parameters:
-    - id: blobEntity;
+    - id: blobEntity
       type: CRMScript.Global.Integer
       description: The identity of the BlobEntity
     return:
@@ -261,9 +261,9 @@ items:
   summary: "\nGets an NSBlobEntity object.\n"
   remarks: 
   syntax: 
-    content: NSBlobEntity GetBlobEntity(Integer blobEntityId);
+    content: NSBlobEntity GetBlobEntity(Integer blobEntityId)
     parameters:
-    - id: blobEntityId;
+    - id: blobEntityId
       type: CRMScript.Global.Integer
       description: The identifier of the BlobEntity object
     return:
