--- a/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBatchTaskInfo.yml
@@ -159,7 +159,7 @@ items:
   nameWithType: NSBatchTaskInfo.GetDetailsRecord()
   fullName: CRMScript.NetServer.NSBatchTaskInfo.GetDetailsRecord()
   type: Method
-  summary: "\nRecord Id of a row in the DetailsTable containing more info about the task.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSBatchTaskInfo thing;\nInteger detailsRecord = thing.GetDetailsRecord();</code></pre>\n"
+  summary: "\nRecord ID of a row in the DetailsTable containing more info about the task.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSBatchTaskInfo thing;\nInteger detailsRecord = thing.GetDetailsRecord();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetDetailsRecord()
@@ -556,7 +556,7 @@ items:
   nameWithType: NSBatchTaskInfo.SetDetailsRecord(Integer)
   fullName: CRMScript.NetServer.NSBatchTaskInfo.SetDetailsRecord(Integer)
   type: Method
-  summary: "\nRecord Id of a row in the DetailsTable containing more info about the task.\n"
+  summary: "\nRecord ID of a row in the DetailsTable containing more info about the task.\n"
   remarks: 
   syntax: 
     content: SetDetailsRecord(Integer detailsRecord)
