--- a/docs/api-reference/CRMScript.NetServer.NSBulkUpdateAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSBulkUpdateAgent.yml
@@ -32,7 +32,7 @@ items:
   nameWithType: NSBulkUpdateAgent.#ctor
   fullName: CRMScript.NetServer.NSBulkUpdateAgent.#ctor
   type: Constructor
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: NSBulkUpdateAgent
