--- a/docs/api-reference/CRMScript.NetServer.NSChatAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatAgent.yml
@@ -272,9 +272,9 @@ items:
   summary: "\nDeletes the NSChatSessionEntity\n"
   remarks: 
   syntax: 
-    content: Void DeleteChatSessionEntity(Integer chatSessionEntity);
+    content: Void DeleteChatSessionEntity(Integer chatSessionEntity)
     parameters:
-    - id: chatSessionEntity;
+    - id: chatSessionEntity
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -294,9 +294,9 @@ items:
   summary: "\nDeletes the NSChatTopicEntity\n"
   remarks: 
   syntax: 
-    content: Void DeleteChatTopicEntity(Integer chatTopicEntity);
+    content: Void DeleteChatTopicEntity(Integer chatTopicEntity)
     parameters:
-    - id: chatTopicEntity;
+    - id: chatTopicEntity
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -668,7 +668,7 @@ items:
   summary: "\nUpdates the existing NSChatSessionEntity or creates a new NSChatSessionEntity if the id parameter is 0\n"
   remarks: 
   syntax: 
-    content: NSChatSessionEntity SaveChatSessionEntity(NSChatSessionEntity chatSessionEntity);
+    content: NSChatSessionEntity SaveChatSessionEntity(NSChatSessionEntity chatSessionEntity)
     parameters:
     - id: chatSessionEntity
       type: CRMScript.NetServer.NSChatSessionEntity
