--- a/docs/api-reference/CRMScript.NetServer.NSChatOpeningHours.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSChatOpeningHours.yml
@@ -918,7 +918,7 @@ items:
   nameWithType: NSChatOpeningHours.SetTzLocation(NSTimeZoneData)
   fullName: CRMScript.NetServer.NSChatOpeningHours.SetTzLocation(NSTimeZoneData)
   type: Method
-  summary: "\n\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetTzLocation(NSTimeZoneData tzLocation)
