--- a/docs/api-reference/CRMScript.NetServer.NSCheckLicenseStatusResult.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCheckLicenseStatusResult.yml
@@ -3,14 +3,13 @@ items:
 - uid: CRMScript.NetServer.NSCheckLicenseStatusResult
   commentId: T:CRMScript.NetServer.NSCheckLicenseStatusResult
   id: NSCheckLicenseStatusResult
-  so.intellisense: Void.NSCheckLicenseStatusResult
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSCheckLicenseStatusResult.#ctor
   - CRMScript.NetServer.NSCheckLicenseStatusResult.GetLicenseStatus()
   - CRMScript.NetServer.NSCheckLicenseStatusResult.GetMessage()
   - CRMScript.NetServer.NSCheckLicenseStatusResult.GetUrl()
-  - CRMScript.NetServer.NSCheckLicenseStatusResult.#ctor
   - CRMScript.NetServer.NSCheckLicenseStatusResult.SetLicenseStatus(Integer)
   - CRMScript.NetServer.NSCheckLicenseStatusResult.SetMessage(String)
   - CRMScript.NetServer.NSCheckLicenseStatusResult.SetUrl(String)
@@ -20,63 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSCheckLicenseStatusResult.GetLicenseStatus()
-  commentId: M:CRMScript.NetServer.NSCheckLicenseStatusResult.GetLicenseStatus()
-  id: 'GetLicenseStatus()'
-  so.intellisense: NSCheckLicenseStatusResult.GetLicenseStatus
-  langs:
-  - crmscript
-  name: 'GetLicenseStatus()'
-  nameWithType: NSCheckLicenseStatusResult.GetLicenseStatus()
-  fullName: CRMScript.NetServer.NSCheckLicenseStatusResult.GetLicenseStatus()
-  type: Method
-  summary: "\nResult of CheckLicenseStatus<p></p>\n<strong>Returns:</strong>Integer\n"
-  remarks: 
-  syntax: 
-    content: Integer GetLicenseStatus()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSCheckLicenseStatusResult thing;\nInteger licenseStatus = thing.GetLicenseStatus();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCheckLicenseStatusResult.GetMessage()
-  commentId: M:CRMScript.NetServer.NSCheckLicenseStatusResult.GetMessage()
-  id: 'GetMessage()'
-  so.intellisense: NSCheckLicenseStatusResult.GetMessage
-  langs:
-  - crmscript
-  name: 'GetMessage()'
-  nameWithType: NSCheckLicenseStatusResult.GetMessage()
-  fullName: CRMScript.NetServer.NSCheckLicenseStatusResult.GetMessage()
-  type: Method
-  summary: "\nMessage to display in SOADMIN if LinkType=90.<p></p>\n<strong>Returns:</strong>String\n"
-  remarks: 
-  syntax: 
-    content: String GetMessage()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCheckLicenseStatusResult thing;\nString message = thing.GetMessage();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCheckLicenseStatusResult.GetUrl()
-  commentId: M:CRMScript.NetServer.NSCheckLicenseStatusResult.GetUrl()
-  id: 'GetUrl()'
-  so.intellisense: NSCheckLicenseStatusResult.GetUrl
-  langs:
-  - crmscript
-  name: 'GetUrl()'
-  nameWithType: NSCheckLicenseStatusResult.GetUrl()
-  fullName: CRMScript.NetServer.NSCheckLicenseStatusResult.GetUrl()
-  type: Method
-  summary: "\nUrl to show to the user.  This is relevant when LinkType is 60.<p></p>\n<strong>Returns:</strong>String\n"
-  remarks: 
-  syntax: 
-    content: String GetUrl()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCheckLicenseStatusResult thing;\nString url = thing.GetUrl();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCheckLicenseStatusResult.#ctor
   commentId: M:CRMScript.NetServer.NSCheckLicenseStatusResult.#ctor
   id: '#ctor'
@@ -92,6 +34,66 @@ items:
   syntax: 
     content: NSCheckLicenseStatusResult
   example: 
+- uid: CRMScript.NetServer.NSCheckLicenseStatusResult.GetLicenseStatus()
+  commentId: M:CRMScript.NetServer.NSCheckLicenseStatusResult.GetLicenseStatus()
+  id: 'GetLicenseStatus()'
+  so.intellisense: NSCheckLicenseStatusResult.GetLicenseStatus
+  langs:
+  - crmscript
+  name: 'GetLicenseStatus()'
+  nameWithType: NSCheckLicenseStatusResult.GetLicenseStatus()
+  fullName: CRMScript.NetServer.NSCheckLicenseStatusResult.GetLicenseStatus()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetLicenseStatus()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: See <xref href=\"CRMScript.NetServer.LicenseStatus\" data-throw-if-not-resolved=\"false\"></xref>.
+  example: 
+  - "\n<pre><code>NSCheckLicenseStatusResult thing;\nInteger licenseStatus = thing.GetLicenseStatus();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCheckLicenseStatusResult.GetMessage()
+  commentId: M:CRMScript.NetServer.NSCheckLicenseStatusResult.GetMessage()
+  id: 'GetMessage()'
+  so.intellisense: NSCheckLicenseStatusResult.GetMessage
+  langs:
+  - crmscript
+  name: 'GetMessage()'
+  nameWithType: NSCheckLicenseStatusResult.GetMessage()
+  fullName: CRMScript.NetServer.NSCheckLicenseStatusResult.GetMessage()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetMessage()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Message to display in SOADMIN if LinkType=90.
+  example: 
+  - "\n<pre><code>NSCheckLicenseStatusResult thing;\nString message = thing.GetMessage();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCheckLicenseStatusResult.GetUrl()
+  commentId: M:CRMScript.NetServer.NSCheckLicenseStatusResult.GetUrl()
+  id: 'GetUrl()'
+  so.intellisense: NSCheckLicenseStatusResult.GetUrl
+  langs:
+  - crmscript
+  name: 'GetUrl()'
+  nameWithType: NSCheckLicenseStatusResult.GetUrl()
+  fullName: CRMScript.NetServer.NSCheckLicenseStatusResult.GetUrl()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetUrl()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: URL to show to the user. This is relevant when LinkType is 60.
+  example: 
+  - "\n<pre><code>NSCheckLicenseStatusResult thing;\nString url = thing.GetUrl();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCheckLicenseStatusResult.SetLicenseStatus(Integer)
   commentId: M:CRMScript.NetServer.NSCheckLicenseStatusResult.SetLicenseStatus(Integer)
   id: 'SetLicenseStatus(Integer)'
@@ -102,14 +104,14 @@ items:
   nameWithType: NSCheckLicenseStatusResult.SetLicenseStatus(Integer)
   fullName: CRMScript.NetServer.NSCheckLicenseStatusResult.SetLicenseStatus(Integer)
   type: Method
-  summary: "\nResult of CheckLicenseStatus\n"
-  remarks: "\n<p>See enum LicenseStatus.</p>\n"
+  summary: ""
+  remarks: 
   syntax: 
-    content: SetLicenseStatus(Integer licenseStatus)
+    content: Void SetLicenseStatus(Integer licenseStatus)
     parameters:
     - id: licenseStatus
       type: CRMScript.Global.Integer
-      description: 
+      description: Result of CheckLicenseStatus. See <xref href=\"CRMScript.NetServer.LicenseStatus\" data-throw-if-not-resolved=\"false\"></xref>.
   example: 
   - "\n<pre><code>NSCheckLicenseStatusResult thing;\nInteger licenseStatus;\nthing.SetLicenseStatus(licenseStatus);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCheckLicenseStatusResult.SetMessage(String)
@@ -122,14 +124,16 @@ items:
   nameWithType: NSCheckLicenseStatusResult.SetMessage(String)
   fullName: CRMScript.NetServer.NSCheckLicenseStatusResult.SetMessage(String)
   type: Method
-  summary: "\nMessage to display in SOADMIN if LinkType=90.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetMessage(String message)
+    content: Void SetMessage(String message)
     parameters:
     - id: message
       type: CRMScript.Global.String
-      description: 
+      description: Message to display in SOADMIN if LinkType=90.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCheckLicenseStatusResult thing;\nString message;\nthing.SetMessage(message);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCheckLicenseStatusResult.SetUrl(String)
@@ -142,14 +146,16 @@ items:
   nameWithType: NSCheckLicenseStatusResult.SetUrl(String)
   fullName: CRMScript.NetServer.NSCheckLicenseStatusResult.SetUrl(String)
   type: Method
-  summary: "\nUrl to show to the user.  This is relevant when LinkType is 60.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetUrl(String url)
+    content: Void SetUrl(String url)
     parameters:
     - id: url
       type: CRMScript.Global.String
-      description: 
+      description: URL to show to the user.  This is relevant when LinkType is 60.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCheckLicenseStatusResult thing;\nString url;\nthing.SetUrl(url);</code></pre>\n"
 references:
@@ -171,3 +177,15 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
+- uid: CRMScript.NetServer.LicenseStatus
+  commentId: T:CRMScript.NetServer.LicenseStatus
+  isExternal: true
+  name: LicenseStatus
+  nameWithType: LicenseStatus
+  fullName: CRMScript.NetServer.LicenseStatus
