--- a/docs/api-reference/CRMScript.NetServer.NSContactPersonId.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContactPersonId.yml
@@ -3,13 +3,12 @@ items:
 - uid: CRMScript.NetServer.NSContactPersonId
   commentId: T:CRMScript.NetServer.NSContactPersonId
   id: NSContactPersonId
-  so.intellisense: Void.NSContactPersonId
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSContactPersonId.#ctor
   - CRMScript.NetServer.NSContactPersonId.GetContactId()
   - CRMScript.NetServer.NSContactPersonId.GetPersonId()
-  - CRMScript.NetServer.NSContactPersonId.#ctor
   - CRMScript.NetServer.NSContactPersonId.SetContactId(Integer)
   - CRMScript.NetServer.NSContactPersonId.SetPersonId(Integer)
   name: NSContactPersonId
@@ -17,38 +16,6 @@ items:
   fullName: CRMScript.NetServer.NSContactPersonId
   type: Class
   summary: 
-  example: 
-- uid: CRMScript.NetServer.NSContactPersonId.GetContactId()
-  commentId: M:CRMScript.NetServer.NSContactPersonId.GetContactId()
-  id: 'GetContactId()'
-  so.intellisense: NSContactPersonId.GetContactId
-  langs:
-  - crmscript
-  name: 'GetContactId()'
-  nameWithType: NSContactPersonId.GetContactId()
-  fullName: CRMScript.NetServer.NSContactPersonId.GetContactId()
-  type: Method
-  summary: "\nA contact id.\n"
-  remarks: 
-  syntax: 
-    content: GetContactId()
-    parameters:
-  example: 
-- uid: CRMScript.NetServer.NSContactPersonId.GetPersonId()
-  commentId: M:CRMScript.NetServer.NSContactPersonId.GetPersonId()
-  id: 'GetPersonId()'
-  so.intellisense: NSContactPersonId.GetPersonId
-  langs:
-  - crmscript
-  name: 'GetPersonId()'
-  nameWithType: NSContactPersonId.GetPersonId()
-  fullName: CRMScript.NetServer.NSContactPersonId.GetPersonId()
-  type: Method
-  summary: "\nA person id.\n"
-  remarks: 
-  syntax: 
-    content: GetPersonId()
-    parameters:
   example: 
 - uid: CRMScript.NetServer.NSContactPersonId.#ctor
   commentId: M:CRMScript.NetServer.NSContactPersonId.#ctor
@@ -65,6 +32,44 @@ items:
   syntax: 
     content: NSContactPersonId
   example: 
+- uid: CRMScript.NetServer.NSContactPersonId.GetContactId()
+  commentId: M:CRMScript.NetServer.NSContactPersonId.GetContactId()
+  id: 'GetContactId()'
+  so.intellisense: NSContactPersonId.GetContactId
+  langs:
+  - crmscript
+  name: 'GetContactId()'
+  nameWithType: NSContactPersonId.GetContactId()
+  fullName: CRMScript.NetServer.NSContactPersonId.GetContactId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetContactId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: A contact ID.
+  example: 
+- uid: CRMScript.NetServer.NSContactPersonId.GetPersonId()
+  commentId: M:CRMScript.NetServer.NSContactPersonId.GetPersonId()
+  id: 'GetPersonId()'
+  so.intellisense: NSContactPersonId.GetPersonId
+  langs:
+  - crmscript
+  name: 'GetPersonId()'
+  nameWithType: NSContactPersonId.GetPersonId()
+  fullName: CRMScript.NetServer.NSContactPersonId.GetPersonId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetPersonId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: A person ID.
+  example: 
 - uid: CRMScript.NetServer.NSContactPersonId.SetContactId(Integer)
   commentId: M:CRMScript.NetServer.NSContactPersonId.SetContactId(Integer)
   id: 'SetContactId(Integer)'
@@ -75,14 +80,16 @@ items:
   nameWithType: NSContactPersonId.SetContactId(Integer)
   fullName: CRMScript.NetServer.NSContactPersonId.SetContactId(Integer)
   type: Method
-  summary: "\nA contact id.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetContactId(Integer p_0)
+    content: Void SetContactId(Integer id)
     parameters:
-    - id: p_0
+    - id: id
       type: CRMScript.Global.Integer
-      description: 
+      description: A contact ID
+    return:
+      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSContactPersonId.SetPersonId(Integer)
   commentId: M:CRMScript.NetServer.NSContactPersonId.SetPersonId(Integer)
@@ -94,14 +101,16 @@ items:
   nameWithType: NSContactPersonId.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSContactPersonId.SetPersonId(Integer)
   type: Method
-  summary: "\nA person id.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetPersonId(Integer p_0)
+    content: Void SetPersonId(Integer id)
     parameters:
-    - id: p_0
+    - id: id
       type: CRMScript.Global.Integer
-      description: 
+      description: A person ID
+    return:
+      type: CRMScript.Global.Void
   example: 
 references:
 - uid: CRMScript.NetServer.NSContactPersonId
@@ -116,3 +125,9 @@ references:
   name: Integer
   nameWithType: Integer
   fullName: CRMScript.Global.Integer
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
