--- a/docs/api-reference/CRMScript.NetServer.NSControlInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSControlInfo.yml
@@ -3,10 +3,10 @@ items:
 - uid: CRMScript.NetServer.NSControlInfo
   commentId: T:CRMScript.NetServer.NSControlInfo
   id: NSControlInfo
-  so.intellisense: Void.NSControlInfo
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSControlInfo.#ctor
   - CRMScript.NetServer.NSControlInfo.GetDimension()
   - CRMScript.NetServer.NSControlInfo.GetLabel()
   - CRMScript.NetServer.NSControlInfo.GetListLeadText()
@@ -14,7 +14,6 @@ items:
   - CRMScript.NetServer.NSControlInfo.GetListProviderName()
   - CRMScript.NetServer.NSControlInfo.GetListProviderPrimaryKeyName()
   - CRMScript.NetServer.NSControlInfo.GetType()
-  - CRMScript.NetServer.NSControlInfo.#ctor
   - CRMScript.NetServer.NSControlInfo.SetDimension(Integer)
   - CRMScript.NetServer.NSControlInfo.SetLabel(String)
   - CRMScript.NetServer.NSControlInfo.SetListLeadText(String)
@@ -28,139 +27,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSControlInfo.GetDimension()
-  commentId: M:CRMScript.NetServer.NSControlInfo.GetDimension()
-  id: 'GetDimension()'
-  so.intellisense: NSControlInfo.GetDimension
-  langs:
-  - crmscript
-  name: 'GetDimension()'
-  nameWithType: NSControlInfo.GetDimension()
-  fullName: CRMScript.NetServer.NSControlInfo.GetDimension()
-  type: Method
-  summary: "\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSControlInfo thing;\nInteger dimension = thing.GetDimension();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetDimension()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSControlInfo thing;\nInteger dimension = thing.GetDimension();</code></pre>\n"
-- uid: CRMScript.NetServer.NSControlInfo.GetLabel()
-  commentId: M:CRMScript.NetServer.NSControlInfo.GetLabel()
-  id: 'GetLabel()'
-  so.intellisense: NSControlInfo.GetLabel
-  langs:
-  - crmscript
-  name: 'GetLabel()'
-  nameWithType: NSControlInfo.GetLabel()
-  fullName: CRMScript.NetServer.NSControlInfo.GetLabel()
-  type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSControlInfo thing;\nString label = thing.GetLabel();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetLabel()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSControlInfo thing;\nString label = thing.GetLabel();</code></pre>\n"
-- uid: CRMScript.NetServer.NSControlInfo.GetListLeadText()
-  commentId: M:CRMScript.NetServer.NSControlInfo.GetListLeadText()
-  id: 'GetListLeadText()'
-  so.intellisense: NSControlInfo.GetListLeadText
-  langs:
-  - crmscript
-  name: 'GetListLeadText()'
-  nameWithType: NSControlInfo.GetListLeadText()
-  fullName: CRMScript.NetServer.NSControlInfo.GetListLeadText()
-  type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSControlInfo thing;\nString listLeadText = thing.GetListLeadText();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetListLeadText()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSControlInfo thing;\nString listLeadText = thing.GetListLeadText();</code></pre>\n"
-- uid: CRMScript.NetServer.NSControlInfo.GetListProviderExtraInfo()
-  commentId: M:CRMScript.NetServer.NSControlInfo.GetListProviderExtraInfo()
-  id: 'GetListProviderExtraInfo()'
-  so.intellisense: NSControlInfo.GetListProviderExtraInfo
-  langs:
-  - crmscript
-  name: 'GetListProviderExtraInfo()'
-  nameWithType: NSControlInfo.GetListProviderExtraInfo()
-  fullName: CRMScript.NetServer.NSControlInfo.GetListProviderExtraInfo()
-  type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSControlInfo thing;\nString listProviderExtraInfo = thing.GetListProviderExtraInfo();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetListProviderExtraInfo()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSControlInfo thing;\nString listProviderExtraInfo = thing.GetListProviderExtraInfo();</code></pre>\n"
-- uid: CRMScript.NetServer.NSControlInfo.GetListProviderName()
-  commentId: M:CRMScript.NetServer.NSControlInfo.GetListProviderName()
-  id: 'GetListProviderName()'
-  so.intellisense: NSControlInfo.GetListProviderName
-  langs:
-  - crmscript
-  name: 'GetListProviderName()'
-  nameWithType: NSControlInfo.GetListProviderName()
-  fullName: CRMScript.NetServer.NSControlInfo.GetListProviderName()
-  type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSControlInfo thing;\nString listProviderName = thing.GetListProviderName();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetListProviderName()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSControlInfo thing;\nString listProviderName = thing.GetListProviderName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSControlInfo.GetListProviderPrimaryKeyName()
-  commentId: M:CRMScript.NetServer.NSControlInfo.GetListProviderPrimaryKeyName()
-  id: 'GetListProviderPrimaryKeyName()'
-  so.intellisense: NSControlInfo.GetListProviderPrimaryKeyName
-  langs:
-  - crmscript
-  name: 'GetListProviderPrimaryKeyName()'
-  nameWithType: NSControlInfo.GetListProviderPrimaryKeyName()
-  fullName: CRMScript.NetServer.NSControlInfo.GetListProviderPrimaryKeyName()
-  type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSControlInfo thing;\nString listProviderPrimaryKeyName = thing.GetListProviderPrimaryKeyName();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetListProviderPrimaryKeyName()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSControlInfo thing;\nString listProviderPrimaryKeyName = thing.GetListProviderPrimaryKeyName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSControlInfo.GetType()
-  commentId: M:CRMScript.NetServer.NSControlInfo.GetType()
-  id: 'GetType()'
-  so.intellisense: NSControlInfo.GetType
-  langs:
-  - crmscript
-  name: 'GetType()'
-  nameWithType: NSControlInfo.GetType()
-  fullName: CRMScript.NetServer.NSControlInfo.GetType()
-  type: Method
-  summary: "\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSControlInfo thing;\nString type = thing.GetType();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetType()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSControlInfo thing;\nString type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSControlInfo.#ctor
   commentId: M:CRMScript.NetServer.NSControlInfo.#ctor
   id: '#ctor'
@@ -176,6 +42,139 @@ items:
   syntax: 
     content: NSControlInfo
   example: 
+- uid: CRMScript.NetServer.NSControlInfo.GetDimension()
+  commentId: M:CRMScript.NetServer.NSControlInfo.GetDimension()
+  id: 'GetDimension()'
+  so.intellisense: NSControlInfo.GetDimension
+  langs:
+  - crmscript
+  name: 'GetDimension()'
+  nameWithType: NSControlInfo.GetDimension()
+  fullName: CRMScript.NetServer.NSControlInfo.GetDimension()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetDimension()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+  - "\n<pre><code>NSControlInfo thing;\nInteger dimension = thing.GetDimension();</code></pre>\n"
+- uid: CRMScript.NetServer.NSControlInfo.GetLabel()
+  commentId: M:CRMScript.NetServer.NSControlInfo.GetLabel()
+  id: 'GetLabel()'
+  so.intellisense: NSControlInfo.GetLabel
+  langs:
+  - crmscript
+  name: 'GetLabel()'
+  nameWithType: NSControlInfo.GetLabel()
+  fullName: CRMScript.NetServer.NSControlInfo.GetLabel()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetLabel()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
+  - "\n<pre><code>NSControlInfo thing;\nString label = thing.GetLabel();</code></pre>\n"
+- uid: CRMScript.NetServer.NSControlInfo.GetListLeadText()
+  commentId: M:CRMScript.NetServer.NSControlInfo.GetListLeadText()
+  id: 'GetListLeadText()'
+  so.intellisense: NSControlInfo.GetListLeadText
+  langs:
+  - crmscript
+  name: 'GetListLeadText()'
+  nameWithType: NSControlInfo.GetListLeadText()
+  fullName: CRMScript.NetServer.NSControlInfo.GetListLeadText()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetListLeadText()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
+  - "\n<pre><code>NSControlInfo thing;\nString listLeadText = thing.GetListLeadText();</code></pre>\n"
+- uid: CRMScript.NetServer.NSControlInfo.GetListProviderExtraInfo()
+  commentId: M:CRMScript.NetServer.NSControlInfo.GetListProviderExtraInfo()
+  id: 'GetListProviderExtraInfo()'
+  so.intellisense: NSControlInfo.GetListProviderExtraInfo
+  langs:
+  - crmscript
+  name: 'GetListProviderExtraInfo()'
+  nameWithType: NSControlInfo.GetListProviderExtraInfo()
+  fullName: CRMScript.NetServer.NSControlInfo.GetListProviderExtraInfo()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetListProviderExtraInfo()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
+  - "\n<pre><code>NSControlInfo thing;\nString listProviderExtraInfo = thing.GetListProviderExtraInfo();</code></pre>\n"
+- uid: CRMScript.NetServer.NSControlInfo.GetListProviderName()
+  commentId: M:CRMScript.NetServer.NSControlInfo.GetListProviderName()
+  id: 'GetListProviderName()'
+  so.intellisense: NSControlInfo.GetListProviderName
+  langs:
+  - crmscript
+  name: 'GetListProviderName()'
+  nameWithType: NSControlInfo.GetListProviderName()
+  fullName: CRMScript.NetServer.NSControlInfo.GetListProviderName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetListProviderName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
+  - "\n<pre><code>NSControlInfo thing;\nString listProviderName = thing.GetListProviderName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSControlInfo.GetListProviderPrimaryKeyName()
+  commentId: M:CRMScript.NetServer.NSControlInfo.GetListProviderPrimaryKeyName()
+  id: 'GetListProviderPrimaryKeyName()'
+  so.intellisense: NSControlInfo.GetListProviderPrimaryKeyName
+  langs:
+  - crmscript
+  name: 'GetListProviderPrimaryKeyName()'
+  nameWithType: NSControlInfo.GetListProviderPrimaryKeyName()
+  fullName: CRMScript.NetServer.NSControlInfo.GetListProviderPrimaryKeyName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetListProviderPrimaryKeyName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
+  - "\n<pre><code>NSControlInfo thing;\nString listProviderPrimaryKeyName = thing.GetListProviderPrimaryKeyName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSControlInfo.GetType()
+  commentId: M:CRMScript.NetServer.NSControlInfo.GetType()
+  id: 'GetType()'
+  so.intellisense: NSControlInfo.GetType
+  langs:
+  - crmscript
+  name: 'GetType()'
+  nameWithType: NSControlInfo.GetType()
+  fullName: CRMScript.NetServer.NSControlInfo.GetType()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetType()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+  example: 
+  - "\n<pre><code>NSControlInfo thing;\nString type = thing.GetType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSControlInfo.SetDimension(Integer)
   commentId: M:CRMScript.NetServer.NSControlInfo.SetDimension(Integer)
   id: 'SetDimension(Integer)'
@@ -189,11 +188,13 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: SetDimension(Integer dimension)
+    content: Void SetDimension(Integer dimension)
     parameters:
     - id: dimension
       type: CRMScript.Global.Integer
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSControlInfo thing;\nInteger dimension;\nthing.SetDimension(dimension);</code></pre>\n"
 - uid: CRMScript.NetServer.NSControlInfo.SetLabel(String)
@@ -209,11 +210,13 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: SetLabel(String label)
+    content: Void SetLabel(String label)
     parameters:
     - id: label
       type: CRMScript.Global.String
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSControlInfo thing;\nString label;\nthing.SetLabel(label);</code></pre>\n"
 - uid: CRMScript.NetServer.NSControlInfo.SetListLeadText(String)
@@ -229,11 +232,13 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: SetListLeadText(String listLeadText)
+    content: Void SetListLeadText(String listLeadText)
     parameters:
     - id: listLeadText
       type: CRMScript.Global.String
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSControlInfo thing;\nString listLeadText;\nthing.SetListLeadText(listLeadText);</code></pre>\n"
 - uid: CRMScript.NetServer.NSControlInfo.SetListProviderExtraInfo(String)
@@ -249,11 +254,13 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: SetListProviderExtraInfo(String listProviderExtraInfo)
+    content: Void SetListProviderExtraInfo(String listProviderExtraInfo)
     parameters:
     - id: listProviderExtraInfo
       type: CRMScript.Global.String
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSControlInfo thing;\nString listProviderExtraInfo;\nthing.SetListProviderExtraInfo(listProviderExtraInfo);</code></pre>\n"
 - uid: CRMScript.NetServer.NSControlInfo.SetListProviderName(String)
@@ -269,11 +276,13 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: SetListProviderName(String listProviderName)
+    content: Void SetListProviderName(String listProviderName)
     parameters:
     - id: listProviderName
       type: CRMScript.Global.String
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSControlInfo thing;\nString listProviderName;\nthing.SetListProviderName(listProviderName);</code></pre>\n"
 - uid: CRMScript.NetServer.NSControlInfo.SetListProviderPrimaryKeyName(String)
@@ -289,11 +298,13 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: SetListProviderPrimaryKeyName(String listProviderPrimaryKeyName)
+    content: Void SetListProviderPrimaryKeyName(String listProviderPrimaryKeyName)
     parameters:
     - id: listProviderPrimaryKeyName
       type: CRMScript.Global.String
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSControlInfo thing;\nString listProviderPrimaryKeyName;\nthing.SetListProviderPrimaryKeyName(listProviderPrimaryKeyName);</code></pre>\n"
 - uid: CRMScript.NetServer.NSControlInfo.SetType(String)
@@ -309,11 +320,13 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: SetType(String type)
+    content: Void SetType(String type)
     parameters:
     - id: type
       type: CRMScript.Global.String
       description: 
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSControlInfo thing;\nString type;\nthing.SetType(type);</code></pre>\n"
 references:
@@ -335,3 +348,9 @@ references:
   name: String
   nameWithType: String
   fullName: CRMScript.Global.String
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
