--- a/docs/api-reference/CRMScript.NetServer.NSCsSessionKey.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCsSessionKey.yml
@@ -49,7 +49,7 @@ items:
   nameWithType: NSCsSessionKey.GetLoginId()
   fullName: CRMScript.NetServer.NSCsSessionKey.GetLoginId()
   type: Method
-  summary: "\nThe id of the login row<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSCsSessionKey thing;\nInteger loginId = thing.GetLoginId();</code></pre>\n"
+  summary: "\nThe ID of the login row<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSCsSessionKey thing;\nInteger loginId = thing.GetLoginId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetLoginId()
@@ -122,7 +122,7 @@ items:
   nameWithType: NSCsSessionKey.SetLoginId(Integer)
   fullName: CRMScript.NetServer.NSCsSessionKey.SetLoginId(Integer)
   type: Method
-  summary: "\nThe id of the login row\n"
+  summary: "\nThe ID of the login row\n"
   remarks: 
   syntax: 
     content: SetLoginId(Integer loginId)
