--- a/docs/api-reference/CRMScript.NetServer.NSCustomerServiceAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCustomerServiceAgent.yml
@@ -56,7 +56,7 @@ items:
   nameWithType: NSCustomerServiceAgent.AddMessageFromMailData(Integer,String)
   fullName: CRMScript.NetServer.NSCustomerServiceAgent.AddMessageFromMailData(Integer,String)
   type: Method
-  summary: "\nThis method will add a message to an existing request in the sam way as importMail would do it from an email. It accepts RFC822 formatted data\n"
+  summary: "\nadd a message to an existing request in the sam way as importMail would do it from an email. It accepts RFC822 formatted data\n"
   remarks: 
   syntax: 
     content: NSTicketInfo AddMessageFromMailData(Integer ticketId, String data)
@@ -142,7 +142,7 @@ items:
   fullName: CRMScript.NetServer.NSCustomerServiceAgent.CreateDefaultCustomerCenterConfig()
   type: Method
   summary: "\nSet default values into a new NSCustomerCenterConfig.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSCustomerCenterConfig<p></p>\n<pre><code>NSCustomerServiceAgent agent;\nNSCustomerCenterConfig thing = agent.CreateDefaultCustomerCenterConfig();\nthing = agent.SaveCustomerCenterConfig(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSCustomerCenterConfig<p></p>\n<pre><code>NSCustomerServiceAgent agent;\nNSCustomerCenterConfig thing = agent.CreateDefaultCustomerCenterConfig();\nthing = agent.SaveCustomerCenterConfig(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSCustomerCenterConfig CreateDefaultCustomerCenterConfig()
@@ -162,7 +162,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSCustomerServiceAgent.CreateDefaultMailboxEntity()
   type: Method
   summary: "\nSet default values into a new NSMailboxEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSMailboxEntity<p></p>\n<pre><code>NSCustomerServiceAgent agent;\nNSMailboxEntity thing = agent.CreateDefaultMailboxEntity();\nthing = agent.SaveMailboxEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSMailboxEntity<p></p>\n<pre><code>NSCustomerServiceAgent agent;\nNSMailboxEntity thing = agent.CreateDefaultMailboxEntity();\nthing = agent.SaveMailboxEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSMailboxEntity CreateDefaultMailboxEntity()
@@ -182,7 +182,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSCustomerServiceAgent.CreateDefaultSmsConfig()
   type: Method
   summary: "\nSet default values into a new NSSmsConfig.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSSmsConfig<p></p>\n<pre><code>NSCustomerServiceAgent agent;\nNSSmsConfig thing = agent.CreateDefaultSmsConfig();\nthing = agent.SaveSmsConfig(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSSmsConfig<p></p>\n<pre><code>NSCustomerServiceAgent agent;\nNSSmsConfig thing = agent.CreateDefaultSmsConfig();\nthing = agent.SaveSmsConfig(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSSmsConfig CreateDefaultSmsConfig()
@@ -273,9 +273,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSCustomerCenterConfig\n"
   remarks: 
   syntax: 
-    content: DeleteCustomerCenterConfig(Integer customerCenterConfig);
+    content: DeleteCustomerCenterConfig(Integer customerCenterConfig)
     parameters:
-    - id: customerCenterConfig;
+    - id: customerCenterConfig
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -312,7 +312,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   nameWithType: NSCustomerServiceAgent.ExecuteEventHandlers()
   fullName: CRMScript.NetServer.NSCustomerServiceAgent.ExecuteEventHandlers()
   type: Method
-  summary: "\nThis method will execute event handlers in CRMScript for a given event.\n"
+  summary: "\nexecute event handlers in CRMScript for a given event.\n"
   remarks: 
   syntax: 
     content: NSEventData ExecuteEventHandlers(NSEventData eventData)
@@ -378,9 +378,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSCustomerCenterConfig object.\n"
   remarks: 
   syntax: 
-    content: NSCustomerCenterConfig GetCustomerCenterConfig(Integer customerCenterConfigId);
+    content: NSCustomerCenterConfig GetCustomerCenterConfig(Integer customerCenterConfigId)
     parameters:
-    - id: customerCenterConfigId;
+    - id: customerCenterConfigId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -419,9 +419,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSMailboxEntity object.\n"
   remarks: 
   syntax: 
-    content: NSMailboxEntity GetMailboxEntity(Integer mailboxEntityId);
+    content: NSMailboxEntity GetMailboxEntity(Integer mailboxEntityId)
     parameters:
-    - id: mailboxEntityId;
+    - id: mailboxEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -438,7 +438,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   nameWithType: NSCustomerServiceAgent.GetMailboxes()
   fullName: CRMScript.NetServer.NSCustomerServiceAgent.GetMailboxes()
   type: Method
-  summary: "\nThis method will get all registered mailboxes in Service<p></p>\n<strong>Returns:</strong>NSMailbox[]<p></p>\n<pre><code>NSCustomerServiceAgent agent;\nNSMailbox[] res = agent.GetMailboxes();</code></pre>\n"
+  summary: "\nGets all registered mailboxes in Service<p></p>\n<strong>Returns:</strong>NSMailbox[]<p></p>\n<pre><code>NSCustomerServiceAgent agent;\nNSMailbox[] res = agent.GetMailboxes();</code></pre>\n"
   remarks: 
   syntax: 
     content: NSMailbox[] GetMailboxes()
@@ -457,7 +457,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   nameWithType: NSCustomerServiceAgent.GetProgramUrl(String,Bool)
   fullName: CRMScript.NetServer.NSCustomerServiceAgent.GetProgramUrl(String,Bool)
   type: Method
-  summary: "\nThis method will convert a module name into a Service URL.\n"
+  summary: "\nconvert a module name into a Service URL.\n"
   remarks: 
   syntax: 
     content: String GetProgramUrl(String programName, Bool external)
@@ -599,9 +599,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSCustomerCenterConfig or creates a new NSCustomerCenterConfig if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>customerCenterConfig</strong>The NSCustomerCenterConfig to save.</li></ul><strong>Returns:</strong>NSCustomerCenterConfig<p></p>\n<pre><code>NSCustomerService  agent;\nNSCustomerCenterConfig thing = agent.CreateDefaultCustomerCenterConfig();\nthing = agent.SaveCustomerCenterConfig(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSCustomerCenterConfig SaveCustomerCenterConfig(NSCustomerCenterConfig customerCenterConfig);
+    content: NSCustomerCenterConfig SaveCustomerCenterConfig(NSCustomerCenterConfig customerCenterConfig)
     parameters:
-    - id: customerCenterConfig;
+    - id: customerCenterConfig
       type: CRMScript.NetServer.NSCustomerCenterConfig
       description: 
     return:
@@ -621,7 +621,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSMailboxEntity or creates a new NSMailboxEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>mailboxEntity</strong>The NSMailboxEntity to save.</li></ul><strong>Returns:</strong>NSMailboxEntity<p></p>\n<pre><code>NSCustomerService  agent;\nNSMailboxEntity thing = agent.CreateDefaultMailboxEntity();\nthing = agent.SaveMailboxEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSMailboxEntity SaveMailboxEntity(NSMailboxEntity mailboxEntity);
+    content: NSMailboxEntity SaveMailboxEntity(NSMailboxEntity mailboxEntity)
     parameters:
     return:
       type: CRMScript.NetServer.NSMailboxEntity
@@ -640,9 +640,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSSmsConfig or creates a new NSSmsConfig if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>smsConfig</strong>The NSSmsConfig to save.</li></ul><strong>Returns:</strong>NSSmsConfig<p></p>\n<pre><code>NSCustomerService  agent;\nNSSmsConfig thing = agent.CreateDefaultSmsConfig();\nthing = agent.SaveSmsConfig(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSSmsConfig SaveSmsConfig(NSSmsConfig smsConfig);
+    content: NSSmsConfig SaveSmsConfig(NSSmsConfig smsConfig)
     parameters:
-    - id: smsConfig;
+    - id: smsConfig
       type: CRMScript.NetServer.NSSmsConfig
       description: 
     return:
@@ -681,7 +681,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   nameWithType: NSCustomerServiceAgent.TestSmtpServer(String,String,Bool)
   fullName: CRMScript.NetServer.NSCustomerServiceAgent.TestSmtpServer(String,String,Bool)
   type: Method
-  summary: "\nThis method will do a test of a SMTP account, by sending an email to a special @superoffice.com account\n"
+  summary: "\ndo a test of a SMTP account, by sending an email to a special @superoffice.com account\n"
   remarks: 
   syntax: 
     content: NSSmtpTestResult TestSmtpServer(String smtpUri, String from, Bool useStoredPassword)
