--- a/docs/api-reference/CRMScript.NetServer.NSDashboardAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDashboardAgent.yml
@@ -41,7 +41,7 @@ items:
   fullName: CRMScript.NetServer.NSDashboardAgent.CreateDefaultDashboard()
   type: Method
   summary: "\nSet default values into a new NSDashboard.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSDashboard<p></p>\n<pre><code>NSDashboardAgent agent;\nNSDashboard thing = agent.CreateDefaultDashboard();\nthing = agent.SaveDashboard(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSDashboard<p></p>\n<pre><code>NSDashboardAgent agent;\nNSDashboard thing = agent.CreateDefaultDashboard();\nthing = agent.SaveDashboard(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSDashboard CreateDefaultDashboard()
@@ -61,7 +61,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSDashboardAgent.CreateDefaultDashboardTile()
   type: Method
   summary: "\nSet default values into a new NSDashboardTile.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSDashboardTile<p></p>\n<pre><code>NSDashboardAgent agent;\nNSDashboardTile thing = agent.CreateDefaultDashboardTile();\nthing = agent.SaveDashboardTile(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSDashboardTile<p></p>\n<pre><code>NSDashboardAgent agent;\nNSDashboardTile thing = agent.CreateDefaultDashboardTile();\nthing = agent.SaveDashboardTile(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSDashboardTile CreateDefaultDashboardTile()
@@ -117,9 +117,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSDashboard\n"
   remarks: 
   syntax: 
-    content: DeleteDashboard(Integer dashboard);
+    content: DeleteDashboard(Integer dashboard)
     parameters:
-    - id: dashboard;
+    - id: dashboard
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -137,9 +137,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSDashboardTile\n"
   remarks: 
   syntax: 
-    content: DeleteDashboardTile(Integer dashboardTile);
+    content: DeleteDashboardTile(Integer dashboardTile)
     parameters:
-    - id: dashboardTile;
+    - id: dashboardTile
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -157,9 +157,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSDashboard object.\n"
   remarks: 
   syntax: 
-    content: NSDashboard GetDashboard(Integer dashboardId);
+    content: NSDashboard GetDashboard(Integer dashboardId)
     parameters:
-    - id: dashboardId;
+    - id: dashboardId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -201,9 +201,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSDashboardTile object.\n"
   remarks: 
   syntax: 
-    content: NSDashboardTile GetDashboardTile(Integer dashboardTileId);
+    content: NSDashboardTile GetDashboardTile(Integer dashboardTileId)
     parameters:
-    - id: dashboardTileId;
+    - id: dashboardTileId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -336,7 +336,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSDashboard or creates a new NSDashboard if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>dashboard</strong>The NSDashboard to save.</li></ul><strong>Returns:</strong>NSDashboard<p></p>\n<pre><code>NSDashboard  agent;\nNSDashboard thing = agent.CreateDefaultDashboard();\nthing = agent.SaveDashboard(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSDashboard SaveDashboard(NSDashboard dashboard);
+    content: NSDashboard SaveDashboard(NSDashboard dashboard)
     parameters:
     return:
       type: CRMScript.NetServer.NSDashboard
@@ -355,7 +355,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSDashboardTile or creates a new NSDashboardTile if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>dashboardTile</strong>The NSDashboardTile to save.</li></ul><strong>Returns:</strong>NSDashboardTile<p></p>\n<pre><code>NSDashboard  agent;\nNSDashboardTile thing = agent.CreateDefaultDashboardTile();\nthing = agent.SaveDashboardTile(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSDashboardTile SaveDashboardTile(NSDashboardTile dashboardTile);
+    content: NSDashboardTile SaveDashboardTile(NSDashboardTile dashboardTile)
     parameters:
     return:
       type: CRMScript.NetServer.NSDashboardTile
