--- a/docs/api-reference/CRMScript.NetServer.NSDocumentAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocumentAgent.yml
@@ -165,7 +165,7 @@ items:
   fullName: CRMScript.NetServer.NSDocumentAgent.CreateDefaultDocumentEntity()
   type: Method
   summary: "\nSet default values into a new NSDocumentEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSDocumentEntity<p></p>\n<pre><code>NSDocumentAgent agent;\nNSDocumentEntity thing = agent.CreateDefaultDocumentEntity();\nthing = agent.SaveDocumentEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSDocumentEntity<p></p>\n<pre><code>NSDocumentAgent agent;\nNSDocumentEntity thing = agent.CreateDefaultDocumentEntity();\nthing = agent.SaveDocumentEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSDocumentEntity CreateDefaultDocumentEntity()
@@ -206,7 +206,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSDocumentAgent.CreateDefaultDocumentPreview()
   type: Method
   summary: "\nSet default values into a new NSDocumentPreview.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSDocumentPreview<p></p>\n<pre><code>NSDocumentAgent agent;\nNSDocumentPreview thing = agent.CreateDefaultDocumentPreview();\nthing = agent.SaveDocumentPreview(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSDocumentPreview<p></p>\n<pre><code>NSDocumentAgent agent;\nNSDocumentPreview thing = agent.CreateDefaultDocumentPreview();\nthing = agent.SaveDocumentPreview(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSDocumentPreview CreateDefaultDocumentPreview()
@@ -226,7 +226,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSDocumentAgent.CreateDefaultSuggestedDocumentEntity()
   type: Method
   summary: "\nSet default values into a new NSSuggestedDocumentEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSSuggestedDocumentEntity<p></p>\n<pre><code>NSDocumentAgent agent;\nNSSuggestedDocumentEntity thing = agent.CreateDefaultSuggestedDocumentEntity();\nthing = agent.SaveSuggestedDocumentEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSSuggestedDocumentEntity<p></p>\n<pre><code>NSDocumentAgent agent;\nNSSuggestedDocumentEntity thing = agent.CreateDefaultSuggestedDocumentEntity();\nthing = agent.SaveSuggestedDocumentEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSSuggestedDocumentEntity CreateDefaultSuggestedDocumentEntity()
@@ -246,7 +246,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSDocumentAgent.CreateDefaultTemplateVariablesParameters()
   type: Method
   summary: "\nSet default values into a new NSTemplateVariablesParameters.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSTemplateVariablesParameters<p></p>\n<pre><code>NSDocumentAgent agent;\nNSTemplateVariablesParameters thing = agent.CreateDefaultTemplateVariablesParameters();\nthing = agent.SaveTemplateVariablesParameters(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSTemplateVariablesParameters<p></p>\n<pre><code>NSDocumentAgent agent;\nNSTemplateVariablesParameters thing = agent.CreateDefaultTemplateVariablesParameters();\nthing = agent.SaveTemplateVariablesParameters(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSTemplateVariablesParameters CreateDefaultTemplateVariablesParameters()
@@ -475,9 +475,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSDocumentEntity\n"
   remarks: 
   syntax: 
-    content: DeleteDocumentEntity(Integer documentEntity);
+    content: DeleteDocumentEntity(Integer documentEntity)
     parameters:
-    - id: documentEntity;
+    - id: documentEntity
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -728,9 +728,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSDocument object.\n"
   remarks: 
   syntax: 
-    content: NSDocument GetDocument(Integer documentId);
+    content: NSDocument GetDocument(Integer documentId)
     parameters:
-    - id: documentId;
+    - id: documentId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -775,9 +775,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSDocumentEntity object.\n"
   remarks: 
   syntax: 
-    content: NSDocumentEntity GetDocumentEntity(Integer documentEntityId);
+    content: NSDocumentEntity GetDocumentEntity(Integer documentEntityId)
     parameters:
-    - id: documentEntityId;
+    - id: documentEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -797,9 +797,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets a vector of NSDocument objects.\n"
   remarks: 
   syntax: 
-    content: NSDocument[] GetDocumentList(Integer[]  documentIds);
+    content: NSDocument[] GetDocumentList(Integer[]  documentIds)
     parameters:
-    - id: documentIds;
+    - id: documentIds
       type: CRMScript.Global.Integer[]
       description: 
     return:
@@ -1600,9 +1600,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSSuggestedDocumentEntity object.\n"
   remarks: 
   syntax: 
-    content: NSSuggestedDocumentEntity GetSuggestedDocumentEntity(Integer suggestedDocumentEntityId);
+    content: NSSuggestedDocumentEntity GetSuggestedDocumentEntity(Integer suggestedDocumentEntityId)
     parameters:
-    - id: suggestedDocumentEntityId;
+    - id: suggestedDocumentEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -1782,9 +1782,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSDocumentEntity or creates a new NSDocumentEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>documentEntity</strong>The NSDocumentEntity to save.</li></ul><strong>Returns:</strong>NSDocumentEntity<p></p>\n<pre><code>NSDocument  agent;\nNSDocumentEntity thing = agent.CreateDefaultDocumentEntity();\nthing = agent.SaveDocumentEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSDocumentEntity SaveDocumentEntity(NSDocumentEntity documentEntity);
+    content: NSDocumentEntity SaveDocumentEntity(NSDocumentEntity documentEntity)
     parameters:
-    - id: documentEntity;
+    - id: documentEntity
       type: CRMScript.NetServer.NSDocumentEntity
       description: 
     return:
@@ -1860,9 +1860,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSSuggestedDocumentEntity or creates a new NSSuggestedDocumentEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>suggestedDocumentEntity</strong>The NSSuggestedDocumentEntity to save.</li></ul><strong>Returns:</strong>NSSuggestedDocumentEntity<p></p>\n<pre><code>NSDocument  agent;\nNSSuggestedDocumentEntity thing = agent.CreateDefaultSuggestedDocumentEntity();\nthing = agent.SaveSuggestedDocumentEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSSuggestedDocumentEntity SaveSuggestedDocumentEntity(NSSuggestedDocumentEntity suggestedDocumentEntity);
+    content: NSSuggestedDocumentEntity SaveSuggestedDocumentEntity(NSSuggestedDocumentEntity suggestedDocumentEntity)
     parameters:
-    - id: suggestedDocumentEntity;
+    - id: suggestedDocumentEntity
       type: CRMScript.NetServer.NSSuggestedDocumentEntity
       description: 
     return:
