--- a/docs/api-reference/CRMScript.NetServer.NSEMailAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEMailAgent.yml
@@ -198,7 +198,7 @@ items:
   fullName: CRMScript.NetServer.NSEMailAgent.CreateDefaultEMailAccount()
   type: Method
   summary: "\nSet default values into a new NSEMailAccount.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailAccount<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailAccount thing = agent.CreateDefaultEMailAccount();\nthing = agent.SaveEMailAccount(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailAccount<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailAccount thing = agent.CreateDefaultEMailAccount();\nthing = agent.SaveEMailAccount(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSEMailAccount CreateDefaultEMailAccount()
@@ -218,7 +218,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSEMailAgent.CreateDefaultEMailAddress()
   type: Method
   summary: "\nSet default values into a new NSEMailAddress.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailAddress<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailAddress thing = agent.CreateDefaultEMailAddress();\nthing = agent.SaveEMailAddress(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailAddress<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailAddress thing = agent.CreateDefaultEMailAddress();\nthing = agent.SaveEMailAddress(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSEMailAddress CreateDefaultEMailAddress()
@@ -238,7 +238,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSEMailAgent.CreateDefaultEMailAppointment()
   type: Method
   summary: "\nSet default values into a new NSEMailAppointment.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailAppointment<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailAppointment thing = agent.CreateDefaultEMailAppointment();\nthing = agent.SaveEMailAppointment(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailAppointment<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailAppointment thing = agent.CreateDefaultEMailAppointment();\nthing = agent.SaveEMailAppointment(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSEMailAppointment CreateDefaultEMailAppointment()
@@ -258,7 +258,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSEMailAgent.CreateDefaultEMailAttachment()
   type: Method
   summary: "\nSet default values into a new NSEMailAttachment.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailAttachment<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailAttachment thing = agent.CreateDefaultEMailAttachment();\nthing = agent.SaveEMailAttachment(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailAttachment<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailAttachment thing = agent.CreateDefaultEMailAttachment();\nthing = agent.SaveEMailAttachment(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSEMailAttachment CreateDefaultEMailAttachment()
@@ -278,7 +278,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSEMailAgent.CreateDefaultEMailConnectionInfo()
   type: Method
   summary: "\nSet default values into a new NSEMailConnectionInfo.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailConnectionInfo<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailConnectionInfo thing = agent.CreateDefaultEMailConnectionInfo();\nthing = agent.SaveEMailConnectionInfo(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailConnectionInfo<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailConnectionInfo thing = agent.CreateDefaultEMailConnectionInfo();\nthing = agent.SaveEMailConnectionInfo(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSEMailConnectionInfo CreateDefaultEMailConnectionInfo()
@@ -298,7 +298,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSEMailAgent.CreateDefaultEMailConnectionInfoExtended()
   type: Method
   summary: "\nSet default values into a new NSEMailConnectionInfoExtended.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailConnectionInfoExtended<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailConnectionInfoExtended thing = agent.CreateDefaultEMailConnectionInfoExtended();\nthing = agent.SaveEMailConnectionInfoExtended(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailConnectionInfoExtended<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailConnectionInfoExtended thing = agent.CreateDefaultEMailConnectionInfoExtended();\nthing = agent.SaveEMailConnectionInfoExtended(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSEMailConnectionInfoExtended CreateDefaultEMailConnectionInfoExtended()
@@ -318,7 +318,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSEMailAgent.CreateDefaultEMailCustomHeader()
   type: Method
   summary: "\nSet default values into a new NSEMailCustomHeader.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailCustomHeader<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailCustomHeader thing = agent.CreateDefaultEMailCustomHeader();\nthing = agent.SaveEMailCustomHeader(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailCustomHeader<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailCustomHeader thing = agent.CreateDefaultEMailCustomHeader();\nthing = agent.SaveEMailCustomHeader(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSEMailCustomHeader CreateDefaultEMailCustomHeader()
@@ -338,7 +338,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSEMailAgent.CreateDefaultEMailEntity()
   type: Method
   summary: "\nSet default values into a new NSEMailEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailEntity<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailEntity thing = agent.CreateDefaultEMailEntity();\nthing = agent.SaveEMailEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailEntity<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailEntity thing = agent.CreateDefaultEMailEntity();\nthing = agent.SaveEMailEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSEMailEntity CreateDefaultEMailEntity()
@@ -358,7 +358,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSEMailAgent.CreateDefaultEMailEnvelope()
   type: Method
   summary: "\nSet default values into a new NSEMailEnvelope.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailEnvelope<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailEnvelope thing = agent.CreateDefaultEMailEnvelope();\nthing = agent.SaveEMailEnvelope(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailEnvelope<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailEnvelope thing = agent.CreateDefaultEMailEnvelope();\nthing = agent.SaveEMailEnvelope(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSEMailEnvelope CreateDefaultEMailEnvelope()
@@ -378,7 +378,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSEMailAgent.CreateDefaultEMailFolder()
   type: Method
   summary: "\nSet default values into a new NSEMailFolder.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailFolder<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailFolder thing = agent.CreateDefaultEMailFolder();\nthing = agent.SaveEMailFolder(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailFolder<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailFolder thing = agent.CreateDefaultEMailFolder();\nthing = agent.SaveEMailFolder(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSEMailFolder CreateDefaultEMailFolder()
@@ -398,7 +398,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSEMailAgent.CreateDefaultEMailSOInfo()
   type: Method
   summary: "\nSet default values into a new NSEMailSOInfo.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailSOInfo<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailSOInfo thing = agent.CreateDefaultEMailSOInfo();\nthing = agent.SaveEMailSOInfo(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSEMailSOInfo<p></p>\n<pre><code>NSEMailAgent agent;\nNSEMailSOInfo thing = agent.CreateDefaultEMailSOInfo();\nthing = agent.SaveEMailSOInfo(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSEMailSOInfo CreateDefaultEMailSOInfo()
@@ -544,9 +544,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSEMailAccount\n"
   remarks: 
   syntax: 
-    content: DeleteEMailAccount(Integer eMailAccount);
+    content: DeleteEMailAccount(Integer eMailAccount)
     parameters:
-    - id: eMailAccount;
+    - id: eMailAccount
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -839,9 +839,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSEMailAccount object.\n"
   remarks: 
   syntax: 
-    content: NSEMailAccount GetEMailAccount(Integer eMailAccountId);
+    content: NSEMailAccount GetEMailAccount(Integer eMailAccountId)
     parameters:
-    - id: eMailAccountId;
+    - id: eMailAccountId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -1207,9 +1207,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSEMailSOInfo object.\n"
   remarks: 
   syntax: 
-    content: NSEMailSOInfo GetEMailSOInfo(Integer eMailSOInfoId);
+    content: NSEMailSOInfo GetEMailSOInfo(Integer eMailSOInfoId)
     parameters:
-    - id: eMailSOInfoId;
+    - id: eMailSOInfoId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -2033,7 +2033,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSEMailAccount or creates a new NSEMailAccount if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>eMailAccount</strong>The NSEMailAccount to save.</li></ul><strong>Returns:</strong>NSEMailAccount<p></p>\n<pre><code>NSEMail  agent;\nNSEMailAccount thing = agent.CreateDefaultEMailAccount();\nthing = agent.SaveEMailAccount(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSEMailAccount SaveEMailAccount(NSEMailAccount eMailAccount);
+    content: NSEMailAccount SaveEMailAccount(NSEMailAccount eMailAccount)
     parameters:
     return:
       type: CRMScript.NetServer.NSEMailAccount
