--- a/docs/api-reference/CRMScript.NetServer.NSErpConnectionData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSErpConnectionData.yml
@@ -133,7 +133,7 @@ items:
   nameWithType: NSErpConnectionData.GetErpConnectionId()
   fullName: CRMScript.NetServer.NSErpConnectionData.GetErpConnectionId()
   type: Method
-  summary: "\nThe id of the connection<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSErpConnectionData thing;\nInteger erpConnectionId = thing.GetErpConnectionId();</code></pre>\n"
+  summary: "\nThe ID of the connection<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSErpConnectionData thing;\nInteger erpConnectionId = thing.GetErpConnectionId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetErpConnectionId()
@@ -286,7 +286,7 @@ items:
   nameWithType: NSErpConnectionData.SetErpConnectionId(Integer)
   fullName: CRMScript.NetServer.NSErpConnectionData.SetErpConnectionId(Integer)
   type: Method
-  summary: "\nThe id of the connection\n"
+  summary: "\nThe ID of the connection\n"
   remarks: 
   syntax: 
     content: SetErpConnectionId(Integer erpConnectionId)
