--- a/docs/api-reference/CRMScript.NetServer.NSErpConnectionListMapping.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSErpConnectionListMapping.yml
@@ -91,7 +91,7 @@ items:
   nameWithType: NSErpConnectionListMapping.GetErpFieldId()
   fullName: CRMScript.NetServer.NSErpConnectionListMapping.GetErpFieldId()
   type: Method
-  summary: "\nThe id of the field that is using the lists. Readonly<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSErpConnectionListMapping thing;\nInteger erpFieldId = thing.GetErpFieldId();</code></pre>\n"
+  summary: "\nThe ID of the field that is using the lists. Readonly<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSErpConnectionListMapping thing;\nInteger erpFieldId = thing.GetErpFieldId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetErpFieldId()
@@ -201,7 +201,7 @@ items:
   nameWithType: NSErpConnectionListMapping.SetErpFieldId(Integer)
   fullName: CRMScript.NetServer.NSErpConnectionListMapping.SetErpFieldId(Integer)
   type: Method
-  summary: "\nThe id of the field that is using the lists. Readonly\n"
+  summary: "\nThe ID of the field that is using the lists. Readonly\n"
   remarks: 
   syntax: 
     content: SetErpFieldId(Integer erpFieldId)
