--- a/docs/api-reference/CRMScript.NetServer.NSErpSyncAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSErpSyncAgent.yml
@@ -229,7 +229,7 @@ items:
   fullName: CRMScript.NetServer.NSErpSyncAgent.CreateDefaultErpSyncConnectorEntity()
   type: Method
   summary: "\nSet default values into a new NSErpSyncConnectorEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSErpSyncConnectorEntity<p></p>\n<pre><code>NSErpSyncAgent agent;\nNSErpSyncConnectorEntity thing = agent.CreateDefaultErpSyncConnectorEntity();\nthing = agent.SaveErpSyncConnectorEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSErpSyncConnectorEntity<p></p>\n<pre><code>NSErpSyncAgent agent;\nNSErpSyncConnectorEntity thing = agent.CreateDefaultErpSyncConnectorEntity();\nthing = agent.SaveErpSyncConnectorEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSErpSyncConnectorEntity CreateDefaultErpSyncConnectorEntity()
@@ -302,9 +302,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSErpSyncConnectorEntity\n"
   remarks: 
   syntax: 
-    content: DeleteErpSyncConnectorEntity(Integer erpSyncConnectorEntity);
+    content: DeleteErpSyncConnectorEntity(Integer erpSyncConnectorEntity)
     parameters:
-    - id: erpSyncConnectorEntity;
+    - id: erpSyncConnectorEntity
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -726,9 +726,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSErpSyncConnectorEntity object.\n"
   remarks: 
   syntax: 
-    content: NSErpSyncConnectorEntity GetErpSyncConnectorEntity(Integer erpSyncConnectorEntityId);
+    content: NSErpSyncConnectorEntity GetErpSyncConnectorEntity(Integer erpSyncConnectorEntityId)
     parameters:
-    - id: erpSyncConnectorEntityId;
+    - id: erpSyncConnectorEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -770,7 +770,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   nameWithType: NSErpSyncAgent.GetFieldValuesFromCrm(Integer,Integer)
   fullName: CRMScript.NetServer.NSErpSyncAgent.GetFieldValuesFromCrm(Integer,Integer)
   type: Method
-  summary: "\nGet Crm Field values<p></p>\n<ul><li><strong>RecordId</strong>The id of the CRM entity</li><li><strong>actorTypeCrm</strong>CRM Actor type</li><li>Enum: 0 = Unknown</li><li>Enum: 1 = Contact</li><li>Enum: 2 = Person</li><li>Enum: 3 = Project</li><li>Enum: 4 = Sale</li></ul><strong>Returns:</strong>NSErpSyncFieldValue[]<p></p>\n<pre><code>NSErpSyncAgent agent;\nInteger recordId;\nInteger actorTypeCrm;\nNSErpSyncFieldValue[] res = agent.GetFieldValuesFromCrm(recordId, actorTypeCrm);</code></pre>\n"
+  summary: "\nGet Crm Field values<p></p>\n<ul><li><strong>RecordId</strong>The ID of the CRM entity</li><li><strong>actorTypeCrm</strong>CRM Actor type</li><li>Enum: 0 = Unknown</li><li>Enum: 1 = Contact</li><li>Enum: 2 = Person</li><li>Enum: 3 = Project</li><li>Enum: 4 = Sale</li></ul><strong>Returns:</strong>NSErpSyncFieldValue[]<p></p>\n<pre><code>NSErpSyncAgent agent;\nInteger recordId;\nInteger actorTypeCrm;\nNSErpSyncFieldValue[] res = agent.GetFieldValuesFromCrm(recordId, actorTypeCrm);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSErpSyncFieldValue[] GetFieldValuesFromCrm(Integer recordId, Integer actorTypeCrm)
@@ -973,9 +973,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSErpSyncConnectorEntity or creates a new NSErpSyncConnectorEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>erpSyncConnectorEntity</strong>The NSErpSyncConnectorEntity to save.</li></ul><strong>Returns:</strong>NSErpSyncConnectorEntity<p></p>\n<pre><code>NSErpSync  agent;\nNSErpSyncConnectorEntity thing = agent.CreateDefaultErpSyncConnectorEntity();\nthing = agent.SaveErpSyncConnectorEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSErpSyncConnectorEntity SaveErpSyncConnectorEntity(NSErpSyncConnectorEntity erpSyncConnectorEntity);
+    content: NSErpSyncConnectorEntity SaveErpSyncConnectorEntity(NSErpSyncConnectorEntity erpSyncConnectorEntity)
     parameters:
-    - id: erpSyncConnectorEntity;
+    - id: erpSyncConnectorEntity
       type: CRMScript.NetServer.NSErpSyncConnectorEntity
       description: 
     return:
