--- a/docs/api-reference/CRMScript.NetServer.NSExtAppEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSExtAppEntity.yml
@@ -144,7 +144,7 @@ items:
   nameWithType: NSExtAppEntity.GetIcon()
   fullName: CRMScript.NetServer.NSExtAppEntity.GetIcon()
   type: Method
-  summary: "\nThe id of the icon of the external app<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSExtAppEntity thing;\nInteger icon = thing.GetIcon();</code></pre>\n"
+  summary: "\nThe ID of the icon of the external app<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSExtAppEntity thing;\nInteger icon = thing.GetIcon();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetIcon()
@@ -581,7 +581,7 @@ items:
   nameWithType: NSExtAppEntity.SetIcon(Integer)
   fullName: CRMScript.NetServer.NSExtAppEntity.SetIcon(Integer)
   type: Method
-  summary: "\nThe id of the icon of the external app\n"
+  summary: "\nThe ID of the icon of the external app\n"
   remarks: 
   syntax: 
     content: SetIcon(Integer icon)
