--- a/docs/api-reference/CRMScript.NetServer.NSForeignSystemAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSForeignSystemAgent.yml
@@ -115,7 +115,7 @@ items:
   fullName: CRMScript.NetServer.NSForeignSystemAgent.CreateDefaultForeignAppEntity()
   type: Method
   summary: "\nSet default values into a new NSForeignAppEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSForeignAppEntity<p></p>\n<pre><code>NSForeignSystemAgent agent;\nNSForeignAppEntity thing = agent.CreateDefaultForeignAppEntity();\nthing = agent.SaveForeignAppEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSForeignAppEntity<p></p>\n<pre><code>NSForeignSystemAgent agent;\nNSForeignAppEntity thing = agent.CreateDefaultForeignAppEntity();\nthing = agent.SaveForeignAppEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSForeignAppEntity CreateDefaultForeignAppEntity()
@@ -165,9 +165,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSForeignAppEntity\n"
   remarks: 
   syntax: 
-    content: Void DeleteForeignAppEntity(Integer foreignAppEntity);
+    content: Void DeleteForeignAppEntity(Integer foreignAppEntity)
     parameters:
-    - id: foreignAppEntity;
+    - id: foreignAppEntity
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -547,9 +547,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSForeignAppEntity object.\n"
   remarks: 
   syntax: 
-    content: NSForeignAppEntity GetForeignAppEntity(Integer foreignAppEntityId);
+    content: NSForeignAppEntity GetForeignAppEntity(Integer foreignAppEntityId)
     parameters:
-    - id: foreignAppEntityId;
+    - id: foreignAppEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -569,9 +569,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSForeignDevice object.\n"
   remarks: 
   syntax: 
-    content: NSForeignDevice GetForeignDevice(Integer foreignDeviceId);
+    content: NSForeignDevice GetForeignDevice(Integer foreignDeviceId)
     parameters:
-    - id: foreignDeviceId;
+    - id: foreignDeviceId
       type: CRMScript.Global.Integer
       description: 
     return:
