--- a/docs/api-reference/CRMScript.NetServer.NSFormEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFormEntity.yml
@@ -372,7 +372,7 @@ items:
   nameWithType: NSFormEntity.GetResponseShipmentId()
   fullName: CRMScript.NetServer.NSFormEntity.GetResponseShipmentId()
   type: Method
-  summary: "\nThe id of the s_shipment that is used to send the response mails<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSFormEntity thing;\nInteger responseShipmentId = thing.GetResponseShipmentId();</code></pre>\n"
+  summary: "\nThe ID of the s_shipment that is used to send the response mails<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSFormEntity thing;\nInteger responseShipmentId = thing.GetResponseShipmentId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetResponseShipmentId()
@@ -815,7 +815,7 @@ items:
   nameWithType: NSFormEntity.SetResponseShipmentId(Integer)
   fullName: CRMScript.NetServer.NSFormEntity.SetResponseShipmentId(Integer)
   type: Method
-  summary: "\nThe id of the s_shipment that is used to send the response mails\n"
+  summary: "\nThe ID of the s_shipment that is used to send the response mails\n"
   remarks: 
   syntax: 
     content: SetResponseShipmentId(Integer responseShipmentId)
