--- a/docs/api-reference/CRMScript.NetServer.NSFormSubmissionEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFormSubmissionEntity.yml
@@ -82,7 +82,7 @@ items:
   nameWithType: NSFormSubmissionEntity.GetFormId()
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.GetFormId()
   type: Method
-  summary: "\nThe id of the parent form.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSFormSubmissionEntity thing;\nInteger formId = thing.GetFormId();</code></pre>\n"
+  summary: "\nThe ID of the parent form.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSFormSubmissionEntity thing;\nInteger formId = thing.GetFormId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetFormId()
@@ -177,7 +177,7 @@ items:
   nameWithType: NSFormSubmissionEntity.GetResponseShipmentAddrId()
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.GetResponseShipmentAddrId()
   type: Method
-  summary: "\nThe id of the s_shipment_addr that is the response mail<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSFormSubmissionEntity thing;\nInteger responseShipmentAddrId = thing.GetResponseShipmentAddrId();</code></pre>\n"
+  summary: "\nThe ID of the s_shipment_addr that is the response mail<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSFormSubmissionEntity thing;\nInteger responseShipmentAddrId = thing.GetResponseShipmentAddrId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetResponseShipmentAddrId()
@@ -289,7 +289,7 @@ items:
   nameWithType: NSFormSubmissionEntity.SetFormId(Integer)
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.SetFormId(Integer)
   type: Method
-  summary: "\nThe id of the parent form.\n"
+  summary: "\nThe ID of the parent form.\n"
   remarks: 
   syntax: 
     content: SetFormId(Integer formId)
@@ -389,7 +389,7 @@ items:
   nameWithType: NSFormSubmissionEntity.SetResponseShipmentAddrId(Integer)
   fullName: CRMScript.NetServer.NSFormSubmissionEntity.SetResponseShipmentAddrId(Integer)
   type: Method
-  summary: "\nThe id of the s_shipment_addr that is the response mail\n"
+  summary: "\nThe ID of the s_shipment_addr that is the response mail\n"
   remarks: 
   syntax: 
     content: SetResponseShipmentAddrId(Integer responseShipmentAddrId)
