--- a/docs/api-reference/CRMScript.NetServer.NSHeadingEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSHeadingEntity.yml
@@ -131,7 +131,7 @@ items:
   nameWithType: NSHeadingEntity.GetUdListDefinitionId()
   fullName: CRMScript.NetServer.NSHeadingEntity.GetUdListDefinitionId()
   type: Method
-  summary: "\nThe id of the list which this heading belongs to<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSHeadingEntity thing;\nInteger udListDefinitionId = thing.GetUdListDefinitionId();</code></pre>\n"
+  summary: "\nThe ID of the list which this heading belongs to<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSHeadingEntity thing;\nInteger udListDefinitionId = thing.GetUdListDefinitionId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetUdListDefinitionId()
@@ -265,7 +265,7 @@ items:
   nameWithType: NSHeadingEntity.SetUdListDefinitionId(Integer)
   fullName: CRMScript.NetServer.NSHeadingEntity.SetUdListDefinitionId(Integer)
   type: Method
-  summary: "\nThe id of the list which this heading belongs to\n"
+  summary: "\nThe ID of the list which this heading belongs to\n"
   remarks: 
   syntax: 
     content: SetUdListDefinitionId(Integer udListDefinitionId)
