--- a/docs/api-reference/CRMScript.NetServer.NSListItemEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSListItemEntity.yml
@@ -131,7 +131,7 @@ items:
   nameWithType: NSListItemEntity.GetUdListDefinitionId()
   fullName: CRMScript.NetServer.NSListItemEntity.GetUdListDefinitionId()
   type: Method
-  summary: "\nThe id of the list which this list item belongs to<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSListItemEntity thing;\nInteger udListDefinitionId = thing.GetUdListDefinitionId();</code></pre>\n"
+  summary: "\nThe ID of the list which this list item belongs to<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSListItemEntity thing;\nInteger udListDefinitionId = thing.GetUdListDefinitionId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetUdListDefinitionId()
@@ -265,7 +265,7 @@ items:
   nameWithType: NSListItemEntity.SetUdListDefinitionId(Integer)
   fullName: CRMScript.NetServer.NSListItemEntity.SetUdListDefinitionId(Integer)
   type: Method
-  summary: "\nThe id of the list which this list item belongs to\n"
+  summary: "\nThe ID of the list which this list item belongs to\n"
   remarks: 
   syntax: 
     content: SetUdListDefinitionId(Integer udListDefinitionId)
