--- a/docs/api-reference/CRMScript.NetServer.NSMDOListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMDOListItem.yml
@@ -162,7 +162,7 @@ items:
   nameWithType: NSMDOListItem.GetId()
   fullName: CRMScript.NetServer.NSMDOListItem.GetId()
   type: Method
-  summary: "\nThe Id of the ListItem<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSMDOListItem thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nThe ID of the ListItem<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSMDOListItem thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -411,7 +411,7 @@ items:
   nameWithType: NSMDOListItem.SetId(Integer)
   fullName: CRMScript.NetServer.NSMDOListItem.SetId(Integer)
   type: Method
-  summary: "\nThe Id of the ListItem\n"
+  summary: "\nThe ID of the ListItem\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
