--- a/docs/api-reference/CRMScript.NetServer.NSMarketingAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMarketingAgent.yml
@@ -46,7 +46,7 @@ items:
   fullName: CRMScript.NetServer.NSMarketingAgent.CreateDefaultFormEntity()
   type: Method
   summary: "\nSet default values into a new NSFormEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSFormEntity<p></p>\n<pre><code>NSMarketingAgent agent;\nNSFormEntity thing = agent.CreateDefaultFormEntity();\nthing = agent.SaveFormEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSFormEntity<p></p>\n<pre><code>NSMarketingAgent agent;\nNSFormEntity thing = agent.CreateDefaultFormEntity();\nthing = agent.SaveFormEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSFormEntity CreateDefaultFormEntity()
@@ -66,7 +66,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSMarketingAgent.CreateDefaultFormSubmissionEntity()
   type: Method
   summary: "\nSet default values into a new NSFormSubmissionEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSFormSubmissionEntity<p></p>\n<pre><code>NSMarketingAgent agent;\nNSFormSubmissionEntity thing = agent.CreateDefaultFormSubmissionEntity();\nthing = agent.SaveFormSubmissionEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSFormSubmissionEntity<p></p>\n<pre><code>NSMarketingAgent agent;\nNSFormSubmissionEntity thing = agent.CreateDefaultFormSubmissionEntity();\nthing = agent.SaveFormSubmissionEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSFormSubmissionEntity CreateDefaultFormSubmissionEntity()
@@ -86,7 +86,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSMarketingAgent.CreateDefaultShipmentMessageBlockEntity()
   type: Method
   summary: "\nSet default values into a new NSShipmentMessageBlockEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSShipmentMessageBlockEntity<p></p>\n<pre><code>NSMarketingAgent agent;\nNSShipmentMessageBlockEntity thing = agent.CreateDefaultShipmentMessageBlockEntity();\nthing = agent.SaveShipmentMessageBlockEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSShipmentMessageBlockEntity<p></p>\n<pre><code>NSMarketingAgent agent;\nNSShipmentMessageBlockEntity thing = agent.CreateDefaultShipmentMessageBlockEntity();\nthing = agent.SaveShipmentMessageBlockEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSShipmentMessageBlockEntity CreateDefaultShipmentMessageBlockEntity()
@@ -106,7 +106,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSMarketingAgent.CreateDefaultShipmentMessageEntity()
   type: Method
   summary: "\nSet default values into a new NSShipmentMessageEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSShipmentMessageEntity<p></p>\n<pre><code>NSMarketingAgent agent;\nNSShipmentMessageEntity thing = agent.CreateDefaultShipmentMessageEntity();\nthing = agent.SaveShipmentMessageEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSShipmentMessageEntity<p></p>\n<pre><code>NSMarketingAgent agent;\nNSShipmentMessageEntity thing = agent.CreateDefaultShipmentMessageEntity();\nthing = agent.SaveShipmentMessageEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSShipmentMessageEntity CreateDefaultShipmentMessageEntity()
@@ -128,9 +128,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSFormEntity\n"
   remarks: 
   syntax: 
-    content: DeleteFormEntity(Integer formEntity);
+    content: DeleteFormEntity(Integer formEntity)
     parameters:
-    - id: formEntity;
+    - id: formEntity
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -148,9 +148,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSFormSubmissionEntity\n"
   remarks: 
   syntax: 
-    content: DeleteFormSubmissionEntity(Integer formSubmissionEntity);
+    content: DeleteFormSubmissionEntity(Integer formSubmissionEntity)
     parameters:
-    - id: formSubmissionEntity;
+    - id: formSubmissionEntity
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -168,9 +168,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSShipmentMessageBlockEntity\n"
   remarks: 
   syntax: 
-    content: DeleteShipmentMessageBlockEntity(Integer shipmentMessageBlockEntity);
+    content: DeleteShipmentMessageBlockEntity(Integer shipmentMessageBlockEntity)
     parameters:
-    - id: shipmentMessageBlockEntity;
+    - id: shipmentMessageBlockEntity
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -188,9 +188,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSShipmentMessageEntity\n"
   remarks: 
   syntax: 
-    content: DeleteShipmentMessageEntity(Integer shipmentMessageEntity);
+    content: DeleteShipmentMessageEntity(Integer shipmentMessageEntity)
     parameters:
-    - id: shipmentMessageEntity;
+    - id: shipmentMessageEntity
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -208,9 +208,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSFormEntity object.\n"
   remarks: 
   syntax: 
-    content: NSFormEntity GetFormEntity(Integer formEntityId);
+    content: NSFormEntity GetFormEntity(Integer formEntityId)
     parameters:
-    - id: formEntityId;
+    - id: formEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -230,9 +230,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSFormSubmissionEntity object.\n"
   remarks: 
   syntax: 
-    content: NSFormSubmissionEntity GetFormSubmissionEntity(Integer formSubmissionEntityId);
+    content: NSFormSubmissionEntity GetFormSubmissionEntity(Integer formSubmissionEntityId)
     parameters:
-    - id: formSubmissionEntityId;
+    - id: formSubmissionEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -296,9 +296,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSShipmentMessageBlockEntity object.\n"
   remarks: 
   syntax: 
-    content: NSShipmentMessageBlockEntity GetShipmentMessageBlockEntity(Integer shipmentMessageBlockEntityId);
+    content: NSShipmentMessageBlockEntity GetShipmentMessageBlockEntity(Integer shipmentMessageBlockEntityId)
     parameters:
-    - id: shipmentMessageBlockEntityId;
+    - id: shipmentMessageBlockEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -318,9 +318,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSShipmentMessageEntity object.\n"
   remarks: 
   syntax: 
-    content: NSShipmentMessageEntity GetShipmentMessageEntity(Integer shipmentMessageEntityId);
+    content: NSShipmentMessageEntity GetShipmentMessageEntity(Integer shipmentMessageEntityId)
     parameters:
-    - id: shipmentMessageEntityId;
+    - id: shipmentMessageEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -378,9 +378,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSFormEntity or creates a new NSFormEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>formEntity</strong>The NSFormEntity to save.</li></ul><strong>Returns:</strong>NSFormEntity<p></p>\n<pre><code>NSMarketing  agent;\nNSFormEntity thing = agent.CreateDefaultFormEntity();\nthing = agent.SaveFormEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSFormEntity SaveFormEntity(NSFormEntity formEntity);
+    content: NSFormEntity SaveFormEntity(NSFormEntity formEntity)
     parameters:
-    - id: formEntity;
+    - id: formEntity
       type: CRMScript.NetServer.NSFormEntity
       description: 
     return:
@@ -400,9 +400,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSFormSubmissionEntity or creates a new NSFormSubmissionEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>formSubmissionEntity</strong>The NSFormSubmissionEntity to save.</li></ul><strong>Returns:</strong>NSFormSubmissionEntity<p></p>\n<pre><code>NSMarketing  agent;\nNSFormSubmissionEntity thing = agent.CreateDefaultFormSubmissionEntity();\nthing = agent.SaveFormSubmissionEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSFormSubmissionEntity SaveFormSubmissionEntity(NSFormSubmissionEntity formSubmissionEntity);
+    content: NSFormSubmissionEntity SaveFormSubmissionEntity(NSFormSubmissionEntity formSubmissionEntity)
     parameters:
-    - id: formSubmissionEntity;
+    - id: formSubmissionEntity
       type: CRMScript.NetServer.NSFormSubmissionEntity
       description: 
     return:
@@ -422,7 +422,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSShipmentMessageBlockEntity or creates a new NSShipmentMessageBlockEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>shipmentMessageBlockEntity</strong>The NSShipmentMessageBlockEntity to save.</li></ul><strong>Returns:</strong>NSShipmentMessageBlockEntity<p></p>\n<pre><code>NSMarketing  agent;\nNSShipmentMessageBlockEntity thing = agent.CreateDefaultShipmentMessageBlockEntity();\nthing = agent.SaveShipmentMessageBlockEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSShipmentMessageBlockEntity SaveShipmentMessageBlockEntity(NSShipmentMessageBlockEntity shipmentMessageBlockEntity);
+    content: NSShipmentMessageBlockEntity SaveShipmentMessageBlockEntity(NSShipmentMessageBlockEntity shipmentMessageBlockEntity)
     parameters:
     return:
       type: CRMScript.NetServer.NSShipmentMessageBlockEntity
@@ -441,7 +441,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSShipmentMessageEntity or creates a new NSShipmentMessageEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>shipmentMessageEntity</strong>The NSShipmentMessageEntity to save.</li></ul><strong>Returns:</strong>NSShipmentMessageEntity<p></p>\n<pre><code>NSMarketing  agent;\nNSShipmentMessageEntity thing = agent.CreateDefaultShipmentMessageEntity();\nthing = agent.SaveShipmentMessageEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSShipmentMessageEntity SaveShipmentMessageEntity(NSShipmentMessageEntity shipmentMessageEntity);
+    content: NSShipmentMessageEntity SaveShipmentMessageEntity(NSShipmentMessageEntity shipmentMessageEntity)
     parameters:
     return:
       type: CRMScript.NetServer.NSShipmentMessageEntity
@@ -457,7 +457,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   nameWithType: NSMarketingAgent.VerifyGoogleRecaptcha(String,String)
   fullName: CRMScript.NetServer.NSMarketingAgent.VerifyGoogleRecaptcha(String,String)
   type: Method
-  summary: "\nThis method will try to verify a Google recaptcha token. The token is gained from the recaptcha frontend component\n"
+  summary: "\ntry to verify a Google recaptcha token. The token is gained from the recaptcha frontend component\n"
   remarks: 
   syntax: 
     content: Bool VerifyGoogleRecaptcha(String token, String optionalSecretKey)
