--- a/docs/api-reference/CRMScript.NetServer.NSNavigatorAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSNavigatorAgent.yml
@@ -53,9 +53,9 @@ items:
   summary: "\nGets an NSNavigatorCompany object.\n"
   remarks: 
   syntax: 
-    content: NSNavigatorCompany GetNavigatorCompany(Integer navigatorCompanyId);
+    content: NSNavigatorCompany GetNavigatorCompany(Integer navigatorCompanyId)
     parameters:
-    - id: navigatorCompanyId;
+    - id: navigatorCompanyId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -75,9 +75,9 @@ items:
   summary: "\nGets a vector of NSNavigatorCompany objects.\n"
   remarks: 
   syntax: 
-    content: NSNavigatorCompany[] GetNavigatorCompanyList(Integer[]  navigatorCompanyIds);
+    content: NSNavigatorCompany[] GetNavigatorCompanyList(Integer[]  navigatorCompanyIds)
     parameters:
-    - id: navigatorCompanyIds;
+    - id: navigatorCompanyIds
       type: CRMScript.Global.Integer[]
       description: 
     return:
