--- a/docs/api-reference/CRMScript.NetServer.NSNumberAllocationAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSNumberAllocationAgent.yml
@@ -33,7 +33,7 @@ items:
   fullName: CRMScript.NetServer.NSNumberAllocationAgent.CreateDefaultRefCountEntity()
   type: Method
   summary: "\nSet default values into a new NSRefCountEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSRefCountEntity<p></p>\n<pre><code>NSNumberAllocationAgent agent;\nNSRefCountEntity thing = agent.CreateDefaultRefCountEntity();\nthing = agent.SaveRefCountEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSRefCountEntity<p></p>\n<pre><code>NSNumberAllocationAgent agent;\nNSRefCountEntity thing = agent.CreateDefaultRefCountEntity();\nthing = agent.SaveRefCountEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSRefCountEntity CreateDefaultRefCountEntity()
@@ -55,9 +55,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSRefCountEntity<p></p>\n<ul><li><strong>RefCountEntityId</strong>The identity of the RefCountEntity to delete.</li></ul><pre><code>NSNumberAllocationAgent agent;\nagent.DeleteRefCountEntity(123);</code></pre>\n"
   remarks: 
   syntax: 
-    content: DeleteRefCountEntity(Integer refCountEntity);
+    content: DeleteRefCountEntity(Integer refCountEntity)
     parameters:
-    - id: refCountEntity;
+    - id: refCountEntity
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -94,9 +94,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSRefCountEntity object.<p></p>\n<ul><li><strong>RefCountEntityId</strong>The identifier of the NSRefCountEntity object</li></ul><strong>Returns:</strong>NSRefCountEntity<p></p>\n<pre><code>NSNumberAllocationAgent agent;\nNSRefCountEntity thing = agent.GetRefCountEntity(123);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSRefCountEntity GetRefCountEntity(Integer refCountEntityId);
+    content: NSRefCountEntity GetRefCountEntity(Integer refCountEntityId)
     parameters:
-    - id: refCountEntityId;
+    - id: refCountEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -154,9 +154,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSRefCountEntity or creates a new NSRefCountEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>refCountEntity</strong>The NSRefCountEntity to save.</li></ul><strong>Returns:</strong>NSRefCountEntity<p></p>\n<pre><code>NSNumberAllocation  agent;\nNSRefCountEntity thing = agent.CreateDefaultRefCountEntity();\nthing = agent.SaveRefCountEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSRefCountEntity SaveRefCountEntity(NSRefCountEntity refCountEntity);
+    content: NSRefCountEntity SaveRefCountEntity(NSRefCountEntity refCountEntity)
     parameters:
-    - id: refCountEntity;
+    - id: refCountEntity
       type: CRMScript.NetServer.NSRefCountEntity
       description: 
     return:
