--- a/docs/api-reference/CRMScript.NetServer.NSPersonAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPersonAgent.yml
@@ -240,7 +240,7 @@ items:
   nameWithType: NSPersonAgent.CreateDefaultConsentPerson()
   fullName: CRMScript.NetServer.NSPersonAgent.CreateDefaultConsentPerson()
   type: Method
-  summary: "\nSet default values into a new NSConsentPerson.<p></p>\nNetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>A new NSConsentPerson with default values.<p></p>\n<pre><code>NSPersonAgent agent;\nNSConsentPerson thing = agent.CreateDefaultConsentPerson();\nthing = agent.SaveConsentPerson(thing);</code></pre>\n"
+  summary: "\nSet default values into a new NSConsentPerson.<p></p>\nNetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>A new NSConsentPerson with default values.<p></p>\n<pre><code>NSPersonAgent agent;\nNSConsentPerson thing = agent.CreateDefaultConsentPerson();\nthing = agent.SaveConsentPerson(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSConsentPerson CreateDefaultConsentPerson()
@@ -289,7 +289,7 @@ items:
   nameWithType: NSPersonAgent.CreateDefaultPersonEntity()
   fullName: CRMScript.NetServer.NSPersonAgent.CreateDefaultPersonEntity()
   type: Method
-  summary: "\nSet default values into a new NSPersonEntity.<p></p>\nNetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>A new NSPersonEntity with default values.<p></p>\n<pre><code>NSPersonAgent agent;\nNSPersonEntity thing = agent.CreateDefaultPersonEntity();\nthing = agent.SavePersonEntity(thing);</code></pre>\n"
+  summary: "\nSet default values into a new NSPersonEntity.<p></p>\nNetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>A new NSPersonEntity with default values.<p></p>\n<pre><code>NSPersonAgent agent;\nNSPersonEntity thing = agent.CreateDefaultPersonEntity();\nthing = agent.SavePersonEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSPersonEntity CreateDefaultPersonEntity()
@@ -339,9 +339,9 @@ items:
   summary: "\nDeletes the NSConsentPerson\n"
   remarks: 
   syntax: 
-    content: DeleteConsentPerson(Integer consentPerson);
+    content: DeleteConsentPerson(Integer consentPerson)
     parameters:
-    - id: consentPerson;
+    - id: consentPerson
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -377,9 +377,9 @@ items:
   summary: "\nDeletes the NSPersonEntity\n"
   remarks: 
   syntax: 
-    content: DeletePersonEntity(Integer personEntity);
+    content: DeletePersonEntity(Integer personEntity)
     parameters:
-    - id: personEntity;
+    - id: personEntity
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -577,9 +577,9 @@ items:
   summary: "\nGets an NSConsentPerson object.\n"
   remarks: 
   syntax: 
-    content: NSConsentPerson GetConsentPerson(Integer consentPersonId);
+    content: NSConsentPerson GetConsentPerson(Integer consentPersonId)
     parameters:
-    - id: consentPersonId;
+    - id: consentPersonId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -659,9 +659,9 @@ items:
   summary: "\nGets an NSPerson object.\n"
   remarks: 
   syntax: 
-    content: NSPerson GetPerson(Integer personId);
+    content: NSPerson GetPerson(Integer personId)
     parameters:
-    - id: personId;
+    - id: personId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -681,9 +681,9 @@ items:
   summary: "\nGets an NSPersonEntity object.\n"
   remarks: 
   syntax: 
-    content: NSPersonEntity GetPersonEntity(Integer personEntityId);
+    content: NSPersonEntity GetPersonEntity(Integer personEntityId)
     parameters:
-    - id: personEntityId;
+    - id: personEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -725,9 +725,9 @@ items:
   summary: "\nGets a vector of NSPerson objects.\n"
   remarks: 
   syntax: 
-    content: NSPerson[] GetPersonList(Integer[]  personIds);
+    content: NSPerson[] GetPersonList(Integer[]  personIds)
     parameters:
-    - id: personIds;
+    - id: personIds
       type: CRMScript.Global.Integer[]
       description: 
     return:
@@ -1069,9 +1069,9 @@ items:
   summary: "\nUpdates the existing NSConsentPerson or creates a new NSConsentPerson if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>consentPerson</strong>The NSConsentPerson to save.</li></ul><strong>Returns:</strong>NSConsentPerson<p></p>\n<pre><code>NSPerson  agent;\nNSConsentPerson thing = agent.CreateDefaultConsentPerson();\nthing = agent.SaveConsentPerson(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSConsentPerson SaveConsentPerson(NSConsentPerson consentPerson);
+    content: NSConsentPerson SaveConsentPerson(NSConsentPerson consentPerson)
     parameters:
-    - id: consentPerson;
+    - id: consentPerson
       type: CRMScript.NetServer.NSConsentPerson
       description: 
     return:
