--- a/docs/api-reference/CRMScript.NetServer.NSPocketNotificationMessage.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPocketNotificationMessage.yml
@@ -215,7 +215,7 @@ items:
   nameWithType: NSPocketNotificationMessage.GetUrl()
   fullName: CRMScript.NetServer.NSPocketNotificationMessage.GetUrl()
   type: Method
-  summary: "\nAn url associated with the notification that will be handled by Pocket<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSPocketNotificationMessage thing;\nString url = thing.GetUrl();</code></pre>\n"
+  summary: "\na URL associated with the notification that will be handled by Pocket<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSPocketNotificationMessage thing;\nString url = thing.GetUrl();</code></pre>\n"
   remarks: 
   syntax: 
     content: String GetUrl()
@@ -420,7 +420,7 @@ items:
   nameWithType: NSPocketNotificationMessage.SetUrl(String)
   fullName: CRMScript.NetServer.NSPocketNotificationMessage.SetUrl(String)
   type: Method
-  summary: "\nAn url associated with the notification that will be handled by Pocket\n"
+  summary: "\na URL associated with the notification that will be handled by Pocket\n"
   remarks: 
   syntax: 
     content: SetUrl(String url)
