--- a/docs/api-reference/CRMScript.NetServer.NSPreference.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreference.yml
@@ -122,7 +122,7 @@ items:
   nameWithType: NSPreference.GetPrefDescId()
   fullName: CRMScript.NetServer.NSPreference.GetPrefDescId()
   type: Method
-  summary: "\nThe id of the prefdesc this preference is connected to<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSPreference thing;\nInteger prefDescId = thing.GetPrefDescId();</code></pre>\n"
+  summary: "\nThe ID of the prefdesc this preference is connected to<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSPreference thing;\nInteger prefDescId = thing.GetPrefDescId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetPrefDescId()
@@ -217,7 +217,7 @@ items:
   nameWithType: NSPreference.GetTargetId()
   fullName: CRMScript.NetServer.NSPreference.GetTargetId()
   type: Method
-  summary: "\nThe id of the target row. The table it points at is specified by the preference type.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSPreference thing;\nInteger targetId = thing.GetTargetId();</code></pre>\n"
+  summary: "\nThe ID of the target row. The table it points at is specified by the preference type.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSPreference thing;\nInteger targetId = thing.GetTargetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetTargetId()
@@ -236,7 +236,7 @@ items:
   nameWithType: NSPreference.GetUserPreferenceId()
   fullName: CRMScript.NetServer.NSPreference.GetUserPreferenceId()
   type: Method
-  summary: "\nThe id of the user preference<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSPreference thing;\nInteger userPreferenceId = thing.GetUserPreferenceId();</code></pre>\n"
+  summary: "\nThe ID of the user preference<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSPreference thing;\nInteger userPreferenceId = thing.GetUserPreferenceId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetUserPreferenceId()
@@ -350,7 +350,7 @@ items:
   nameWithType: NSPreference.SetPrefDescId(Integer)
   fullName: CRMScript.NetServer.NSPreference.SetPrefDescId(Integer)
   type: Method
-  summary: "\nThe id of the prefdesc this preference is connected to\n"
+  summary: "\nThe ID of the prefdesc this preference is connected to\n"
   remarks: 
   syntax: 
     content: SetPrefDescId(Integer prefDescId)
@@ -447,7 +447,7 @@ items:
   nameWithType: NSPreference.SetTargetId(Integer)
   fullName: CRMScript.NetServer.NSPreference.SetTargetId(Integer)
   type: Method
-  summary: "\nThe id of the target row. The table it points at is specified by the preference type.\n"
+  summary: "\nThe ID of the target row. The table it points at is specified by the preference type.\n"
   remarks: 
   syntax: 
     content: SetTargetId(Integer targetId)
@@ -467,7 +467,7 @@ items:
   nameWithType: NSPreference.SetUserPreferenceId(Integer)
   fullName: CRMScript.NetServer.NSPreference.SetUserPreferenceId(Integer)
   type: Method
-  summary: "\nThe id of the user preference\n"
+  summary: "\nThe ID of the user preference\n"
   remarks: 
   syntax: 
     content: SetUserPreferenceId(Integer userPreferenceId)
