--- a/docs/api-reference/CRMScript.NetServer.NSPreferenceAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreferenceAgent.yml
@@ -63,7 +63,7 @@ items:
   fullName: CRMScript.NetServer.NSPreferenceAgent.CreateDefaultPreference()
   type: Method
   summary: "\nSet default values into a new NSPreference.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSPreference<p></p>\n<pre><code>NSPreferenceAgent agent;\nNSPreference thing = agent.CreateDefaultPreference();\nthing = agent.SavePreference(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSPreference<p></p>\n<pre><code>NSPreferenceAgent agent;\nNSPreference thing = agent.CreateDefaultPreference();\nthing = agent.SavePreference(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSPreference CreateDefaultPreference()
@@ -83,7 +83,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSPreferenceAgent.CreateDefaultPreferenceDescription()
   type: Method
   summary: "\nSet default values into a new NSPreferenceDescription.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSPreferenceDescription<p></p>\n<pre><code>NSPreferenceAgent agent;\nNSPreferenceDescription thing = agent.CreateDefaultPreferenceDescription();\nthing = agent.SavePreferenceDescription(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSPreferenceDescription<p></p>\n<pre><code>NSPreferenceAgent agent;\nNSPreferenceDescription thing = agent.CreateDefaultPreferenceDescription();\nthing = agent.SavePreferenceDescription(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSPreferenceDescription CreateDefaultPreferenceDescription()
@@ -103,7 +103,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSPreferenceAgent.CreateDefaultPreferenceDescriptionLine()
   type: Method
   summary: "\nSet default values into a new NSPreferenceDescriptionLine.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSPreferenceDescriptionLine<p></p>\n<pre><code>NSPreferenceAgent agent;\nNSPreferenceDescriptionLine thing = agent.CreateDefaultPreferenceDescriptionLine();\nthing = agent.SavePreferenceDescriptionLine(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSPreferenceDescriptionLine<p></p>\n<pre><code>NSPreferenceAgent agent;\nNSPreferenceDescriptionLine thing = agent.CreateDefaultPreferenceDescriptionLine();\nthing = agent.SavePreferenceDescriptionLine(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSPreferenceDescriptionLine CreateDefaultPreferenceDescriptionLine()
@@ -216,9 +216,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSPreferenceDescription\n"
   remarks: 
   syntax: 
-    content: DeletePreferenceDescription(Integer preferenceDescription);
+    content: DeletePreferenceDescription(Integer preferenceDescription)
     parameters:
-    - id: preferenceDescription;
+    - id: preferenceDescription
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -236,9 +236,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSPreferenceDescriptionLine\n"
   remarks: 
   syntax: 
-    content: DeletePreferenceDescriptionLine(Integer preferenceDescriptionLine);
+    content: DeletePreferenceDescriptionLine(Integer preferenceDescriptionLine)
     parameters:
-    - id: preferenceDescriptionLine;
+    - id: preferenceDescriptionLine
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -466,9 +466,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSPreferenceDescription object.\n"
   remarks: 
   syntax: 
-    content: NSPreferenceDescription GetPreferenceDescription(Integer preferenceDescriptionId);
+    content: NSPreferenceDescription GetPreferenceDescription(Integer preferenceDescriptionId)
     parameters:
-    - id: preferenceDescriptionId;
+    - id: preferenceDescriptionId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -488,9 +488,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSPreferenceDescriptionLine object.\n"
   remarks: 
   syntax: 
-    content: NSPreferenceDescriptionLine GetPreferenceDescriptionLine(Integer preferenceDescriptionLineId);
+    content: NSPreferenceDescriptionLine GetPreferenceDescriptionLine(Integer preferenceDescriptionLineId)
     parameters:
-    - id: preferenceDescriptionLineId;
+    - id: preferenceDescriptionLineId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -707,9 +707,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSPreferenceDescription or creates a new NSPreferenceDescription if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>preferenceDescription</strong>The NSPreferenceDescription to save.</li></ul><strong>Returns:</strong>NSPreferenceDescription<p></p>\n<pre><code>NSPreference  agent;\nNSPreferenceDescription thing = agent.CreateDefaultPreferenceDescription();\nthing = agent.SavePreferenceDescription(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSPreferenceDescription SavePreferenceDescription(NSPreferenceDescription preferenceDescription);
+    content: NSPreferenceDescription SavePreferenceDescription(NSPreferenceDescription preferenceDescription)
     parameters:
-    - id: preferenceDescription;
+    - id: preferenceDescription
       type: CRMScript.NetServer.NSPreferenceDescription
       description: 
     return:
@@ -729,9 +729,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSPreferenceDescriptionLine or creates a new NSPreferenceDescriptionLine if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>preferenceDescriptionLine</strong>The NSPreferenceDescriptionLine to save.</li></ul><strong>Returns:</strong>NSPreferenceDescriptionLine<p></p>\n<pre><code>NSPreference  agent;\nNSPreferenceDescriptionLine thing = agent.CreateDefaultPreferenceDescriptionLine();\nthing = agent.SavePreferenceDescriptionLine(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSPreferenceDescriptionLine SavePreferenceDescriptionLine(NSPreferenceDescriptionLine preferenceDescriptionLine);
+    content: NSPreferenceDescriptionLine SavePreferenceDescriptionLine(NSPreferenceDescriptionLine preferenceDescriptionLine)
     parameters:
-    - id: preferenceDescriptionLine;
+    - id: preferenceDescriptionLine
       type: CRMScript.NetServer.NSPreferenceDescriptionLine
       description: 
     return:
