--- a/docs/api-reference/CRMScript.NetServer.NSProject.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProject.yml
@@ -288,7 +288,7 @@ items:
   nameWithType: NSProject.GetTextId()
   fullName: CRMScript.NetServer.NSProject.GetTextId()
   type: Method
-  summary: "\nThe id of the description<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSProject thing;\nInteger textId = thing.GetTextId();</code></pre>\n"
+  summary: "\nThe ID of the description<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSProject thing;\nInteger textId = thing.GetTextId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetTextId()
@@ -651,7 +651,7 @@ items:
   nameWithType: NSProject.SetTextId(Integer)
   fullName: CRMScript.NetServer.NSProject.SetTextId(Integer)
   type: Method
-  summary: "\nThe id of the description\n"
+  summary: "\nThe ID of the description\n"
   remarks: 
   syntax: 
     content: SetTextId(Integer textId)
