--- a/docs/api-reference/CRMScript.NetServer.NSRelationAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSRelationAgent.yml
@@ -30,7 +30,7 @@ items:
   fullName: CRMScript.NetServer.NSRelationAgent.CreateDefaultContactRelationEntity()
   type: Method
   summary: "\nSet default values into a new NSContactRelationEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSContactRelationEntity<p></p>\n<pre><code>NSRelationAgent agent;\nNSContactRelationEntity thing = agent.CreateDefaultContactRelationEntity();\nthing = agent.SaveContactRelationEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSContactRelationEntity<p></p>\n<pre><code>NSRelationAgent agent;\nNSContactRelationEntity thing = agent.CreateDefaultContactRelationEntity();\nthing = agent.SaveContactRelationEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSContactRelationEntity CreateDefaultContactRelationEntity()
@@ -73,9 +73,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSContactRelationEntity object.\n"
   remarks: 
   syntax: 
-    content: NSContactRelationEntity GetContactRelationEntity(Integer contactRelationEntityId);
+    content: NSContactRelationEntity GetContactRelationEntity(Integer contactRelationEntityId)
     parameters:
-    - id: contactRelationEntityId;
+    - id: contactRelationEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
