--- a/docs/api-reference/CRMScript.NetServer.NSReplicationAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReplicationAgent.yml
@@ -34,7 +34,7 @@ items:
   fullName: CRMScript.NetServer.NSReplicationAgent.CreateDefaultSatellite()
   type: Method
   summary: "\nSet default values into a new NSSatellite.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSSatellite<p></p>\n<pre><code>NSReplicationAgent agent;\nNSSatellite thing = agent.CreateDefaultSatellite();\nthing = agent.SaveSatellite(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSSatellite<p></p>\n<pre><code>NSReplicationAgent agent;\nNSSatellite thing = agent.CreateDefaultSatellite();\nthing = agent.SaveSatellite(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSSatellite CreateDefaultSatellite()
@@ -56,9 +56,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSArea object.\n"
   remarks: 
   syntax: 
-    content: NSArea GetArea(Integer areaId);
+    content: NSArea GetArea(Integer areaId)
     parameters:
-    - id: areaId;
+    - id: areaId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -116,9 +116,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSSatellite object.\n"
   remarks: 
   syntax: 
-    content: NSSatellite GetSatellite(Integer satelliteId);
+    content: NSSatellite GetSatellite(Integer satelliteId)
     parameters:
-    - id: satelliteId;
+    - id: satelliteId
       type: CRMScript.Global.Integer
       description: 
     return:
