--- a/docs/api-reference/CRMScript.NetServer.NSReplyTemplate.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReplyTemplate.yml
@@ -51,7 +51,7 @@ items:
   nameWithType: NSReplyTemplate.GetFolderId()
   fullName: CRMScript.NetServer.NSReplyTemplate.GetFolderId()
   type: Method
-  summary: "\nThe id of the folder in which this reply template is located. NULL or -1 if this is a toplevel reply template.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSReplyTemplate thing;\nInteger folderId = thing.GetFolderId();</code></pre>\n"
+  summary: "\nThe ID of the folder in which this reply template is located. NULL or -1 if this is a toplevel reply template.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSReplyTemplate thing;\nInteger folderId = thing.GetFolderId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetFolderId()
@@ -143,7 +143,7 @@ items:
   nameWithType: NSReplyTemplate.SetFolderId(Integer)
   fullName: CRMScript.NetServer.NSReplyTemplate.SetFolderId(Integer)
   type: Method
-  summary: "\nThe id of the folder in which this reply template is located. NULL or -1 if this is a toplevel reply template.\n"
+  summary: "\nThe ID of the folder in which this reply template is located. NULL or -1 if this is a toplevel reply template.\n"
   remarks: 
   syntax: 
     content: SetFolderId(Integer folderId)
