--- a/docs/api-reference/CRMScript.NetServer.NSReportEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReportEntity.yml
@@ -135,7 +135,7 @@ items:
   nameWithType: NSReportEntity.GetReportId()
   fullName: CRMScript.NetServer.NSReportEntity.GetReportId()
   type: Method
-  summary: "\nThe id of the report.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSReportEntity thing;\nInteger reportId = thing.GetReportId();</code></pre>\n"
+  summary: "\nThe ID of the report.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSReportEntity thing;\nInteger reportId = thing.GetReportId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetReportId()
@@ -173,7 +173,7 @@ items:
   nameWithType: NSReportEntity.GetTemplateId()
   fullName: CRMScript.NetServer.NSReportEntity.GetTemplateId()
   type: Method
-  summary: "\nThe id of report template.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSReportEntity thing;\nInteger templateId = thing.GetTemplateId();</code></pre>\n"
+  summary: "\nThe ID of report template.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSReportEntity thing;\nInteger templateId = thing.GetTemplateId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetTemplateId()
@@ -307,7 +307,7 @@ items:
   nameWithType: NSReportEntity.SetReportId(Integer)
   fullName: CRMScript.NetServer.NSReportEntity.SetReportId(Integer)
   type: Method
-  summary: "\nThe id of the report.\n"
+  summary: "\nThe ID of the report.\n"
   remarks: 
   syntax: 
     content: SetReportId(Integer reportId)
@@ -347,7 +347,7 @@ items:
   nameWithType: NSReportEntity.SetTemplateId(Integer)
   fullName: CRMScript.NetServer.NSReportEntity.SetTemplateId(Integer)
   type: Method
-  summary: "\nThe id of report template.\n"
+  summary: "\nThe ID of report template.\n"
   remarks: 
   syntax: 
     content: SetTemplateId(Integer templateId)
