--- a/docs/api-reference/CRMScript.NetServer.NSSaleAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaleAgent.yml
@@ -104,7 +104,7 @@ items:
   fullName: CRMScript.NetServer.NSSaleAgent.CreateDefaultSaleEntity()
   type: Method
   summary: "\nSet default values into a new NSSaleEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSSaleEntity<p></p>\n<pre><code>NSSaleAgent agent;\nNSSaleEntity thing = agent.CreateDefaultSaleEntity();\nthing = agent.SaveSaleEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSSaleEntity<p></p>\n<pre><code>NSSaleAgent agent;\nNSSaleEntity thing = agent.CreateDefaultSaleEntity();\nthing = agent.SaveSaleEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSSaleEntity CreateDefaultSaleEntity()
@@ -124,7 +124,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSSaleAgent.CreateDefaultSaleStakeholder()
   type: Method
   summary: "\nSet default values into a new NSSaleStakeholder.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSSaleStakeholder<p></p>\n<pre><code>NSSaleAgent agent;\nNSSaleStakeholder thing = agent.CreateDefaultSaleStakeholder();\nthing = agent.SaveSaleStakeholder(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSSaleStakeholder<p></p>\n<pre><code>NSSaleAgent agent;\nNSSaleStakeholder thing = agent.CreateDefaultSaleStakeholder();\nthing = agent.SaveSaleStakeholder(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSSaleStakeholder CreateDefaultSaleStakeholder()
@@ -144,7 +144,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSSaleAgent.CreateDefaultSaleSummary()
   type: Method
   summary: "\nSet default values into a new NSSaleSummary.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSSaleSummary<p></p>\n<pre><code>NSSaleAgent agent;\nNSSaleSummary thing = agent.CreateDefaultSaleSummary();\nthing = agent.SaveSaleSummary(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSSaleSummary<p></p>\n<pre><code>NSSaleAgent agent;\nNSSaleSummary thing = agent.CreateDefaultSaleSummary();\nthing = agent.SaveSaleSummary(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSSaleSummary CreateDefaultSaleSummary()
@@ -166,9 +166,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSSaleEntity\n"
   remarks: 
   syntax: 
-    content: DeleteSaleEntity(Integer saleEntity);
+    content: DeleteSaleEntity(Integer saleEntity)
     parameters:
-    - id: saleEntity;
+    - id: saleEntity
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -186,9 +186,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSSaleStakeholder\n"
   remarks: 
   syntax: 
-    content: DeleteSaleStakeholder(Integer saleStakeholder);
+    content: DeleteSaleStakeholder(Integer saleStakeholder)
     parameters:
-    - id: saleStakeholder;
+    - id: saleStakeholder
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -364,9 +364,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSSale object.\n"
   remarks: 
   syntax: 
-    content: NSSale GetSale(Integer saleId);
+    content: NSSale GetSale(Integer saleId)
     parameters:
-    - id: saleId;
+    - id: saleId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -386,9 +386,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSSaleEntity object.\n"
   remarks: 
   syntax: 
-    content: NSSaleEntity GetSaleEntity(Integer saleEntityId);
+    content: NSSaleEntity GetSaleEntity(Integer saleEntityId)
     parameters:
-    - id: saleEntityId;
+    - id: saleEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -408,9 +408,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets a vector of Sale objects.\n"
   remarks: 
   syntax: 
-    content: NSSale[] GetSaleList(Integer[]  saleIds);
+    content: NSSale[] GetSaleList(Integer[]  saleIds)
     parameters:
-    - id: saleIds;
+    - id: saleIds
       type: CRMScript.Global.Integer[]
       description: 
     return:
@@ -505,9 +505,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSSaleStakeholder object.\n"
   remarks: 
   syntax: 
-    content: NSSaleStakeholder GetSaleStakeholder(Integer saleStakeholderId);
+    content: NSSaleStakeholder GetSaleStakeholder(Integer saleStakeholderId)
     parameters:
-    - id: saleStakeholderId;
+    - id: saleStakeholderId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -548,9 +548,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets a vector of SaleStakeholder objects.\n"
   remarks: 
   syntax: 
-    content: NSSaleStakeholder[] GetSaleStakeholderList(Integer[]  saleStakeholderIds);
+    content: NSSaleStakeholder[] GetSaleStakeholderList(Integer[]  saleStakeholderIds)
     parameters:
-    - id: saleStakeholderIds;
+    - id: saleStakeholderIds
       type: CRMScript.Global.Integer[]
       description: 
     return:
@@ -822,7 +822,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSSaleStakeholder or creates a new NSSaleStakeholder if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>saleStakeholder</strong>The NSSaleStakeholder to save.</li></ul><strong>Returns:</strong>NSSaleStakeholder<p></p>\n<pre><code>NSSale  agent;\nNSSaleStakeholder thing = agent.CreateDefaultSaleStakeholder();\nthing = agent.SaveSaleStakeholder(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSSaleStakeholder SaveSaleStakeholder(NSSaleStakeholder saleStakeholder);
+    content: NSSaleStakeholder SaveSaleStakeholder(NSSaleStakeholder saleStakeholder)
     parameters:
     return:
       type: CRMScript.NetServer.NSSaleStakeholder
