--- a/docs/api-reference/CRMScript.NetServer.NSSelectableMDOListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectableMDOListItem.yml
@@ -187,7 +187,7 @@ items:
   nameWithType: NSSelectableMDOListItem.GetId()
   fullName: CRMScript.NetServer.NSSelectableMDOListItem.GetId()
   type: Method
-  summary: "\nThe Id of the ListItem<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSSelectableMDOListItem thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nThe ID of the ListItem<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSSelectableMDOListItem thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -491,7 +491,7 @@ items:
   nameWithType: NSSelectableMDOListItem.SetId(Integer)
   fullName: CRMScript.NetServer.NSSelectableMDOListItem.SetId(Integer)
   type: Method
-  summary: "\nThe Id of the ListItem\n"
+  summary: "\nThe ID of the ListItem\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
