--- a/docs/api-reference/CRMScript.NetServer.NSSelectionAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSelectionAgent.yml
@@ -313,7 +313,7 @@ items:
   fullName: CRMScript.NetServer.NSSelectionAgent.CreateDefaultMailMergeSettings()
   type: Method
   summary: "\nSet default values into a new NSMailMergeSettings.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSMailMergeSettings<p></p>\n<pre><code>NSSelectionAgent agent;\nNSMailMergeSettings thing = agent.CreateDefaultMailMergeSettings();\nthing = agent.SaveMailMergeSettings(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSMailMergeSettings<p></p>\n<pre><code>NSSelectionAgent agent;\nNSMailMergeSettings thing = agent.CreateDefaultMailMergeSettings();\nthing = agent.SaveMailMergeSettings(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSMailMergeSettings CreateDefaultMailMergeSettings()
@@ -333,7 +333,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSSelectionAgent.CreateDefaultMailMergeTask()
   type: Method
   summary: "\nSet default values into a new NSMailMergeTask.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSMailMergeTask<p></p>\n<pre><code>NSSelectionAgent agent;\nNSMailMergeTask thing = agent.CreateDefaultMailMergeTask();\nthing = agent.SaveMailMergeTask(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSMailMergeTask<p></p>\n<pre><code>NSSelectionAgent agent;\nNSMailMergeTask thing = agent.CreateDefaultMailMergeTask();\nthing = agent.SaveMailMergeTask(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSMailMergeTask CreateDefaultMailMergeTask()
@@ -353,7 +353,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSSelectionAgent.CreateDefaultSelectionEntity()
   type: Method
   summary: "\nSet default values into a new NSSelectionEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSSelectionEntity<p></p>\n<pre><code>NSSelectionAgent agent;\nNSSelectionEntity thing = agent.CreateDefaultSelectionEntity();\nthing = agent.SaveSelectionEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSSelectionEntity<p></p>\n<pre><code>NSSelectionAgent agent;\nNSSelectionEntity thing = agent.CreateDefaultSelectionEntity();\nthing = agent.SaveSelectionEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSSelectionEntity CreateDefaultSelectionEntity()
@@ -620,9 +620,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSSelectionEntity\n"
   remarks: 
   syntax: 
-    content: DeleteSelectionEntity(Integer selectionEntity);
+    content: DeleteSelectionEntity(Integer selectionEntity)
     parameters:
-    - id: selectionEntity;
+    - id: selectionEntity
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -920,9 +920,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSSelectionEntity object.\n"
   remarks: 
   syntax: 
-    content: NSSelectionEntity GetSelectionEntity(Integer selectionEntityId);
+    content: NSSelectionEntity GetSelectionEntity(Integer selectionEntityId)
     parameters:
-    - id: selectionEntityId;
+    - id: selectionEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
