--- a/docs/api-reference/CRMScript.NetServer.NSTag.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTag.yml
@@ -30,7 +30,7 @@ items:
   nameWithType: NSTag.GetId()
   fullName: CRMScript.NetServer.NSTag.GetId()
   type: Method
-  summary: "\nThe Id of the ListItem<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSTag thing;\nInteger id = thing.GetId();</code></pre>\n"
+  summary: "\nThe ID of the ListItem<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSTag thing;\nInteger id = thing.GetId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetId()
@@ -102,7 +102,7 @@ items:
   nameWithType: NSTag.SetId(Integer)
   fullName: CRMScript.NetServer.NSTag.SetId(Integer)
   type: Method
-  summary: "\nThe Id of the ListItem\n"
+  summary: "\nThe ID of the ListItem\n"
   remarks: 
   syntax: 
     content: SetId(Integer id)
