--- a/docs/api-reference/CRMScript.NetServer.NSTicket.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicket.yml
@@ -217,7 +217,7 @@ items:
   nameWithType: NSTicket.GetCategory()
   fullName: CRMScript.NetServer.NSTicket.GetCategory()
   type: Method
-  summary: "\nThe id of the category a ticket is in.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSTicket thing;\nInteger category = thing.GetCategory();</code></pre>\n"
+  summary: "\nThe ID of the category a ticket is in.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSTicket thing;\nInteger category = thing.GetCategory();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetCategory()
@@ -331,7 +331,7 @@ items:
   nameWithType: NSTicket.GetCreatedBy()
   fullName: CRMScript.NetServer.NSTicket.GetCreatedBy()
   type: Method
-  summary: "\nThe id of the user who created the ticket. 1 (system user) if the ticket was created externally<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSTicket thing;\nInteger createdBy = thing.GetCreatedBy();</code></pre>\n"
+  summary: "\nThe ID of the user who created the ticket. 1 (system user) if the ticket was created externally<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSTicket thing;\nInteger createdBy = thing.GetCreatedBy();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetCreatedBy()
@@ -540,7 +540,7 @@ items:
   nameWithType: NSTicket.GetOwnedBy()
   fullName: CRMScript.NetServer.NSTicket.GetOwnedBy()
   type: Method
-  summary: "\nThe id of the user who owns the ticket. 1 (system user) if the ticket is unassigned.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSTicket thing;\nInteger ownedBy = thing.GetOwnedBy();</code></pre>\n"
+  summary: "\nThe ID of the user who owns the ticket. 1 (system user) if the ticket is unassigned.<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSTicket thing;\nInteger ownedBy = thing.GetOwnedBy();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetOwnedBy()
@@ -1162,7 +1162,7 @@ items:
   nameWithType: NSTicket.SetCategory(Integer)
   fullName: CRMScript.NetServer.NSTicket.SetCategory(Integer)
   type: Method
-  summary: "\nThe id of the category a ticket is in.\n"
+  summary: "\nThe ID of the category a ticket is in.\n"
   remarks: 
   syntax: 
     content: SetCategory(Integer category)
@@ -1276,7 +1276,7 @@ items:
   nameWithType: NSTicket.SetCreatedBy(Integer)
   fullName: CRMScript.NetServer.NSTicket.SetCreatedBy(Integer)
   type: Method
-  summary: "\nThe id of the user who created the ticket. 1 (system user) if the ticket was created externally\n"
+  summary: "\nThe ID of the user who created the ticket. 1 (system user) if the ticket was created externally\n"
   remarks: 
   syntax: 
     content: SetCreatedBy(Integer createdBy)
@@ -1487,7 +1487,7 @@ items:
   nameWithType: NSTicket.SetOwnedBy(Integer)
   fullName: CRMScript.NetServer.NSTicket.SetOwnedBy(Integer)
   type: Method
-  summary: "\nThe id of the user who owns the ticket. 1 (system user) if the ticket is unassigned.\n"
+  summary: "\nThe ID of the user who owns the ticket. 1 (system user) if the ticket is unassigned.\n"
   remarks: 
   syntax: 
     content: SetOwnedBy(Integer ownedBy)
