--- a/docs/api-reference/CRMScript.NetServer.NSTicketAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketAgent.yml
@@ -77,7 +77,7 @@ items:
   fullName: CRMScript.NetServer.NSTicketAgent.CreateDefaultAttachmentEntity()
   type: Method
   summary: "\nSet default values into a new NSAttachmentEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSAttachmentEntity<p></p>\n<pre><code>NSTicketAgent agent;\nNSAttachmentEntity thing = agent.CreateDefaultAttachmentEntity();\nthing = agent.SaveAttachmentEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSAttachmentEntity<p></p>\n<pre><code>NSTicketAgent agent;\nNSAttachmentEntity thing = agent.CreateDefaultAttachmentEntity();\nthing = agent.SaveAttachmentEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSAttachmentEntity CreateDefaultAttachmentEntity()
@@ -97,7 +97,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSTicketAgent.CreateDefaultTicketEntity()
   type: Method
   summary: "\nSet default values into a new NSTicketEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSTicketEntity<p></p>\n<pre><code>NSTicketAgent agent;\nNSTicketEntity thing = agent.CreateDefaultTicketEntity();\nthing = agent.SaveTicketEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSTicketEntity<p></p>\n<pre><code>NSTicketAgent agent;\nNSTicketEntity thing = agent.CreateDefaultTicketEntity();\nthing = agent.SaveTicketEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSTicketEntity CreateDefaultTicketEntity()
@@ -117,7 +117,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSTicketAgent.CreateDefaultTicketMessageEntity()
   type: Method
   summary: "\nSet default values into a new NSTicketMessageEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSTicketMessageEntity<p></p>\n<pre><code>NSTicketAgent agent;\nNSTicketMessageEntity thing = agent.CreateDefaultTicketMessageEntity();\nthing = agent.SaveTicketMessageEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSTicketMessageEntity<p></p>\n<pre><code>NSTicketAgent agent;\nNSTicketMessageEntity thing = agent.CreateDefaultTicketMessageEntity();\nthing = agent.SaveTicketMessageEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSTicketMessageEntity CreateDefaultTicketMessageEntity()
@@ -183,9 +183,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSAttachmentEntity object.\n"
   remarks: 
   syntax: 
-    content: NSAttachmentEntity GetAttachmentEntity(Integer attachmentEntityId);
+    content: NSAttachmentEntity GetAttachmentEntity(Integer attachmentEntityId)
     parameters:
-    - id: attachmentEntityId;
+    - id: attachmentEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -249,9 +249,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSTicket object.\n"
   remarks: 
   syntax: 
-    content: NSTicket GetTicket(Integer ticketId);
+    content: NSTicket GetTicket(Integer ticketId)
     parameters:
-    - id: ticketId;
+    - id: ticketId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -293,9 +293,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSTicketEntity object.\n"
   remarks: 
   syntax: 
-    content: NSTicketEntity GetTicketEntity(Integer ticketEntityId);
+    content: NSTicketEntity GetTicketEntity(Integer ticketEntityId)
     parameters:
-    - id: ticketEntityId;
+    - id: ticketEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -315,9 +315,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSTicketMessage object.\n"
   remarks: 
   syntax: 
-    content: NSTicketMessage GetTicketMessage(Integer ticketMessageId);
+    content: NSTicketMessage GetTicketMessage(Integer ticketMessageId)
     parameters:
-    - id: ticketMessageId;
+    - id: ticketMessageId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -337,9 +337,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSTicketMessageEntity object.\n"
   remarks: 
   syntax: 
-    content: NSTicketMessageEntity GetTicketMessageEntity(Integer ticketMessageEntityId);
+    content: NSTicketMessageEntity GetTicketMessageEntity(Integer ticketMessageEntityId)
     parameters:
-    - id: ticketMessageEntityId;
+    - id: ticketMessageEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -507,7 +507,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSAttachmentEntity or creates a new NSAttachmentEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>attachmentEntity</strong>The NSAttachmentEntity to save.</li></ul><strong>Returns:</strong>NSAttachmentEntity<p></p>\n<pre><code>NSTicketAgent agent;\nNSAttachmentEntity thing = agent.CreateDefaultAttachmentEntity();\nthing = agent.SaveAttachmentEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSAttachmentEntity SaveAttachmentEntity(NSAttachmentEntity attachmentEntity);
+    content: NSAttachmentEntity SaveAttachmentEntity(NSAttachmentEntity attachmentEntity)
     parameters:
     return:
       type: CRMScript.NetServer.NSAttachmentEntity
@@ -526,9 +526,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSTicketEntity or creates a new NSTicketEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>ticketEntity</strong>The NSTicketEntity to save.</li></ul><strong>Returns:</strong>NNSTicketEntity<p></p>\n<pre><code>NSTicketAgent agent;\nNSTicketEntity thing = agent.CreateDefaultTicketEntity();\nthing = agent.SaveTicketEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSTicketEntity SaveTicketEntity(NSTicketEntity ticketEntity);
+    content: NSTicketEntity SaveTicketEntity(NSTicketEntity ticketEntity)
     parameters:
-    - id: ticketEntity;
+    - id: ticketEntity
       type: CRMScript.NetServer.NSTicketEntity
       description: 
     return:
@@ -548,7 +548,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSTicketMessageEntity or creates a new NSTicketMessageEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>ticketMessageEntity</strong>The NSTicketMessageEntity to save.</li></ul><strong>Returns:</strong>NSTicketMessageEntity<p></p>\n<pre><code>NSTicketAgent agent;\nNSTicketMessageEntity thing = agent.CreateDefaultTicketMessageEntity();\nthing = agent.SaveTicketMessageEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSTicketMessageEntity SaveTicketMessageEntity(NSTicketMessageEntity ticketMessageEntity);
+    content: NSTicketMessageEntity SaveTicketMessageEntity(NSTicketMessageEntity ticketMessageEntity)
     parameters:
     return:
       type: CRMScript.NetServer.NSTicketMessageEntity
