--- a/docs/api-reference/CRMScript.NetServer.NSTicketCategoryEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketCategoryEntity.yml
@@ -320,7 +320,7 @@ items:
   nameWithType: NSTicketCategoryEntity.GetTicketCategoryId()
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.GetTicketCategoryId()
   type: Method
-  summary: "\nThe id of the ticket category. (primary key)<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSTicketCategoryEntity thing;\nInteger ticketCategoryId = thing.GetTicketCategoryId();</code></pre>\n"
+  summary: "\nThe ID of the ticket category. (primary key)<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSTicketCategoryEntity thing;\nInteger ticketCategoryId = thing.GetTicketCategoryId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetTicketCategoryId()
@@ -625,7 +625,7 @@ items:
   nameWithType: NSTicketCategoryEntity.SetTicketCategoryId(Integer)
   fullName: CRMScript.NetServer.NSTicketCategoryEntity.SetTicketCategoryId(Integer)
   type: Method
-  summary: "\nThe id of the ticket category. (primary key)\n"
+  summary: "\nThe ID of the ticket category. (primary key)\n"
   remarks: 
   syntax: 
     content: SetTicketCategoryId(Integer ticketCategoryId)
