--- a/docs/api-reference/CRMScript.NetServer.NSTicketInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketInfo.yml
@@ -135,7 +135,7 @@ items:
   nameWithType: NSTicketInfo.GetTicketId()
   fullName: CRMScript.NetServer.NSTicketInfo.GetTicketId()
   type: Method
-  summary: "\nThe id of the created ticket<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSTicketInfo thing;\nInteger ticketId = thing.GetTicketId();</code></pre>\n"
+  summary: "\nThe ID of the created ticket<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSTicketInfo thing;\nInteger ticketId = thing.GetTicketId();</code></pre>\n"
   remarks: 
   syntax: 
     content: Integer GetTicketId()
@@ -307,7 +307,7 @@ items:
   nameWithType: NSTicketInfo.SetTicketId(Integer)
   fullName: CRMScript.NetServer.NSTicketInfo.SetTicketId(Integer)
   type: Method
-  summary: "\nThe id of the created ticket\n"
+  summary: "\nThe ID of the created ticket\n"
   remarks: 
   syntax: 
     content: SetTicketId(Integer ticketId)
