--- a/docs/api-reference/CRMScript.NetServer.NSTypicalSearch.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTypicalSearch.yml
@@ -118,7 +118,7 @@ items:
   nameWithType: NSTypicalSearch.GetSource()
   fullName: CRMScript.NetServer.NSTypicalSearch.GetSource()
   type: Method
-  summary: "\nName of organisation that sources and maintains this TypicalSearch. Allows for both SuperOffice and partners to maintain sets of typical searches without conflict<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSTypicalSearch thing;\nString source = thing.GetSource();</code></pre>\n"
+  summary: "\nName of organization that sources and maintains this TypicalSearch. Allows for both SuperOffice and partners to maintain sets of typical searches without conflict<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSTypicalSearch thing;\nString source = thing.GetSource();</code></pre>\n"
   remarks: 
   syntax: 
     content: String GetSource()
@@ -305,7 +305,7 @@ items:
   nameWithType: NSTypicalSearch.SetSource(String)
   fullName: CRMScript.NetServer.NSTypicalSearch.SetSource(String)
   type: Method
-  summary: "\nName of organisation that sources and maintains this TypicalSearch. Allows for both SuperOffice and partners to maintain sets of typical searches without conflict\n"
+  summary: "\nName of organization that sources and maintains this TypicalSearch. Allows for both SuperOffice and partners to maintain sets of typical searches without conflict\n"
   remarks: 
   syntax: 
     content: SetSource(String source)
