--- a/docs/api-reference/CRMScript.NetServer.NSTypicalSearches.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTypicalSearches.yml
@@ -89,7 +89,7 @@ items:
   nameWithType: NSTypicalSearches.GetSource()
   fullName: CRMScript.NetServer.NSTypicalSearches.GetSource()
   type: Method
-  summary: "\nName of organisation that sources and maintains this TypicalSearch. Allows for both SuperOffice and partners to maintain sets of typical searches without conflict<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSTypicalSearches thing;\nString source = thing.GetSource();</code></pre>\n"
+  summary: "\nName of organization that sources and maintains this TypicalSearch. Allows for both SuperOffice and partners to maintain sets of typical searches without conflict<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSTypicalSearches thing;\nString source = thing.GetSource();</code></pre>\n"
   remarks: 
   syntax: 
     content: String GetSource()
@@ -180,7 +180,7 @@ items:
   nameWithType: NSTypicalSearches.SetSource(String)
   fullName: CRMScript.NetServer.NSTypicalSearches.SetSource(String)
   type: Method
-  summary: "\nName of organisation that sources and maintains this TypicalSearch. Allows for both SuperOffice and partners to maintain sets of typical searches without conflict\n"
+  summary: "\nName of organization that sources and maintains this TypicalSearch. Allows for both SuperOffice and partners to maintain sets of typical searches without conflict\n"
   remarks: 
   syntax: 
     content: SetSource(String source)
