--- a/docs/api-reference/CRMScript.NetServer.NSUserAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserAgent.yml
@@ -284,7 +284,7 @@ items:
   fullName: CRMScript.NetServer.NSUserAgent.CreateDefaultRoleEntity()
   type: Method
   summary: "\nSet default values into a new NSRoleEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSRoleEntity<p></p>\n<pre><code>NSUserAgent agent;\nNSRoleEntity thing = agent.CreateDefaultRoleEntity();\nthing = agent.SaveRoleEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSRoleEntity<p></p>\n<pre><code>NSUserAgent agent;\nNSRoleEntity thing = agent.CreateDefaultRoleEntity();\nthing = agent.SaveRoleEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSRoleEntity CreateDefaultRoleEntity()
@@ -326,7 +326,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSUserAgent.CreateDefaultServiceAuth()
   type: Method
   summary: "\nSet default values into a new NSServiceAuth.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSServiceAuth<p></p>\n<pre><code>NSUserAgent agent;\nNSServiceAuth thing = agent.CreateDefaultServiceAuth();\nthing = agent.SaveServiceAuth(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSServiceAuth<p></p>\n<pre><code>NSUserAgent agent;\nNSServiceAuth thing = agent.CreateDefaultServiceAuth();\nthing = agent.SaveServiceAuth(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSServiceAuth CreateDefaultServiceAuth()
@@ -346,7 +346,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSUserAgent.CreateDefaultUntrustedCredentials()
   type: Method
   summary: "\nSet default values into a new NSUntrustedCredentials.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSUntrustedCredentials<p></p>\n<pre><code>NSUserAgent agent;\nNSUntrustedCredentials thing = agent.CreateDefaultUntrustedCredentials();\nthing = agent.SaveUntrustedCredentials(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSUntrustedCredentials<p></p>\n<pre><code>NSUserAgent agent;\nNSUntrustedCredentials thing = agent.CreateDefaultUntrustedCredentials();\nthing = agent.SaveUntrustedCredentials(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSUntrustedCredentials CreateDefaultUntrustedCredentials()
@@ -366,7 +366,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSUserAgent.CreateDefaultUser()
   type: Method
   summary: "\nSet default values into a new NSUser.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSUser<p></p>\n<pre><code>NSUserAgent agent;\nNSUser thing = agent.CreateDefaultUser();\nthing = agent.SaveUser(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSUser<p></p>\n<pre><code>NSUserAgent agent;\nNSUser thing = agent.CreateDefaultUser();\nthing = agent.SaveUser(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSUser CreateDefaultUser()
@@ -609,9 +609,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSServiceAuth\n"
   remarks: 
   syntax: 
-    content: DeleteServiceAuth(Integer serviceAuth);
+    content: DeleteServiceAuth(Integer serviceAuth)
     parameters:
-    - id: serviceAuth;
+    - id: serviceAuth
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -629,9 +629,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSUser\n"
   remarks: 
   syntax: 
-    content: DeleteUser(Integer user);
+    content: DeleteUser(Integer user)
     parameters:
-    - id: user;
+    - id: user
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -1167,9 +1167,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSRole object.\n"
   remarks: 
   syntax: 
-    content: NSRole GetRole(Integer roleId);
+    content: NSRole GetRole(Integer roleId)
     parameters:
-    - id: roleId;
+    - id: roleId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -1189,9 +1189,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSRoleEntity object.\n"
   remarks: 
   syntax: 
-    content: NSRoleEntity GetRoleEntity(Integer roleEntityId);
+    content: NSRoleEntity GetRoleEntity(Integer roleEntityId)
     parameters:
-    - id: roleEntityId;
+    - id: roleEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -1211,9 +1211,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSServiceAuth object.\n"
   remarks: 
   syntax: 
-    content: NSServiceAuth GetServiceAuth(Integer serviceAuthId);
+    content: NSServiceAuth GetServiceAuth(Integer serviceAuthId)
     parameters:
-    - id: serviceAuthId;
+    - id: serviceAuthId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -1280,9 +1280,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSUser object.\n"
   remarks: 
   syntax: 
-    content: NSUser GetUser(Integer userId);
+    content: NSUser GetUser(Integer userId)
     parameters:
-    - id: userId;
+    - id: userId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -1366,9 +1366,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSUserGroup object.\n"
   remarks: 
   syntax: 
-    content: NSUserGroup GetUserGroup(Integer userGroupId);
+    content: NSUserGroup GetUserGroup(Integer userGroupId)
     parameters:
-    - id: userGroupId;
+    - id: userGroupId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -1388,9 +1388,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets a vector of UserGroup objects.\n"
   remarks: 
   syntax: 
-    content: NSUserGroup[] GetUserGroupList(Integer[]  userGroupIds);
+    content: NSUserGroup[] GetUserGroupList(Integer[]  userGroupIds)
     parameters:
-    - id: userGroupIds;
+    - id: userGroupIds
       type: CRMScript.Global.Integer[]
       description: 
     return:
@@ -1410,9 +1410,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSUserInfo object.\n"
   remarks: 
   syntax: 
-    content: NSUserInfo GetUserInfo(Integer userInfoId);
+    content: NSUserInfo GetUserInfo(Integer userInfoId)
     parameters:
-    - id: userInfoId;
+    - id: userInfoId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -1432,9 +1432,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets a vector of NSUserInfo objects.\n"
   remarks: 
   syntax: 
-    content: NSUserInfo[] GetUserInfoList(Integer[]  userInfoIds);
+    content: NSUserInfo[] GetUserInfoList(Integer[]  userInfoIds)
     parameters:
-    - id: userInfoIds;
+    - id: userInfoIds
       type: CRMScript.Global.Integer[]
       description: 
     return:
@@ -1884,9 +1884,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSRoleEntity or creates a new NSRoleEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>roleEntity</strong>The NSRoleEntity to save.</li></ul><strong>Returns:</strong>NSRoleEntity<p></p>\n<pre><code>NSUser  agent;\nNSRoleEntity thing = agent.CreateDefaultRoleEntity();\nthing = agent.SaveRoleEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSRoleEntity SaveRoleEntity(NSRoleEntity roleEntity);
+    content: NSRoleEntity SaveRoleEntity(NSRoleEntity roleEntity)
     parameters:
-    - id: roleEntity;
+    - id: roleEntity
       type: CRMScript.NetServer.NSRoleEntity
       description: 
     return:
@@ -1906,7 +1906,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSServiceAuth or creates a new NSServiceAuth if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>serviceAuth</strong>The NSServiceAuth to save.</li></ul><strong>Returns:</strong>NSServiceAuth<p></p>\n<pre><code>NSUser  agent;\nNSServiceAuth thing = agent.CreateDefaultServiceAuth();\nthing = agent.SaveServiceAuth(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSServiceAuth SaveServiceAuth(NSServiceAuth serviceAuth);
+    content: NSServiceAuth SaveServiceAuth(NSServiceAuth serviceAuth)
     parameters:
     return:
       type: CRMScript.NetServer.NSServiceAuth
@@ -1970,9 +1970,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSUser or creates a new NSUser if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>user</strong>The NSUser to save.</li></ul><strong>Returns:</strong>NSUser<p></p>\n<pre><code>NSUser  agent;\nNSUser thing = agent.CreateDefaultUser();\nthing = agent.SaveUser(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSUser SaveUser(NSUser user);
+    content: NSUser SaveUser(NSUser user)
     parameters:
-    - id: user;
+    - id: user
       type: CRMScript.NetServer.NSUser
       description: 
     return:
