--- a/docs/api-reference/CRMScript.NetServer.NSUserDefinedFieldInfoAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserDefinedFieldInfoAgent.yml
@@ -86,7 +86,7 @@ items:
   fullName: CRMScript.NetServer.NSUserDefinedFieldInfoAgent.CreateDefaultUserDefinedFieldInfo()
   type: Method
   summary: "\nSet default values into a new NSUserDefinedFieldInfo.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSUserDefinedFieldInfo<p></p>\n<pre><code>NSUserDefinedFieldInfoAgent agent;\nNSUserDefinedFieldInfo thing = agent.CreateDefaultUserDefinedFieldInfo();\nthing = agent.SaveUserDefinedFieldInfo(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSUserDefinedFieldInfo<p></p>\n<pre><code>NSUserDefinedFieldInfoAgent agent;\nNSUserDefinedFieldInfo thing = agent.CreateDefaultUserDefinedFieldInfo();\nthing = agent.SaveUserDefinedFieldInfo(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSUserDefinedFieldInfo CreateDefaultUserDefinedFieldInfo()
@@ -133,9 +133,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSUserDefinedFieldInfo\n"
   remarks: 
   syntax: 
-    content: DeleteUserDefinedFieldInfo(Integer userDefinedFieldInfo);
+    content: DeleteUserDefinedFieldInfo(Integer userDefinedFieldInfo)
     parameters:
-    - id: userDefinedFieldInfo;
+    - id: userDefinedFieldInfo
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -486,9 +486,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSUserDefinedFieldInfo object.\n"
   remarks: 
   syntax: 
-    content: NSUserDefinedFieldInfo GetUserDefinedFieldInfo(Integer userDefinedFieldInfoId);
+    content: NSUserDefinedFieldInfo GetUserDefinedFieldInfo(Integer userDefinedFieldInfoId)
     parameters:
-    - id: userDefinedFieldInfoId;
+    - id: userDefinedFieldInfoId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -653,9 +653,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSUserDefinedFieldInfo or creates a new NSUserDefinedFieldInfo if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>userDefinedFieldInfo</strong>The NSUserDefinedFieldInfo to save.</li></ul><strong>Returns:</strong>NSUserDefinedFieldInfo<p></p>\n<pre><code>NSUserDefinedFieldInfo  agent;\nNSUserDefinedFieldInfo thing = agent.CreateDefaultUserDefinedFieldInfo();\nthing = agent.SaveUserDefinedFieldInfo(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSUserDefinedFieldInfo SaveUserDefinedFieldInfo(NSUserDefinedFieldInfo userDefinedFieldInfo);
+    content: NSUserDefinedFieldInfo SaveUserDefinedFieldInfo(NSUserDefinedFieldInfo userDefinedFieldInfo)
     parameters:
-    - id: userDefinedFieldInfo;
+    - id: userDefinedFieldInfo
       type: CRMScript.NetServer.NSUserDefinedFieldInfo
       description: 
     return:
