--- a/docs/api-reference/CRMScript.NetServer.NSViewStateAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSViewStateAgent.yml
@@ -173,9 +173,9 @@ items:
   summary: "\nGets an NSHistory object.\n"
   remarks: 
   syntax: 
-    content: NSHistory GetHistory(Integer historyId);
+    content: NSHistory GetHistory(Integer historyId)
     parameters:
-    - id: historyId;
+    - id: historyId
       type: CRMScript.Global.Integer
       description: 
     return:
