--- a/docs/api-reference/CRMScript.NetServer.NSWebhookAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWebhookAgent.yml
@@ -34,7 +34,7 @@ items:
   fullName: CRMScript.NetServer.NSWebhookAgent.CreateDefaultWebhook()
   type: Method
   summary: "\nSet default values into a new NSWebhook.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>A new NSWebhook with default values.<p></p>\n<pre><code>NSWebhookAgent agent;\nNSWebhook thing = agent.CreateDefaultWebhook();\nthing = agent.SaveWebhook(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>A new NSWebhook with default values.<p></p>\n<pre><code>NSWebhookAgent agent;\nNSWebhook thing = agent.CreateDefaultWebhook();\nthing = agent.SaveWebhook(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSWebhook CreateDefaultWebhook()
@@ -56,9 +56,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSWebhook\n"
   remarks: 
   syntax: 
-    content: DeleteWebhook(Integer webhook);
+    content: DeleteWebhook(Integer webhook)
     parameters:
-    - id: webhook;
+    - id: webhook
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -126,9 +126,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSWebhook object.\n"
   remarks: 
   syntax: 
-    content: NSWebhook GetWebhook(Integer webhookId);
+    content: NSWebhook GetWebhook(Integer webhookId)
     parameters:
-    - id: webhookId;
+    - id: webhookId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -164,9 +164,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSWebhook or creates a new NSWebhook if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>webhook</strong>The NSWebhook to save.</li></ul><strong>Returns:</strong>New or updated NSWebhook<p></p>\n<pre><code>NSWebhook  agent;\nNSWebhook thing = agent.CreateDefaultWebhook();\nthing = agent.SaveWebhook(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSWebhook SaveWebhook(NSWebhook webhook);
+    content: NSWebhook SaveWebhook(NSWebhook webhook)
     parameters:
-    - id: webhook;
+    - id: webhook
       type: CRMScript.NetServer.NSWebhook
       description: 
     return:
