--- a/docs/api-reference/CRMScript.NetServer.NSCRMScriptAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCRMScriptAgent.yml
@@ -50,7 +50,7 @@ items:
   fullName: CRMScript.NetServer.NSCRMScriptAgent.CreateDefaultCRMScriptEntity()
   type: Method
   summary: "\nSet default values into a new NSCRMScriptEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSCRMScriptEntity<p></p>\n<pre><code>NSCRMScriptAgent agent;\nNSCRMScriptEntity thing = agent.CreateDefaultCRMScriptEntity();\nthing = agent.SaveCRMScriptEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSCRMScriptEntity<p></p>\n<pre><code>NSCRMScriptAgent agent;\nNSCRMScriptEntity thing = agent.CreateDefaultCRMScriptEntity();\nthing = agent.SaveCRMScriptEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSCRMScriptEntity CreateDefaultCRMScriptEntity()
@@ -70,7 +70,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSCRMScriptAgent.CreateDefaultTriggerScriptEntity()
   type: Method
   summary: "\nSet default values into a new NSTriggerScriptEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSTriggerScriptEntity<p></p>\n<pre><code>NSCRMScriptAgent agent;\nNSTriggerScriptEntity thing = agent.CreateDefaultTriggerScriptEntity();\nthing = agent.SaveTriggerScriptEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSTriggerScriptEntity<p></p>\n<pre><code>NSCRMScriptAgent agent;\nNSTriggerScriptEntity thing = agent.CreateDefaultTriggerScriptEntity();\nthing = agent.SaveTriggerScriptEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSTriggerScriptEntity CreateDefaultTriggerScriptEntity()
@@ -114,9 +114,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSCRMScriptEntity\n"
   remarks: 
   syntax: 
-    content: DeleteCRMScriptEntity(Integer cRMScriptEntity);
+    content: DeleteCRMScriptEntity(Integer cRMScriptEntity)
     parameters:
-    - id: cRMScriptEntity;
+    - id: cRMScriptEntity
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -156,9 +156,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSTriggerScriptEntity\n"
   remarks: 
   syntax: 
-    content: DeleteTriggerScriptEntity(Integer triggerScriptEntity);
+    content: DeleteTriggerScriptEntity(Integer triggerScriptEntity)
     parameters:
-    - id: triggerScriptEntity;
+    - id: triggerScriptEntity
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -308,9 +308,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSCRMScriptEntity object.\n"
   remarks: 
   syntax: 
-    content: NSCRMScriptEntity GetCRMScriptEntity(Integer cRMScriptEntityId);
+    content: NSCRMScriptEntity GetCRMScriptEntity(Integer cRMScriptEntityId)
     parameters:
-    - id: cRMScriptEntityId;
+    - id: cRMScriptEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -352,9 +352,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSTriggerScriptEntity object.\n"
   remarks: 
   syntax: 
-    content: NSTriggerScriptEntity GetTriggerScriptEntity(Integer triggerScriptEntityId);
+    content: NSTriggerScriptEntity GetTriggerScriptEntity(Integer triggerScriptEntityId)
     parameters:
-    - id: triggerScriptEntityId;
+    - id: triggerScriptEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -415,9 +415,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSCRMScriptEntity or creates a new NSCRMScriptEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>cRMScriptEntity</strong>The NSCRMScriptEntity to save.</li></ul><strong>Returns:</strong>NSCRMScriptEntity<p></p>\n<pre><code>NSCRMScriptAgent  agent;\nNSCRMScriptEntity thing = agent.CreateDefaultCRMScriptEntity();\nthing = agent.SaveCRMScriptEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSCRMScriptEntity SaveCRMScriptEntity(NSCRMScriptEntity cRMScriptEntity);
+    content: NSCRMScriptEntity SaveCRMScriptEntity(NSCRMScriptEntity cRMScriptEntity)
     parameters:
-    - id: cRMScriptEntity;
+    - id: cRMScriptEntity
       type: CRMScript.NetServer.NSCRMScriptEntity
       description: 
     return:
@@ -462,9 +462,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSTriggerScriptEntity or creates a new NSTriggerScriptEntity if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>triggerScriptEntity</strong>The NSTriggerScriptEntity to save.</li></ul><strong>Returns:</strong>NSTriggerScriptEntity<p></p>\n<pre><code>NSCRMScriptAgent  agent;\nNSTriggerScriptEntity thing = agent.CreateDefaultTriggerScriptEntity();\nthing = agent.SaveTriggerScriptEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSTriggerScriptEntity SaveTriggerScriptEntity(NSTriggerScriptEntity triggerScriptEntity);
+    content: NSTriggerScriptEntity SaveTriggerScriptEntity(NSTriggerScriptEntity triggerScriptEntity)
     parameters:
-    - id: triggerScriptEntity;
+    - id: triggerScriptEntity
       type: CRMScript.NetServer.NSTriggerScriptEntity
       description: 
     return:
