--- a/docs/api-reference/CRMScript.NetServer.NSCommandInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSCommandInfo.yml
@@ -3,16 +3,15 @@ items:
 - uid: CRMScript.NetServer.NSCommandInfo
   commentId: T:CRMScript.NetServer.NSCommandInfo
   id: NSCommandInfo
-  so.intellisense: Void.NSCommandInfo
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSCommandInfo.#ctor
   - CRMScript.NetServer.NSCommandInfo.GetDisplayName()
   - CRMScript.NetServer.NSCommandInfo.GetDisplayTooltip()
   - CRMScript.NetServer.NSCommandInfo.GetIconHint()
   - CRMScript.NetServer.NSCommandInfo.GetName()
   - CRMScript.NetServer.NSCommandInfo.GetReturnType()
-  - CRMScript.NetServer.NSCommandInfo.#ctor
   - CRMScript.NetServer.NSCommandInfo.SetDisplayName(String)
   - CRMScript.NetServer.NSCommandInfo.SetDisplayTooltip(String)
   - CRMScript.NetServer.NSCommandInfo.SetIconHint(String)
@@ -24,101 +23,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSCommandInfo.GetDisplayName()
-  commentId: M:CRMScript.NetServer.NSCommandInfo.GetDisplayName()
-  id: 'GetDisplayName()'
-  so.intellisense: NSCommandInfo.GetDisplayName
-  langs:
-  - crmscript
-  name: 'GetDisplayName()'
-  nameWithType: NSCommandInfo.GetDisplayName()
-  fullName: CRMScript.NetServer.NSCommandInfo.GetDisplayName()
-  type: Method
-  summary: "\nDisplay name, shown in menus, command lists and similar GUI elements.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCommandInfo thing;\nString displayName = thing.GetDisplayName();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetDisplayName()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCommandInfo thing;\nString displayName = thing.GetDisplayName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCommandInfo.GetDisplayTooltip()
-  commentId: M:CRMScript.NetServer.NSCommandInfo.GetDisplayTooltip()
-  id: 'GetDisplayTooltip()'
-  so.intellisense: NSCommandInfo.GetDisplayTooltip
-  langs:
-  - crmscript
-  name: 'GetDisplayTooltip()'
-  nameWithType: NSCommandInfo.GetDisplayTooltip()
-  fullName: CRMScript.NetServer.NSCommandInfo.GetDisplayTooltip()
-  type: Method
-  summary: "\nTooltip string associate with the command* can be a literal or a tooltip hint.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCommandInfo thing;\nString displayTooltip = thing.GetDisplayTooltip();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetDisplayTooltip()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCommandInfo thing;\nString displayTooltip = thing.GetDisplayTooltip();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCommandInfo.GetIconHint()
-  commentId: M:CRMScript.NetServer.NSCommandInfo.GetIconHint()
-  id: 'GetIconHint()'
-  so.intellisense: NSCommandInfo.GetIconHint
-  langs:
-  - crmscript
-  name: 'GetIconHint()'
-  nameWithType: NSCommandInfo.GetIconHint()
-  fullName: CRMScript.NetServer.NSCommandInfo.GetIconHint()
-  type: Method
-  summary: "\nIcon hint, which should resolve to an icon that is compatible in size with a standard menu or dropdown list font. May be blank.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCommandInfo thing;\nString iconHint = thing.GetIconHint();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetIconHint()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCommandInfo thing;\nString iconHint = thing.GetIconHint();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCommandInfo.GetName()
-  commentId: M:CRMScript.NetServer.NSCommandInfo.GetName()
-  id: 'GetName()'
-  so.intellisense: NSCommandInfo.GetName
-  langs:
-  - crmscript
-  name: 'GetName()'
-  nameWithType: NSCommandInfo.GetName()
-  fullName: CRMScript.NetServer.NSCommandInfo.GetName()
-  type: Method
-  summary: "\nThe programmatic name of the command, uniquely identifying this command for the document plugin.<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSCommandInfo thing;\nString name = thing.GetName();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetName()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSCommandInfo thing;\nString name = thing.GetName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSCommandInfo.GetReturnType()
-  commentId: M:CRMScript.NetServer.NSCommandInfo.GetReturnType()
-  id: 'GetReturnType()'
-  so.intellisense: NSCommandInfo.GetReturnType
-  langs:
-  - crmscript
-  name: 'GetReturnType()'
-  nameWithType: NSCommandInfo.GetReturnType()
-  fullName: CRMScript.NetServer.NSCommandInfo.GetReturnType()
-  type: Method
-  summary: "\nDeclaration of what kind of return type the execution of this command will give.<p></p>\n<strong>Returns:</strong>Integer\n"
-  remarks: 
-  syntax: 
-    content: Integer GetReturnType()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSCommandInfo thing;\nInteger returnType = thing.GetReturnType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCommandInfo.#ctor
   commentId: M:CRMScript.NetServer.NSCommandInfo.#ctor
   id: '#ctor'
@@ -134,6 +38,106 @@ items:
   syntax: 
     content: NSCommandInfo
   example: 
+- uid: CRMScript.NetServer.NSCommandInfo.GetDisplayName()
+  commentId: M:CRMScript.NetServer.NSCommandInfo.GetDisplayName()
+  id: 'GetDisplayName()'
+  so.intellisense: NSCommandInfo.GetDisplayName
+  langs:
+  - crmscript
+  name: 'GetDisplayName()'
+  nameWithType: NSCommandInfo.GetDisplayName()
+  fullName: CRMScript.NetServer.NSCommandInfo.GetDisplayName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetDisplayName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Display name, shown in menus, command lists and similar GUI elements.
+  example: 
+  - "\n<pre><code>NSCommandInfo thing;\nString displayName = thing.GetDisplayName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCommandInfo.GetDisplayTooltip()
+  commentId: M:CRMScript.NetServer.NSCommandInfo.GetDisplayTooltip()
+  id: 'GetDisplayTooltip()'
+  so.intellisense: NSCommandInfo.GetDisplayTooltip
+  langs:
+  - crmscript
+  name: 'GetDisplayTooltip()'
+  nameWithType: NSCommandInfo.GetDisplayTooltip()
+  fullName: CRMScript.NetServer.NSCommandInfo.GetDisplayTooltip()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetDisplayTooltip()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Tooltip string associate with the command* can be a literal or a tooltip hint.
+  example: 
+  - "\n<pre><code>NSCommandInfo thing;\nString displayTooltip = thing.GetDisplayTooltip();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCommandInfo.GetIconHint()
+  commentId: M:CRMScript.NetServer.NSCommandInfo.GetIconHint()
+  id: 'GetIconHint()'
+  so.intellisense: NSCommandInfo.GetIconHint
+  langs:
+  - crmscript
+  name: 'GetIconHint()'
+  nameWithType: NSCommandInfo.GetIconHint()
+  fullName: CRMScript.NetServer.NSCommandInfo.GetIconHint()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetIconHint()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Icon hint, which should resolve to an icon that is compatible in size with a standard menu or dropdown list font. May be blank.
+  example: 
+  - "\n<pre><code>NSCommandInfo thing;\nString iconHint = thing.GetIconHint();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCommandInfo.GetName()
+  commentId: M:CRMScript.NetServer.NSCommandInfo.GetName()
+  id: 'GetName()'
+  so.intellisense: NSCommandInfo.GetName
+  langs:
+  - crmscript
+  name: 'GetName()'
+  nameWithType: NSCommandInfo.GetName()
+  fullName: CRMScript.NetServer.NSCommandInfo.GetName()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: The programmatic name of the command, uniquely identifying this command for the document plugin.
+  example: 
+  - "\n<pre><code>NSCommandInfo thing;\nString name = thing.GetName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSCommandInfo.GetReturnType()
+  commentId: M:CRMScript.NetServer.NSCommandInfo.GetReturnType()
+  id: 'GetReturnType()'
+  so.intellisense: NSCommandInfo.GetReturnType
+  langs:
+  - crmscript
+  name: 'GetReturnType()'
+  nameWithType: NSCommandInfo.GetReturnType()
+  fullName: CRMScript.NetServer.NSCommandInfo.GetReturnType()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetReturnType()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Declaration of what kind of return type the execution of this command will give.
+  example: 
+  - "\n<pre><code>NSCommandInfo thing;\nInteger returnType = thing.GetReturnType();</code></pre>\n"
 - uid: CRMScript.NetServer.NSCommandInfo.SetDisplayName(String)
   commentId: M:CRMScript.NetServer.NSCommandInfo.SetDisplayName(String)
   id: 'SetDisplayName(String)'
@@ -144,14 +148,16 @@ items:
   nameWithType: NSCommandInfo.SetDisplayName(String)
   fullName: CRMScript.NetServer.NSCommandInfo.SetDisplayName(String)
   type: Method
-  summary: "\nDisplay name, shown in menus, command lists and similar GUI elements.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetDisplayName(String displayName)
+    content: Void SetDisplayName(String displayName)
     parameters:
     - id: displayName
       type: CRMScript.Global.String
-      description: 
+      description: Display name, shown in menus, command lists and similar GUI elements.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCommandInfo thing;\nString displayName;\nthing.SetDisplayName(displayName);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCommandInfo.SetDisplayTooltip(String)
@@ -164,14 +170,16 @@ items:
   nameWithType: NSCommandInfo.SetDisplayTooltip(String)
   fullName: CRMScript.NetServer.NSCommandInfo.SetDisplayTooltip(String)
   type: Method
-  summary: "\nTooltip string associate with the command* can be a literal or a tooltip hint.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetDisplayTooltip(String displayTooltip)
+    content: Void SetDisplayTooltip(String displayTooltip)
     parameters:
     - id: displayTooltip
       type: CRMScript.Global.String
-      description: 
+      description: Tooltip string associate with the command - can be a literal or a tooltip hint.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCommandInfo thing;\nString displayTooltip;\nthing.SetDisplayTooltip(displayTooltip);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCommandInfo.SetIconHint(String)
@@ -184,14 +192,16 @@ items:
   nameWithType: NSCommandInfo.SetIconHint(String)
   fullName: CRMScript.NetServer.NSCommandInfo.SetIconHint(String)
   type: Method
-  summary: "\nIcon hint, which should resolve to an icon that is compatible in size with a standard menu or dropdown list font. May be blank.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetIconHint(String iconHint)
+    content: Void SetIconHint(String iconHint)
     parameters:
     - id: iconHint
       type: CRMScript.Global.String
-      description: 
+      description: Icon hint, which should resolve to an icon that is compatible in size with a standard menu or dropdown list font. May be blank.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCommandInfo thing;\nString iconHint;\nthing.SetIconHint(iconHint);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCommandInfo.SetName(String)
@@ -204,14 +214,16 @@ items:
   nameWithType: NSCommandInfo.SetName(String)
   fullName: CRMScript.NetServer.NSCommandInfo.SetName(String)
   type: Method
-  summary: "\nThe programmatic name of the command, uniquely identifying this command for the document plugin.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetName(String name)
+    content: Void SetName(String name)
     parameters:
     - id: name
       type: CRMScript.Global.String
-      description: 
+      description: The programmatic name of the command, uniquely identifying this command for the document plugin.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCommandInfo thing;\nString name;\nthing.SetName(name);</code></pre>\n"
 - uid: CRMScript.NetServer.NSCommandInfo.SetReturnType(Integer)
@@ -224,14 +236,16 @@ items:
   nameWithType: NSCommandInfo.SetReturnType(Integer)
   fullName: CRMScript.NetServer.NSCommandInfo.SetReturnType(Integer)
   type: Method
-  summary: "\nDeclaration of what kind of return type the execution of this command will give.\n"
-  remarks: "\n<p>See enum ReturnType.</p>\n"
+  summary: ""
+  remarks: 
   syntax: 
-    content: SetReturnType(Integer returnType)
+    content: Void SetReturnType(Integer returnType)
     parameters:
     - id: returnType
       type: CRMScript.Global.Integer
-      description: 
+      description: Declaration of what kind of return type the execution of this command will give. See enum ReturnType.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSCommandInfo thing;\nInteger returnType;\nthing.SetReturnType(returnType);</code></pre>\n"
 references:
@@ -253,3 +267,9 @@ references:
   name: Integer
   nameWithType: Integer
   fullName: CRMScript.Global.Integer
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
