--- a/docs/api-reference/CRMScript.NetServer.NSConsentPerson.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSConsentPerson.yml
@@ -3,22 +3,21 @@ items:
 - uid: CRMScript.NetServer.NSConsentPerson
   commentId: T:CRMScript.NetServer.NSConsentPerson
   id: NSConsentPerson
-  so.intellisense: Void.NSConsentPerson
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSConsentPerson.#ctor
   - CRMScript.NetServer.NSConsentPerson.GetComment()
   - CRMScript.NetServer.NSConsentPerson.GetConsentPersonId()
   - CRMScript.NetServer.NSConsentPerson.GetConsentPurpose()
   - CRMScript.NetServer.NSConsentPerson.GetConsentSource()
   - CRMScript.NetServer.NSConsentPerson.GetLegalBase()
   - CRMScript.NetServer.NSConsentPerson.GetPersonId()
-  - CRMScript.NetServer.NSConsentPerson.#ctor
   - CRMScript.NetServer.NSConsentPerson.SetComment(String)
   - CRMScript.NetServer.NSConsentPerson.SetConsentPersonId(Integer)
   - CRMScript.NetServer.NSConsentPerson.SetConsentPurpose(NSConsentPurpose)
   - CRMScript.NetServer.NSConsentPerson.SetConsentSource(NSConsentSource)
-  - CRMScript.NetServer.NSConsentPerson.SetLegalBase()
+  - CRMScript.NetServer.NSConsentPerson.SetLegalBase(NSLegalBase)
   - CRMScript.NetServer.NSConsentPerson.SetPersonId(Integer)
   name: NSConsentPerson
   nameWithType: NSConsentPerson
@@ -26,120 +25,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSConsentPerson.GetComment()
-  commentId: M:CRMScript.NetServer.NSConsentPerson.GetComment()
-  id: 'GetComment()'
-  so.intellisense: NSConsentPerson.GetComment
-  langs:
-  - crmscript
-  name: 'GetComment()'
-  nameWithType: NSConsentPerson.GetComment()
-  fullName: CRMScript.NetServer.NSConsentPerson.GetComment()
-  type: Method
-  summary: "\nComment regarding this specific consent<p></p>\n<strong>Returns:</strong>String<p></p>\n<pre><code>NSConsentPerson thing;\nString comment = thing.GetComment();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String GetComment()
-    parameters:
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSConsentPerson thing;\nString comment = thing.GetComment();</code></pre>\n"
-- uid: CRMScript.NetServer.NSConsentPerson.GetConsentPersonId()
-  commentId: M:CRMScript.NetServer.NSConsentPerson.GetConsentPersonId()
-  id: 'GetConsentPersonId()'
-  so.intellisense: NSConsentPerson.GetConsentPersonId
-  langs:
-  - crmscript
-  name: 'GetConsentPersonId()'
-  nameWithType: NSConsentPerson.GetConsentPersonId()
-  fullName: CRMScript.NetServer.NSConsentPerson.GetConsentPersonId()
-  type: Method
-  summary: "\nConsentPerson ID<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSConsentPerson thing;\nInteger consentPersonId = thing.GetConsentPersonId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetConsentPersonId()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSConsentPerson thing;\nInteger consentPersonId = thing.GetConsentPersonId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSConsentPerson.GetConsentPurpose()
-  commentId: M:CRMScript.NetServer.NSConsentPerson.GetConsentPurpose()
-  id: 'GetConsentPurpose()'
-  so.intellisense: NSConsentPerson.GetConsentPurpose
-  langs:
-  - crmscript
-  name: 'GetConsentPurpose()'
-  nameWithType: NSConsentPerson.GetConsentPurpose()
-  fullName: CRMScript.NetServer.NSConsentPerson.GetConsentPurpose()
-  type: Method
-  summary: "\nThe consent purpose<p></p>\n<strong>Returns:</strong>NSConsentPurpose<p></p>\n<pre><code>NSConsentPerson thing;\nNSConsentPurpose consentPurpose = thing.GetConsentPurpose();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSConsentPurpose GetConsentPurpose()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSConsentPurpose
-  example: 
-  - "\n<pre><code>NSConsentPerson thing;\nNSConsentPurpose consentPurpose = thing.GetConsentPurpose();</code></pre>\n"
-- uid: CRMScript.NetServer.NSConsentPerson.GetConsentSource()
-  commentId: M:CRMScript.NetServer.NSConsentPerson.GetConsentSource()
-  id: 'GetConsentSource()'
-  so.intellisense: NSConsentPerson.GetConsentSource
-  langs:
-  - crmscript
-  name: 'GetConsentSource()'
-  nameWithType: NSConsentPerson.GetConsentSource()
-  fullName: CRMScript.NetServer.NSConsentPerson.GetConsentSource()
-  type: Method
-  summary: "\nThe consent source<p></p>\n<strong>Returns:</strong>NSConsentSource<p></p>\n<pre><code>NSConsentPerson thing;\nNSConsentSource consentSource = thing.GetConsentSource();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSConsentSource GetConsentSource()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSConsentSource
-  example: 
-  - "\n<pre><code>NSConsentPerson thing;\nNSConsentSource consentSource = thing.GetConsentSource();</code></pre>\n"
-- uid: CRMScript.NetServer.NSConsentPerson.GetLegalBase()
-  commentId: M:CRMScript.NetServer.NSConsentPerson.GetLegalBase()
-  id: 'GetLegalBase()'
-  so.intellisense: NSConsentPerson.GetLegalBase
-  langs:
-  - crmscript
-  name: 'GetLegalBase()'
-  nameWithType: NSConsentPerson.GetLegalBase()
-  fullName: CRMScript.NetServer.NSConsentPerson.GetLegalBase()
-  type: Method
-  summary: "\nThe legal base<p></p>\n<strong>Returns:</strong>NSLegalBase<p></p>\n<pre><code>NSConsentPerson thing;\nNSLegalBase legalBase = thing.GetLegalBase();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSLegalBase GetLegalBase()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSLegalBase
-  example: 
-  - "\n<pre><code>NSConsentPerson thing;\nNSLegalBase legalBase = thing.GetLegalBase();</code></pre>\n"
-- uid: CRMScript.NetServer.NSConsentPerson.GetPersonId()
-  commentId: M:CRMScript.NetServer.NSConsentPerson.GetPersonId()
-  id: 'GetPersonId()'
-  so.intellisense: NSConsentPerson.GetPersonId
-  langs:
-  - crmscript
-  name: 'GetPersonId()'
-  nameWithType: NSConsentPerson.GetPersonId()
-  fullName: CRMScript.NetServer.NSConsentPerson.GetPersonId()
-  type: Method
-  summary: "\nPerson ID<p></p>\n<strong>Returns:</strong>Integer<p></p>\n<pre><code>NSConsentPerson thing;\nInteger personId = thing.GetPersonId();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: Integer GetPersonId()
-    parameters:
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSConsentPerson thing;\nInteger personId = thing.GetPersonId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSConsentPerson.#ctor
   commentId: M:CRMScript.NetServer.NSConsentPerson.#ctor
   id: '#ctor'
@@ -155,6 +40,126 @@ items:
   syntax: 
     content: NSConsentPerson
   example: 
+- uid: CRMScript.NetServer.NSConsentPerson.GetComment()
+  commentId: M:CRMScript.NetServer.NSConsentPerson.GetComment()
+  id: 'GetComment()'
+  so.intellisense: NSConsentPerson.GetComment
+  langs:
+  - crmscript
+  name: 'GetComment()'
+  nameWithType: NSConsentPerson.GetComment()
+  fullName: CRMScript.NetServer.NSConsentPerson.GetComment()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String GetComment()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Comment regarding this specific consent
+  example: 
+  - "\n<pre><code>NSConsentPerson thing;\nString comment = thing.GetComment();</code></pre>\n"
+- uid: CRMScript.NetServer.NSConsentPerson.GetConsentPersonId()
+  commentId: M:CRMScript.NetServer.NSConsentPerson.GetConsentPersonId()
+  id: 'GetConsentPersonId()'
+  so.intellisense: NSConsentPerson.GetConsentPersonId
+  langs:
+  - crmscript
+  name: 'GetConsentPersonId()'
+  nameWithType: NSConsentPerson.GetConsentPersonId()
+  fullName: CRMScript.NetServer.NSConsentPerson.GetConsentPersonId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetConsentPersonId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: ConsentPerson ID
+  example: 
+  - "\n<pre><code>NSConsentPerson thing;\nInteger consentPersonId = thing.GetConsentPersonId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSConsentPerson.GetConsentPurpose()
+  commentId: M:CRMScript.NetServer.NSConsentPerson.GetConsentPurpose()
+  id: 'GetConsentPurpose()'
+  so.intellisense: NSConsentPerson.GetConsentPurpose
+  langs:
+  - crmscript
+  name: 'GetConsentPurpose()'
+  nameWithType: NSConsentPerson.GetConsentPurpose()
+  fullName: CRMScript.NetServer.NSConsentPerson.GetConsentPurpose()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSConsentPurpose GetConsentPurpose()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSConsentPurpose
+      description: The consent purpose
+  example: 
+  - "\n<pre><code>NSConsentPerson thing;\nNSConsentPurpose consentPurpose = thing.GetConsentPurpose();</code></pre>\n"
+- uid: CRMScript.NetServer.NSConsentPerson.GetConsentSource()
+  commentId: M:CRMScript.NetServer.NSConsentPerson.GetConsentSource()
+  id: 'GetConsentSource()'
+  so.intellisense: NSConsentPerson.GetConsentSource
+  langs:
+  - crmscript
+  name: 'GetConsentSource()'
+  nameWithType: NSConsentPerson.GetConsentSource()
+  fullName: CRMScript.NetServer.NSConsentPerson.GetConsentSource()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSConsentSource GetConsentSource()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSConsentSource
+      description: The consent source
+  example: 
+  - "\n<pre><code>NSConsentPerson thing;\nNSConsentSource consentSource = thing.GetConsentSource();</code></pre>\n"
+- uid: CRMScript.NetServer.NSConsentPerson.GetLegalBase()
+  commentId: M:CRMScript.NetServer.NSConsentPerson.GetLegalBase()
+  id: 'GetLegalBase()'
+  so.intellisense: NSConsentPerson.GetLegalBase
+  langs:
+  - crmscript
+  name: 'GetLegalBase()'
+  nameWithType: NSConsentPerson.GetLegalBase()
+  fullName: CRMScript.NetServer.NSConsentPerson.GetLegalBase()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSLegalBase GetLegalBase()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSLegalBase
+      description: The legal base
+  example: 
+  - "\n<pre><code>NSConsentPerson thing;\nNSLegalBase legalBase = thing.GetLegalBase();</code></pre>\n"
+- uid: CRMScript.NetServer.NSConsentPerson.GetPersonId()
+  commentId: M:CRMScript.NetServer.NSConsentPerson.GetPersonId()
+  id: 'GetPersonId()'
+  so.intellisense: NSConsentPerson.GetPersonId
+  langs:
+  - crmscript
+  name: 'GetPersonId()'
+  nameWithType: NSConsentPerson.GetPersonId()
+  fullName: CRMScript.NetServer.NSConsentPerson.GetPersonId()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: Integer GetPersonId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Person ID
+  example: 
+  - "\n<pre><code>NSConsentPerson thing;\nInteger personId = thing.GetPersonId();</code></pre>\n"
 - uid: CRMScript.NetServer.NSConsentPerson.SetComment(String)
   commentId: M:CRMScript.NetServer.NSConsentPerson.SetComment(String)
   id: 'SetComment(String)'
@@ -165,14 +170,16 @@ items:
   nameWithType: NSConsentPerson.SetComment(String)
   fullName: CRMScript.NetServer.NSConsentPerson.SetComment(String)
   type: Method
-  summary: "\nComment regarding this specific consent\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetComment(String comment)
+    content: Void SetComment(String comment)
     parameters:
     - id: comment
       type: CRMScript.Global.String
-      description: 
+      description: Comment regarding this specific consent
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSConsentPerson thing;\nString comment;\nthing.SetComment(comment);</code></pre>\n"
 - uid: CRMScript.NetServer.NSConsentPerson.SetConsentPersonId(Integer)
@@ -185,14 +192,16 @@ items:
   nameWithType: NSConsentPerson.SetConsentPersonId(Integer)
   fullName: CRMScript.NetServer.NSConsentPerson.SetConsentPersonId(Integer)
   type: Method
-  summary: "\nConsentPerson ID\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetConsentPersonId(Integer consentPersonId)
+    content: Void SetConsentPersonId(Integer consentPersonId)
     parameters:
     - id: consentPersonId
       type: CRMScript.Global.Integer
-      description: 
+      description: ConsentPerson ID
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSConsentPerson thing;\nInteger consentPersonId;\nthing.SetConsentPersonId(consentPersonId);</code></pre>\n"
 - uid: CRMScript.NetServer.NSConsentPerson.SetConsentPurpose(NSConsentPurpose)
@@ -205,14 +214,16 @@ items:
   nameWithType: NSConsentPerson.SetConsentPurpose(NSConsentPurpose)
   fullName: CRMScript.NetServer.NSConsentPerson.SetConsentPurpose(NSConsentPurpose)
   type: Method
-  summary: "\nThe consent purpose\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetConsentPurpose(NSConsentPurpose consentPurpose)
+    content: Void SetConsentPurpose(NSConsentPurpose consentPurpose)
     parameters:
     - id: consentPurpose
       type: CRMScript.NetServer.NSConsentPurpose
-      description: 
+      description: The consent purpose
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSConsentPerson thing;\nNSConsentPurpose consentPurpose;\nthing.SetConsentPurpose(consentPurpose);</code></pre>\n"
 - uid: CRMScript.NetServer.NSConsentPerson.SetConsentSource(NSConsentSource)
@@ -225,31 +236,38 @@ items:
   nameWithType: NSConsentPerson.SetConsentSource(NSConsentSource)
   fullName: CRMScript.NetServer.NSConsentPerson.SetConsentSource(NSConsentSource)
   type: Method
-  summary: "\nThe consent source\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetConsentSource(NSConsentSource consentSource)
+    content: Void SetConsentSource(NSConsentSource consentSource)
     parameters:
     - id: consentSource
       type: CRMScript.NetServer.NSConsentSource
-      description: 
+      description: The consent source
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSConsentPerson thing;\nNSConsentSource consentSource;\nthing.SetConsentSource(consentSource);</code></pre>\n"
-- uid: CRMScript.NetServer.NSConsentPerson.SetLegalBase()
-  commentId: M:CRMScript.NetServer.NSConsentPerson.SetLegalBase()
-  id: 'SetLegalBase()'
+- uid: CRMScript.NetServer.NSConsentPerson.SetLegalBase(NSLegalBase)
+  commentId: M:CRMScript.NetServer.NSConsentPerson.SetLegalBase(NSLegalBase)
+  id: 'SetLegalBase(NSLegalBase)'
   so.intellisense: NSConsentPerson.SetLegalBase
   langs:
   - crmscript
-  name: 'SetLegalBase()'
-  nameWithType: NSConsentPerson.SetLegalBase()
-  fullName: CRMScript.NetServer.NSConsentPerson.SetLegalBase()
+  name: 'SetLegalBase(NSLegalBase)'
+  nameWithType: NSConsentPerson.SetLegalBase(NSLegalBase)
+  fullName: CRMScript.NetServer.NSConsentPerson.SetLegalBase(NSLegalBase)
   type: Method
-  summary: "\nThe legal base\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetLegalBase(NSLegalBase legalBase)
+    content: Void SetLegalBase(NSLegalBase legalBase)
     parameters:
+    - id: legalBase
+      type: CRMScript.NetServer.NSLegalBase
+      description: The legal base
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSConsentPerson thing;\nNSLegalBase legalBase;\nthing.SetLegalBase(legalBase);</code></pre>\n"
 - uid: CRMScript.NetServer.NSConsentPerson.SetPersonId(Integer)
@@ -262,14 +280,16 @@ items:
   nameWithType: NSConsentPerson.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSConsentPerson.SetPersonId(Integer)
   type: Method
-  summary: "\nPerson ID\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetPersonId(Integer personId)
+    content: Void SetPersonId(Integer personId)
     parameters:
     - id: personId
       type: CRMScript.Global.Integer
-      description: 
+      description: Person ID
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSConsentPerson thing;\nInteger personId;\nthing.SetPersonId(personId);</code></pre>\n"
 references:
@@ -309,3 +329,9 @@ references:
   name: NSLegalBase
   nameWithType: NSLegalBase
   fullName: CRMScript.NetServer.NSLegalBase
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
