--- a/docs/api-reference/CRMScript.NetServer.NSContactSummary.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSContactSummary.yml
@@ -3,143 +3,28 @@ items:
 - uid: CRMScript.NetServer.NSContactSummary
   commentId: T:CRMScript.NetServer.NSContactSummary
   id: NSContactSummary
-  so.intellisense: Void.NSContactSummary
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSContactSummary.#ctor
   - CRMScript.NetServer.NSContactSummary.GetChats()
   - CRMScript.NetServer.NSContactSummary.GetContact()
   - CRMScript.NetServer.NSContactSummary.GetDocuments()
   - CRMScript.NetServer.NSContactSummary.GetFollowups()
   - CRMScript.NetServer.NSContactSummary.GetSales()
   - CRMScript.NetServer.NSContactSummary.GetTickets()
-  - CRMScript.NetServer.NSContactSummary.#ctor
-  - CRMScript.NetServer.NSContactSummary.SetChats()
-  - CRMScript.NetServer.NSContactSummary.SetContact()
-  - CRMScript.NetServer.NSContactSummary.SetDocuments()
-  - CRMScript.NetServer.NSContactSummary.SetFollowups()
-  - CRMScript.NetServer.NSContactSummary.SetSales()
-  - CRMScript.NetServer.NSContactSummary.SetTickets()
+  - CRMScript.NetServer.NSContactSummary.SetChats(NSChatSummaryItem[])
+  - CRMScript.NetServer.NSContactSummary.SetContact(NSContact)
+  - CRMScript.NetServer.NSContactSummary.SetDocuments(NSActivitySummaryItem[])
+  - CRMScript.NetServer.NSContactSummary.SetFollowups(NSActivitySummaryItem[])
+  - CRMScript.NetServer.NSContactSummary.SetSales(NSSaleSummaryItem[])
+  - CRMScript.NetServer.NSContactSummary.SetTickets((NSTicketSummaryItem[])
   name: NSContactSummary
   nameWithType: NSContactSummary
   fullName: CRMScript.NetServer.NSContactSummary
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSContactSummary.GetChats()
-  commentId: M:CRMScript.NetServer.NSContactSummary.GetChats()
-  id: 'GetChats()'
-  so.intellisense: NSContactSummary.GetChats
-  langs:
-  - crmscript
-  name: 'GetChats()'
-  nameWithType: NSContactSummary.GetChats()
-  fullName: CRMScript.NetServer.NSContactSummary.GetChats()
-  type: Method
-  summary: "\nRecent chats with contact<p></p>\n<strong>Returns:</strong>NSChatSummaryItem[]<p></p>\n<pre><code>NSContactSummary thing;\nNSChatSummaryItem[] chats = thing.GetChats();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSChatSummaryItem[] GetChats()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSChatSummaryItem[]
-  example: 
-  - "\n<pre><code>NSContactSummary thing;\nNSChatSummaryItem[] chats = thing.GetChats();</code></pre>\n"
-- uid: CRMScript.NetServer.NSContactSummary.GetContact()
-  commentId: M:CRMScript.NetServer.NSContactSummary.GetContact()
-  id: 'GetContact()'
-  so.intellisense: NSContactSummary.GetContact
-  langs:
-  - crmscript
-  name: 'GetContact()'
-  nameWithType: NSContactSummary.GetContact()
-  fullName: CRMScript.NetServer.NSContactSummary.GetContact()
-  type: Method
-  summary: "\nSimple Contact data.<p></p>\n<strong>Returns:</strong>NSContact<p></p>\n<pre><code>NSContactSummary thing;\nNSContact contact = thing.GetContact();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSContact GetContact()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSContact
-  example: 
-  - "\n<pre><code>NSContactSummary thing;\nNSContact contact = thing.GetContact();</code></pre>\n"
-- uid: CRMScript.NetServer.NSContactSummary.GetDocuments()
-  commentId: M:CRMScript.NetServer.NSContactSummary.GetDocuments()
-  id: 'GetDocuments()'
-  so.intellisense: NSContactSummary.GetDocuments
-  langs:
-  - crmscript
-  name: 'GetDocuments()'
-  nameWithType: NSContactSummary.GetDocuments()
-  fullName: CRMScript.NetServer.NSContactSummary.GetDocuments()
-  type: Method
-  summary: "\nRecent documents on contact<p></p>\n<strong>Returns:</strong>NSActivitySummaryItem[]<p></p>\n<pre><code>NSContactSummary thing;\nNSActivitySummaryItem[] documents = thing.GetDocuments();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSActivitySummaryItem[] GetDocuments()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSActivitySummaryItem[]
-  example: 
-  - "\n<pre><code>NSContactSummary thing;\nNSActivitySummaryItem[] documents = thing.GetDocuments();</code></pre>\n"
-- uid: CRMScript.NetServer.NSContactSummary.GetFollowups()
-  commentId: M:CRMScript.NetServer.NSContactSummary.GetFollowups()
-  id: 'GetFollowups()'
-  so.intellisense: NSContactSummary.GetFollowups
-  langs:
-  - crmscript
-  name: 'GetFollowups()'
-  nameWithType: NSContactSummary.GetFollowups()
-  fullName: CRMScript.NetServer.NSContactSummary.GetFollowups()
-  type: Method
-  summary: "\nRecent follow-ups on contact<p></p>\n<strong>Returns:</strong>NSActivitySummaryItem[]<p></p>\n<pre><code>NSContactSummary thing;\nNSActivitySummaryItem[] followups = thing.GetFollowups();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSActivitySummaryItem[] GetFollowups()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSActivitySummaryItem[]
-  example: 
-  - "\n<pre><code>NSContactSummary thing;\nNSActivitySummaryItem[] followups = thing.GetFollowups();</code></pre>\n"
-- uid: CRMScript.NetServer.NSContactSummary.GetSales()
-  commentId: M:CRMScript.NetServer.NSContactSummary.GetSales()
-  id: 'GetSales()'
-  so.intellisense: NSContactSummary.GetSales
-  langs:
-  - crmscript
-  name: 'GetSales()'
-  nameWithType: NSContactSummary.GetSales()
-  fullName: CRMScript.NetServer.NSContactSummary.GetSales()
-  type: Method
-  summary: "\nRecent sales on contact<p></p>\n<strong>Returns:</strong>NSSaleSummaryItem[]<p></p>\n<pre><code>NSContactSummary thing;\nNSSaleSummaryItem[] sales = thing.GetSales();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSSaleSummaryItem[] GetSales()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSSaleSummaryItem[]
-  example: 
-  - "\n<pre><code>NSContactSummary thing;\nNSSaleSummaryItem[] sales = thing.GetSales();</code></pre>\n"
-- uid: CRMScript.NetServer.NSContactSummary.GetTickets()
-  commentId: M:CRMScript.NetServer.NSContactSummary.GetTickets()
-  id: 'GetTickets()'
-  so.intellisense: NSContactSummary.GetTickets
-  langs:
-  - crmscript
-  name: 'GetTickets()'
-  nameWithType: NSContactSummary.GetTickets()
-  fullName: CRMScript.NetServer.NSContactSummary.GetTickets()
-  type: Method
-  summary: "\nRecent tickets on contact<p></p>\n<strong>Returns:</strong>NSTicketSummaryItem[]<p></p>\n<pre><code>NSContactSummary thing;\nNSTicketSummaryItem[] tickets = thing.GetTickets();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: NSTicketSummaryItem[] GetTickets()
-    parameters:
-    return:
-      type: CRMScript.NetServer.NSTicketSummaryItem[]
-  example: 
-  - "\n<pre><code>NSContactSummary thing;\nNSTicketSummaryItem[] tickets = thing.GetTickets();</code></pre>\n"
 - uid: CRMScript.NetServer.NSContactSummary.#ctor
   commentId: M:CRMScript.NetServer.NSContactSummary.#ctor
   id: '#ctor'
@@ -155,106 +40,256 @@ items:
   syntax: 
     content: NSContactSummary
   example: 
-- uid: CRMScript.NetServer.NSContactSummary.SetChats()
-  commentId: M:CRMScript.NetServer.NSContactSummary.SetChats()
-  id: 'SetChats()'
+- uid: CRMScript.NetServer.NSContactSummary.GetChats()
+  commentId: M:CRMScript.NetServer.NSContactSummary.GetChats()
+  id: 'GetChats()'
+  so.intellisense: NSContactSummary.GetChats
+  langs:
+  - crmscript
+  name: 'GetChats()'
+  nameWithType: NSContactSummary.GetChats()
+  fullName: CRMScript.NetServer.NSContactSummary.GetChats()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSChatSummaryItem[] GetChats()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSChatSummaryItem[]
+      description: Recent chats with contact
+  example: 
+  - "\n<pre><code>NSContactSummary thing;\nNSChatSummaryItem[] chats = thing.GetChats();</code></pre>\n"
+- uid: CRMScript.NetServer.NSContactSummary.GetContact()
+  commentId: M:CRMScript.NetServer.NSContactSummary.GetContact()
+  id: 'GetContact()'
+  so.intellisense: NSContactSummary.GetContact
+  langs:
+  - crmscript
+  name: 'GetContact()'
+  nameWithType: NSContactSummary.GetContact()
+  fullName: CRMScript.NetServer.NSContactSummary.GetContact()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSContact GetContact()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSContact
+      description: Simple Contact data.
+  example: 
+  - "\n<pre><code>NSContactSummary thing;\nNSContact contact = thing.GetContact();</code></pre>\n"
+- uid: CRMScript.NetServer.NSContactSummary.GetDocuments()
+  commentId: M:CRMScript.NetServer.NSContactSummary.GetDocuments()
+  id: 'GetDocuments()'
+  so.intellisense: NSContactSummary.GetDocuments
+  langs:
+  - crmscript
+  name: 'GetDocuments()'
+  nameWithType: NSContactSummary.GetDocuments()
+  fullName: CRMScript.NetServer.NSContactSummary.GetDocuments()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSActivitySummaryItem[] GetDocuments()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSActivitySummaryItem[]
+      description: Recent documents on contact
+  example: 
+  - "\n<pre><code>NSContactSummary thing;\nNSActivitySummaryItem[] documents = thing.GetDocuments();</code></pre>\n"
+- uid: CRMScript.NetServer.NSContactSummary.GetFollowups()
+  commentId: M:CRMScript.NetServer.NSContactSummary.GetFollowups()
+  id: 'GetFollowups()'
+  so.intellisense: NSContactSummary.GetFollowups
+  langs:
+  - crmscript
+  name: 'GetFollowups()'
+  nameWithType: NSContactSummary.GetFollowups()
+  fullName: CRMScript.NetServer.NSContactSummary.GetFollowups()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSActivitySummaryItem[] GetFollowups()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSActivitySummaryItem[]
+      description: Recent follow-ups on contact
+  example: 
+  - "\n<pre><code>NSContactSummary thing;\nNSActivitySummaryItem[] followups = thing.GetFollowups();</code></pre>\n"
+- uid: CRMScript.NetServer.NSContactSummary.GetSales()
+  commentId: M:CRMScript.NetServer.NSContactSummary.GetSales()
+  id: 'GetSales()'
+  so.intellisense: NSContactSummary.GetSales
+  langs:
+  - crmscript
+  name: 'GetSales()'
+  nameWithType: NSContactSummary.GetSales()
+  fullName: CRMScript.NetServer.NSContactSummary.GetSales()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSSaleSummaryItem[] GetSales()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSSaleSummaryItem[]
+      description: Recent sales on contact
+  example: 
+  - "\n<pre><code>NSContactSummary thing;\nNSSaleSummaryItem[] sales = thing.GetSales();</code></pre>\n"
+- uid: CRMScript.NetServer.NSContactSummary.GetTickets()
+  commentId: M:CRMScript.NetServer.NSContactSummary.GetTickets()
+  id: 'GetTickets()'
+  so.intellisense: NSContactSummary.GetTickets
+  langs:
+  - crmscript
+  name: 'GetTickets()'
+  nameWithType: NSContactSummary.GetTickets()
+  fullName: CRMScript.NetServer.NSContactSummary.GetTickets()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: NSTicketSummaryItem[] GetTickets()
+    parameters: []
+    return:
+      type: CRMScript.NetServer.NSTicketSummaryItem[]
+      description: Recent tickets on contact
+  example: 
+  - "\n<pre><code>NSContactSummary thing;\nNSTicketSummaryItem[] tickets = thing.GetTickets();</code></pre>\n"
+- uid: CRMScript.NetServer.NSContactSummary.SetChats(NSChatSummaryItem[])
+  commentId: M:CRMScript.NetServer.NSContactSummary.SetChats(NSChatSummaryItem[])
+  id: 'SetChats(NSChatSummaryItem[])'
   so.intellisense: NSContactSummary.SetChats
   langs:
   - crmscript
-  name: 'SetChats()'
-  nameWithType: NSContactSummary.SetChats()
-  fullName: CRMScript.NetServer.NSContactSummary.SetChats()
+  name: 'SetChats(NSChatSummaryItem[])'
+  nameWithType: NSContactSummary.SetChats(NSChatSummaryItem[])
+  fullName: CRMScript.NetServer.NSContactSummary.SetChats(NSChatSummaryItem[])
   type: Method
-  summary: "\nRecent chats with contact\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetChats(NSChatSummaryItem[] chats)
+    content: Void SetChats(NSChatSummaryItem[] chats)
     parameters:
+    - id: chats
+      type: CRMScript.NetServer.NSChatSummaryItem[]
+      description: Recent chats with contact
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSContactSummary thing;\nNSChatSummaryItem[] chats;\nthing.SetChats(chats);</code></pre>\n"
-- uid: CRMScript.NetServer.NSContactSummary.SetContact()
-  commentId: M:CRMScript.NetServer.NSContactSummary.SetContact()
-  id: 'SetContact()'
+- uid: CRMScript.NetServer.NSContactSummary.SetContact(NSContact)
+  commentId: M:CRMScript.NetServer.NSContactSummary.SetContact(NSContact)
+  id: 'SetContact(NSContact)'
   so.intellisense: NSContactSummary.SetContact
   langs:
   - crmscript
-  name: 'SetContact()'
-  nameWithType: NSContactSummary.SetContact()
-  fullName: CRMScript.NetServer.NSContactSummary.SetContact()
+  name: 'SetContact(NSContact)'
+  nameWithType: NSContactSummary.SetContact(NSContact)
+  fullName: CRMScript.NetServer.NSContactSummary.SetContact(NSContact)
   type: Method
-  summary: "\nSimple Contact data.\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetContact(NSContact contact)
+    content: Void SetContact(NSContact contact)
     parameters:
+    - id: contact
+      type: CRMScript.NetServer.NSContact
+      description: Simple Contact data.
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSContactSummary thing;\nNSContact contact;\nthing.SetContact(contact);</code></pre>\n"
-- uid: CRMScript.NetServer.NSContactSummary.SetDocuments()
-  commentId: M:CRMScript.NetServer.NSContactSummary.SetDocuments()
-  id: 'SetDocuments()'
+- uid: CRMScript.NetServer.NSContactSummary.SetDocuments(NSActivitySummaryItem[])
+  commentId: M:CRMScript.NetServer.NSContactSummary.SetDocuments(NSActivitySummaryItem[])
+  id: 'SetDocuments(NSActivitySummaryItem[])'
   so.intellisense: NSContactSummary.SetDocuments
   langs:
   - crmscript
-  name: 'SetDocuments()'
-  nameWithType: NSContactSummary.SetDocuments()
-  fullName: CRMScript.NetServer.NSContactSummary.SetDocuments()
+  name: 'SetDocuments(NSActivitySummaryItem[])'
+  nameWithType: NSContactSummary.SetDocuments(NSActivitySummaryItem[])
+  fullName: CRMScript.NetServer.NSContactSummary.SetDocuments(NSActivitySummaryItem[])
   type: Method
-  summary: "\nRecent documents on contact\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetDocuments(NSActivitySummaryItem[] documents)
+    content: Void SetDocuments(NSActivitySummaryItem[] documents)
     parameters:
+    - id: documents
+      type: CRMScript.NetServer.NSActivitySummaryItem[]
+      description: Recent documents on contact
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSContactSummary thing;\nNSActivitySummaryItem[] documents;\nthing.SetDocuments(documents);</code></pre>\n"
-- uid: CRMScript.NetServer.NSContactSummary.SetFollowups()
-  commentId: M:CRMScript.NetServer.NSContactSummary.SetFollowups()
-  id: 'SetFollowups()'
+- uid: CRMScript.NetServer.NSContactSummary.SetFollowups(NSActivitySummaryItem[])
+  commentId: M:CRMScript.NetServer.NSContactSummary.SetFollowups(NSActivitySummaryItem[])
+  id: 'SetFollowups(NSActivitySummaryItem[])'
   so.intellisense: NSContactSummary.SetFollowups
   langs:
   - crmscript
-  name: 'SetFollowups()'
-  nameWithType: NSContactSummary.SetFollowups()
-  fullName: CRMScript.NetServer.NSContactSummary.SetFollowups()
+  name: 'SetFollowups(NSActivitySummaryItem[])'
+  nameWithType: NSContactSummary.SetFollowups(NSActivitySummaryItem[])
+  fullName: CRMScript.NetServer.NSContactSummary.SetFollowups(NSActivitySummaryItem[])
   type: Method
-  summary: "\nRecent follow-ups on contact\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetFollowups(NSActivitySummaryItem[] followups)
+    content: Void SetFollowups(NSActivitySummaryItem[] followups)
     parameters:
+    - id: followups
+      type: CRMScript.NetServer.NSActivitySummaryItem[]
+      description: Recent follow-ups on contact
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSContactSummary thing;\nNSActivitySummaryItem[] followups;\nthing.SetFollowups(followups);</code></pre>\n"
-- uid: CRMScript.NetServer.NSContactSummary.SetSales()
-  commentId: M:CRMScript.NetServer.NSContactSummary.SetSales()
-  id: 'SetSales()'
+- uid: CRMScript.NetServer.NSContactSummary.SetSales(NSSaleSummaryItem[])
+  commentId: M:CRMScript.NetServer.NSContactSummary.SetSales(NSSaleSummaryItem[])
+  id: 'SetSales(NSSaleSummaryItem[])'
   so.intellisense: NSContactSummary.SetSales
   langs:
   - crmscript
-  name: 'SetSales()'
-  nameWithType: NSContactSummary.SetSales()
-  fullName: CRMScript.NetServer.NSContactSummary.SetSales()
+  name: 'SetSales(NSSaleSummaryItem[])'
+  nameWithType: NSContactSummary.SetSales(NSSaleSummaryItem[])
+  fullName: CRMScript.NetServer.NSContactSummary.SetSales(NSSaleSummaryItem[])
   type: Method
-  summary: "\nRecent sales on contact\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetSales(NSSaleSummaryItem[] sales)
+    content: Void SetSales(NSSaleSummaryItem[] sales)
     parameters:
+    - id: sales
+      type: CRMScript.NetServer.NSSaleSummaryItem[]
+      description: Recent sales on contact
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSContactSummary thing;\nNSSaleSummaryItem[] sales;\nthing.SetSales(sales);</code></pre>\n"
-- uid: CRMScript.NetServer.NSContactSummary.SetTickets()
-  commentId: M:CRMScript.NetServer.NSContactSummary.SetTickets()
-  id: 'SetTickets()'
+- uid: CRMScript.NetServer.NSContactSummary.SetTickets((NSTicketSummaryItem[])
+  commentId: M:CRMScript.NetServer.NSContactSummary.SetTickets((NSTicketSummaryItem[])
+  id: 'SetTickets((NSTicketSummaryItem[])'
   so.intellisense: NSContactSummary.SetTickets
   langs:
   - crmscript
-  name: 'SetTickets()'
-  nameWithType: NSContactSummary.SetTickets()
-  fullName: CRMScript.NetServer.NSContactSummary.SetTickets()
+  name: 'SetTickets((NSTicketSummaryItem[])'
+  nameWithType: NSContactSummary.SetTickets((NSTicketSummaryItem[])
+  fullName: CRMScript.NetServer.NSContactSummary.SetTickets((NSTicketSummaryItem[])
   type: Method
-  summary: "\nRecent tickets on contact\n"
+  summary: ""
   remarks: 
   syntax: 
-    content: SetTickets(NSTicketSummaryItem[] tickets)
+    content: Void SetTickets(NSTicketSummaryItem[] tickets)
     parameters:
+    - id: tickets
+      type: CRMScript.NetServer.NSTicketSummaryItem[]
+      description: Recent tickets on contact
+    return:
+      type: CRMScript.Global.Void
   example: 
   - "\n<pre><code>NSContactSummary thing;\nNSTicketSummaryItem[] tickets;\nthing.SetTickets(tickets);</code></pre>\n"
 references:
@@ -350,3 +385,9 @@ references:
   name: NSTicketSummaryItem
   nameWithType: NSTicketSummaryItem
   fullName: CRMScript.NetServer.NSTicketSummaryItem
+- uid: CRMScript.Global.Void
+  commentId: T:CRMScript.Global.Void
+  isExternal: true
+  name: Void
+  nameWithType: Void
+  fullName: CRMScript.Global.Void
