--- a/docs/api-reference/CRMScript.NetServer.NSProjectAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSProjectAgent.yml
@@ -100,7 +100,7 @@ items:
   fullName: CRMScript.NetServer.NSProjectAgent.CreateDefaultProjectEntity()
   type: Method
   summary: "\nSet default values into a new NSProjectEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSProjectEntity<p></p>\n<pre><code>NSProjectAgent agent;\nNSProjectEntity thing = agent.CreateDefaultProjectEntity();\nthing = agent.SaveProjectEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSProjectEntity<p></p>\n<pre><code>NSProjectAgent agent;\nNSProjectEntity thing = agent.CreateDefaultProjectEntity();\nthing = agent.SaveProjectEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSProjectEntity CreateDefaultProjectEntity()
@@ -120,7 +120,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSProjectAgent.CreateDefaultProjectEventEntity()
   type: Method
   summary: "\nSet default values into a new NSProjectEventEntity.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSProjectEventEntity<p></p>\n<pre><code>NSProjectAgent agent;\nNSProjectEventEntity thing = agent.CreateDefaultProjectEventEntity();\nthing = agent.SaveProjectEventEntity(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSProjectEventEntity<p></p>\n<pre><code>NSProjectAgent agent;\nNSProjectEventEntity thing = agent.CreateDefaultProjectEventEntity();\nthing = agent.SaveProjectEventEntity(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSProjectEventEntity CreateDefaultProjectEventEntity()
@@ -140,7 +140,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSProjectAgent.CreateDefaultProjectMember()
   type: Method
   summary: "\nSet default values into a new NSProjectMember.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSProjectMember<p></p>\n<pre><code>NSProjectAgent agent;\nNSProjectMember thing = agent.CreateDefaultProjectMember();\nthing = agent.SaveProjectMember(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSProjectMember<p></p>\n<pre><code>NSProjectAgent agent;\nNSProjectMember thing = agent.CreateDefaultProjectMember();\nthing = agent.SaveProjectMember(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSProjectMember CreateDefaultProjectMember()
@@ -181,9 +181,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSProjectEntity\n"
   remarks: 
   syntax: 
-    content: DeleteProjectEntity(Integer projectEntity);
+    content: DeleteProjectEntity(Integer projectEntity)
     parameters:
-    - id: projectEntity;
+    - id: projectEntity
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -201,9 +201,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSProjectEventEntity\n"
   remarks: 
   syntax: 
-    content: DeleteProjectEventEntity(Integer projectEventEntity);
+    content: DeleteProjectEventEntity(Integer projectEventEntity)
     parameters:
-    - id: projectEventEntity;
+    - id: projectEventEntity
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -243,9 +243,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSProjectMember\n"
   remarks: 
   syntax: 
-    content: DeleteProjectMember(Integer projectMember);
+    content: DeleteProjectMember(Integer projectMember)
     parameters:
-    - id: projectMember;
+    - id: projectMember
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -471,9 +471,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSProject object.\n"
   remarks: 
   syntax: 
-    content: NSProject GetProject(Integer projectId);
+    content: NSProject GetProject(Integer projectId)
     parameters:
-    - id: projectId;
+    - id: projectId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -493,9 +493,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSProjectEntity object.\n"
   remarks: 
   syntax: 
-    content: NSProjectEntity GetProjectEntity(Integer projectEntityId);
+    content: NSProjectEntity GetProjectEntity(Integer projectEntityId)
     parameters:
-    - id: projectEntityId;
+    - id: projectEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -515,9 +515,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSProjectEvent object.\n"
   remarks: 
   syntax: 
-    content: NSProjectEvent GetProjectEvent(Integer projectEventId);
+    content: NSProjectEvent GetProjectEvent(Integer projectEventId)
     parameters:
-    - id: projectEventId;
+    - id: projectEventId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -537,9 +537,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSProjectEventEntity object.\n"
   remarks: 
   syntax: 
-    content: NSProjectEventEntity GetProjectEventEntity(Integer projectEventEntityId);
+    content: NSProjectEventEntity GetProjectEventEntity(Integer projectEventEntityId)
     parameters:
-    - id: projectEventEntityId;
+    - id: projectEventEntityId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -581,9 +581,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets a vector of NSProjectEvent objects.\n"
   remarks: 
   syntax: 
-    content: NSProjectEvent[] GetProjectEventList(Integer[]  projectEventIds);
+    content: NSProjectEvent[] GetProjectEventList(Integer[]  projectEventIds)
     parameters:
-    - id: projectEventIds;
+    - id: projectEventIds
       type: CRMScript.Global.Integer[]
       description: 
     return:
@@ -671,9 +671,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets a vector of Project objects.\n"
   remarks: 
   syntax: 
-    content: NSProject[] GetProjectList(Integer[]  projectIds);
+    content: NSProject[] GetProjectList(Integer[]  projectIds)
     parameters:
-    - id: projectIds;
+    - id: projectIds
       type: CRMScript.Global.Integer[]
       description: 
     return:
@@ -693,9 +693,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSProjectMember object.\n"
   remarks: 
   syntax: 
-    content: NSProjectMember GetProjectMember(Integer projectMemberId);
+    content: NSProjectMember GetProjectMember(Integer projectMemberId)
     parameters:
-    - id: projectMemberId;
+    - id: projectMemberId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -1038,9 +1038,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSProjectMember or creates a new NSProjectMember if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>projectMember</strong>The NSProjectMember to save.</li></ul><strong>Returns:</strong>NSProjectMember<p></p>\n<pre><code>NSProject  agent;\nNSProjectMember thing = agent.CreateDefaultProjectMember();\nthing = agent.SaveProjectMember(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSProjectMember SaveProjectMember(NSProjectMember projectMember);
+    content: NSProjectMember SaveProjectMember(NSProjectMember projectMember)
     parameters:
-    - id: projectMember;
+    - id: projectMember
       type: CRMScript.NetServer.NSProjectMember
       description: 
     return:
