--- a/docs/api-reference/CRMScript.NetServer.NSQuoteAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSQuoteAgent.yml
@@ -361,7 +361,7 @@ items:
   fullName: CRMScript.NetServer.NSQuoteAgent.CreateDefaultPriceList()
   type: Method
   summary: "\nSet default values into a new NSPriceList.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSPriceList<p></p>\n<pre><code>NSQuoteAgent agent;\nNSPriceList thing = agent.CreateDefaultPriceList();\nthing = agent.SavePriceList(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSPriceList<p></p>\n<pre><code>NSQuoteAgent agent;\nNSPriceList thing = agent.CreateDefaultPriceList();\nthing = agent.SavePriceList(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSPriceList CreateDefaultPriceList()
@@ -380,7 +380,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   nameWithType: NSQuoteAgent.CreateDefaultProduct()
   fullName: CRMScript.NetServer.NSQuoteAgent.CreateDefaultProduct()
   type: Method
-  summary: "\nSet default values into a new NSProduct.<p></p>\nNetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSProduct<p></p>\n<pre><code>NSQuoteAgent agent;\nNSProduct thing = agent.CreateDefaultProduct();\nthing = agent.SaveProduct(thing);</code></pre>\n"
+  summary: "\nSet default values into a new NSProduct.<p></p>\nNetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSProduct<p></p>\n<pre><code>NSQuoteAgent agent;\nNSProduct thing = agent.CreateDefaultProduct();\nthing = agent.SaveProduct(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSProduct CreateDefaultProduct()
@@ -399,7 +399,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   nameWithType: NSQuoteAgent.CreateDefaultQuoteAlternative()
   fullName: CRMScript.NetServer.NSQuoteAgent.CreateDefaultQuoteAlternative()
   type: Method
-  summary: "\nSet default values into a new NSQuoteAlternative.<p></p>\nNetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSQuoteAlternative<p></p>\n<pre><code>NSQuoteAgent agent;\nNSQuoteAlternative thing = agent.CreateDefaultQuoteAlternative();\nthing = agent.SaveQuoteAlternative(thing);</code></pre>\n"
+  summary: "\nSet default values into a new NSQuoteAlternative.<p></p>\nNetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSQuoteAlternative<p></p>\n<pre><code>NSQuoteAgent agent;\nNSQuoteAlternative thing = agent.CreateDefaultQuoteAlternative();\nthing = agent.SaveQuoteAlternative(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSQuoteAlternative CreateDefaultQuoteAlternative()
@@ -543,9 +543,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSPriceList\n"
   remarks: 
   syntax: 
-    content: DeletePriceList(Integer priceList);
+    content: DeletePriceList(Integer priceList)
     parameters:
-    - id: priceList;
+    - id: priceList
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -563,9 +563,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nDeletes the NSProduct\n"
   remarks: 
   syntax: 
-    content: DeleteProduct(Integer product);
+    content: DeleteProduct(Integer product)
     parameters:
-    - id: product;
+    - id: product
       type: CRMScript.Global.Integer
       description: 
   example: 
@@ -1192,9 +1192,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSPriceList object.\n"
   remarks: 
   syntax: 
-    content: NSPriceList GetPriceList(Integer priceListId);
+    content: NSPriceList GetPriceList(Integer priceListId)
     parameters:
-    - id: priceListId;
+    - id: priceListId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -1310,9 +1310,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nGets an NSQuoteAlternative object.\n"
   remarks: 
   syntax: 
-    content: NSQuoteAlternative GetQuoteAlternative(Integer quoteAlternativeId);
+    content: NSQuoteAlternative GetQuoteAlternative(Integer quoteAlternativeId)
     parameters:
-    - id: quoteAlternativeId;
+    - id: quoteAlternativeId
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -1978,9 +1978,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSPriceList or creates a new NSPriceList if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>priceList</strong>The NSPriceList to save.</li></ul><strong>Returns:</strong>NSPriceList<p></p>\n<pre><code>NSQuote  agent;\nNSPriceList thing = agent.CreateDefaultPriceList();\nthing = agent.SavePriceList(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSPriceList SavePriceList(NSPriceList priceList);
+    content: NSPriceList SavePriceList(NSPriceList priceList)
     parameters:
-    - id: priceList;
+    - id: priceList
       type: CRMScript.NetServer.NSPriceList
       description: 
     return:
@@ -2000,9 +2000,9 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSProduct or creates a new NSProduct if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>product</strong>The NSProduct to save.</li></ul><strong>Returns:</strong>NSProduct<p></p>\n<pre><code>NSQuote  agent;\nNSProduct thing = agent.CreateDefaultProduct();\nthing = agent.SaveProduct(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSProduct SaveProduct(NSProduct product);
+    content: NSProduct SaveProduct(NSProduct product)
     parameters:
-    - id: product;
+    - id: product
       type: CRMScript.NetServer.NSProduct
       description: 
     return:
@@ -2044,7 +2044,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSQuoteAlternative or creates a new NSQuoteAlternative if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>quoteAlternative</strong>The NSQuoteAlternative to save.</li></ul><strong>Returns:</strong>NSQuoteAlternative<p></p>\n<pre><code>NSQuoteAgent agent;\nNSQuoteAlternative thing = agent.CreateDefaultQuoteAlternative();\nthing = agent.SaveQuoteAlternative(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSQuoteAlternative SaveQuoteAlternative(NSQuoteAlternative quoteAlternative);
+    content: NSQuoteAlternative SaveQuoteAlternative(NSQuoteAlternative quoteAlternative)
     parameters:
     return:
       type: CRMScript.NetServer.NSQuoteAlternative
