--- a/docs/api-reference/CRMScript.NetServer.NSSaintAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSSaintAgent.yml
@@ -40,7 +40,7 @@ items:
   fullName: CRMScript.NetServer.NSSaintAgent.CreateDefaultSaintConfiguration()
   type: Method
   summary: "\nSet default values into a new NSSaintConfiguration.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSSaintConfiguration<p></p>\n<pre><code>NSSaintAgent agent;\nNSSaintConfiguration thing = agent.CreateDefaultSaintConfiguration();\nthing = agent.SaveSaintConfiguration(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSSaintConfiguration<p></p>\n<pre><code>NSSaintAgent agent;\nNSSaintConfiguration thing = agent.CreateDefaultSaintConfiguration();\nthing = agent.SaveSaintConfiguration(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSSaintConfiguration CreateDefaultSaintConfiguration()
@@ -60,7 +60,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSSaintAgent.CreateDefaultStatusMonitor()
   type: Method
   summary: "\nSet default values into a new NSStatusMonitor.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSStatusMonitor<p></p>\n<pre><code>NSSaintAgent agent;\nNSStatusMonitor thing = agent.CreateDefaultStatusMonitor();\nthing = agent.SaveStatusMonitor(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSStatusMonitor<p></p>\n<pre><code>NSSaintAgent agent;\nNSStatusMonitor thing = agent.CreateDefaultStatusMonitor();\nthing = agent.SaveStatusMonitor(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSStatusMonitor CreateDefaultStatusMonitor()
@@ -80,7 +80,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   fullName: CRMScript.NetServer.NSSaintAgent.CreateDefaultStatusMonitorPeriods()
   type: Method
   summary: "\nSet default values into a new NSStatusMonitorPeriods.
-NetServer calculates default values (e.g. Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSStatusMonitorPeriods<p></p>\n<pre><code>NSSaintAgent agent;\nNSStatusMonitorPeriods thing = agent.CreateDefaultStatusMonitorPeriods();\nthing = agent.SaveStatusMonitorPeriods(thing);</code></pre>\n"
+NetServer calculates default values (for example, Country) on the entity, which is required when creating/storing a new instance<p></p>\n<strong>Returns:</strong>NSStatusMonitorPeriods<p></p>\n<pre><code>NSSaintAgent agent;\nNSStatusMonitorPeriods thing = agent.CreateDefaultStatusMonitorPeriods();\nthing = agent.SaveStatusMonitorPeriods(thing);</code></pre>\n"
   remarks: 
   syntax: 
     content: NSStatusMonitorPeriods CreateDefaultStatusMonitorPeriods()
@@ -269,7 +269,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSSaintConfiguration or creates a new NSSaintConfiguration if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>saintConfiguration</strong>The NSSaintConfiguration to save.</li></ul><strong>Returns:</strong>NSSaintConfiguration<p></p>\n<pre><code>NSSaint  agent;\nNSSaintConfiguration thing = agent.CreateDefaultSaintConfiguration();\nthing = agent.SaveSaintConfiguration(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSSaintConfiguration SaveSaintConfiguration(NSSaintConfiguration saintConfiguration);
+    content: NSSaintConfiguration SaveSaintConfiguration(NSSaintConfiguration saintConfiguration)
     parameters:
     return:
       type: CRMScript.NetServer.NSSaintConfiguration
@@ -288,7 +288,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSStatusMonitor or creates a new NSStatusMonitor if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>statusMonitor</strong>The NSStatusMonitor to save.</li></ul><strong>Returns:</strong>NSStatusMonitor<p></p>\n<pre><code>NSSaint  agent;\nNSStatusMonitor thing = agent.CreateDefaultStatusMonitor();\nthing = agent.SaveStatusMonitor(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSStatusMonitor SaveStatusMonitor(NSStatusMonitor statusMonitor);
+    content: NSStatusMonitor SaveStatusMonitor(NSStatusMonitor statusMonitor)
     parameters:
     return:
       type: CRMScript.NetServer.NSStatusMonitor
@@ -307,7 +307,7 @@ NetServer calculates default values (e.g. Country) on the entity, which is requi
   summary: "\nUpdates the existing NSStatusMonitorPeriods or creates a new NSStatusMonitorPeriods if the id parameter is 0<p></p>\n<strong>Parameters</strong>:<p></p>\n<ul><li><strong>statusMonitorPeriods</strong>The NSStatusMonitorPeriods to save.</li></ul><strong>Returns:</strong>NSStatusMonitorPeriods<p></p>\n<pre><code>NSSaint  agent;\nNSStatusMonitorPeriods thing = agent.CreateDefaultStatusMonitorPeriods();\nthing = agent.SaveStatusMonitorPeriods(thing);</code></pre>\n"
   remarks: 
   syntax: 
-    content: NSStatusMonitorPeriods SaveStatusMonitorPeriods(NSStatusMonitorPeriods statusMonitorPeriods);
+    content: NSStatusMonitorPeriods SaveStatusMonitorPeriods(NSStatusMonitorPeriods statusMonitorPeriods)
     parameters:
     return:
       type: CRMScript.NetServer.NSStatusMonitorPeriods
